chore(i18n): update translations (#1356)

--- a/i18n/da-DK.properties
+++ b/i18n/da-DK.properties
@@ -4,6 +4,24 @@ be.accessStatsPermissionsError = Beklager, du har ikke tilladelse til at se adga
 be.activityFeedItemApiError = Der opstod et problem med at indlæse aktivitetsfeedet. Opdater siden, eller prøv igen senere.
 # Label for add action
 be.add = Tilføj
+# Error message when a comment creation fails due to a conflict
+be.api.commentCreateConflictMessage = Denne kommentar eksisterer allerede.
+# Error message when a comment creation fails
+be.api.commentCreateErrorMessage = Der opstod en fejl under oprettelse af denne kommentar.
+# Error message when a comment deletion fails
+be.api.commentDeleteErrorMessage = Der opstod en fejl under sletning af denne kommentar.
+# Title shown when an error occurs performing an action on a task
+be.api.taskActionErrorTitle = Fejl
+# Error message when approving a task fails
+be.api.taskApproveErrorMessage = Der opstod en fejl under godkendelse af denne opgave. Opdater siden, og prøv igen.
+# Error message when completing a task fails
+be.api.taskCompleteErrorMessage = Der opstod en fejl under fuldførelse af denne opgave. Opdater siden, og prøv igen.
+# Error message when a task creation fails
+be.api.taskCreateErrorMessage = Der opstod en fejl under oprettelse af denne opgave. Prøv igen.
+# Error message when a task deletion fails
+be.api.taskDeleteErrorMessage = Der opstod en fejl under sletning af denne opgave. Opdater siden, og prøv igen.
+# Error message when rejecting a task fails
+be.api.taskRejectErrorMessage = Der opstod en fejl under afvisningen af denne opgave. Opdater siden, og prøv igen.
 # Alt message if app activity icon is missing or cannot load
 be.appActivityAltIcon = {appActivityName} ikon
 # App Activity created at full date time for title
@@ -12,20 +30,6 @@ be.appActivityCreatedAtFullDateTime = {time, date, full} kl. {time, time, short}
 be.appActivityDeleteErrorMessage = Der opstod en fejl under sletning af dette element.
 # Confirmation prompt text to delete app activity
 be.appActivityDeletePrompt = Slet appaktivitet?
-# Placeholder for approvers input
-be.approvalAddAssignee = Tilføj en opgavemodtager
-# Label for checkbox to add approvers to a comment
-be.approvalAddTask = Tilføj opgave
-# Tooltip text for checkbox to add approvers to a comment
-be.approvalAddTaskTooltip = Hvis en person tildeles en opgave, får vedkommende tilsendt en notifikation med en meddelelse i kommentarfeltet, så de kan godkende eller afvise opgaven.
-# Title for assignees input
-be.approvalAssignees = Opgavemodtagere
-# Title for approvers due date input
-be.approvalDueDate = Deadline
-# Placeholder for due date input
-be.approvalSelectDate = Vælg en dato
-# Mentioning call to action displayed below the comment input
-be.atMentionTip = Brug @omtale for at give brugere besked.
 # Label for back button
 be.back = Tilbage
 # Message when Box Tools cannot open a particular file type
@@ -40,28 +44,130 @@ be.choose = Vælg
 be.close = Luk
 # Message to the user to collapse the Transcript entries
 be.collapse = Skjul
+# Placeholder for approvers input
+be.contentSidebar.activityFeed.approvalCommentForm.approvalAddAssignee = Tilføj en opgavemodtager
+# Label for checkbox to add approvers to a comment
+be.contentSidebar.activityFeed.approvalCommentForm.approvalAddTask = Tilføj opgave
+# Tooltip text for checkbox to add approvers to a comment
+be.contentSidebar.activityFeed.approvalCommentForm.approvalAddTaskTooltip = Hvis en person tildeles en opgave, får vedkommende tilsendt en notifikation med en meddelelse i kommentarfeltet, så de kan godkende eller afvise opgaven.
+# Title for assignees input
+be.contentSidebar.activityFeed.approvalCommentForm.approvalAssignees = Opgavemodtagere
+# Title for approvers due date input
+be.contentSidebar.activityFeed.approvalCommentForm.approvalDueDate = Deadline
+# Placeholder for due date input
+be.contentSidebar.activityFeed.approvalCommentForm.approvalSelectDate = Vælg en dato
+# Mentioning call to action displayed below the comment input
+be.contentSidebar.activityFeed.approvalCommentForm.atMentionTip = Brug @omtale for at give brugere besked.
 # Text for cancel button
-be.commentCancel = Annuller
-# Error message when a comment creation fails due to a conflict
-be.commentCreateConflictMessage = Denne kommentar eksisterer allerede.
-# Error message when a comment creation fails
-be.commentCreateErrorMessage = Der opstod en fejl under oprettelse af denne kommentar.
-# Error message when a comment deletion fails
-be.commentDeleteErrorMessage = Der opstod en fejl under sletning af denne kommentar.
-# Confirmation prompt text to delete comment
-be.commentDeletePrompt = Slet kommentar?
+be.contentSidebar.activityFeed.approvalCommentForm.commentCancel = Annuller
 # Text for post button
-be.commentPost = Opslå
-# Comment posted full date time for title
-be.commentPostedFullDateTime = {time, date, full} kl. {time, time, short}
-# Show original button for showing original comment
-be.commentShowOriginal = Vis oprindelig
-# Translate button for translating comment
-be.commentTranslate = Oversæt
+be.contentSidebar.activityFeed.approvalCommentForm.commentPost = Opslå
 # Placeholder for comment input
-be.commentWrite = Skriv en kommentar
+be.contentSidebar.activityFeed.approvalCommentForm.commentWrite = Skriv en kommentar
+# Confirmation prompt text to delete comment
+be.contentSidebar.activityFeed.comment.commentDeletePrompt = Slet kommentar?
+# Comment posted full date time for title
+be.contentSidebar.activityFeed.comment.commentPostedFullDateTime = {time, date, full} kl. {time, time, short}
+# Show original button for showing original comment
+be.contentSidebar.activityFeed.comment.commentShowOriginal = Vis oprindelig
+# Translate button for translating comment
+be.contentSidebar.activityFeed.comment.commentTranslate = Oversæt
+# Text to show on menu item to delete task
+be.contentSidebar.activityFeed.comment.taskDeleteMenuItem = Slet opgave
+# Confirmation prompt text to delete task
+be.contentSidebar.activityFeed.comment.taskDeletePrompt = Er du sikker på, at du vil slette denne opgave permanent?
+# Text to show on menu item to edit task
+be.contentSidebar.activityFeed.comment.taskEditMenuItem = Rediger opgave
+# Title for x icon indicating someone rejected a task
+be.contentSidebar.activityFeed.task.rejectedAssignment = Afvist
+# Approve option for a task
+be.contentSidebar.activityFeed.task.taskApprove = Fuldfør
+# Due date for a task
+be.contentSidebar.activityFeed.task.taskDueDate = Deadline
+# Reject option for a task
+be.contentSidebar.activityFeed.task.taskReject = Afvis
+# Tasks for approval
+be.contentSidebar.activityFeed.task.tasksForApproval = Opgaver
+# Title shown above error message when a task creation fails
+be.contentSidebar.activityFeed.taskForm.taskCreateErrorTitle = Fejl
+# Error message when a task edit fails
+be.contentSidebar.activityFeed.taskForm.taskUpdateErrorMessage = Der opstod en fejl under redigering af denne opgave. Prøv igen.
+# label for cancel button in create task popup
+be.contentSidebar.activityFeed.taskForm.tasksAddTaskFormCancelLabel = Annuller
+# label for task create form due date input
+be.contentSidebar.activityFeed.taskForm.tasksAddTaskFormDueDateLabel = Deadline
+# label for task create form message input
+be.contentSidebar.activityFeed.taskForm.tasksAddTaskFormMessageLabel = Meddelelse
+# label for task create form assignee input
+be.contentSidebar.activityFeed.taskForm.tasksAddTaskFormSelectAssigneesLabel = Vælg modtagere
+# label for create button in create task modal in create mode
+be.contentSidebar.activityFeed.taskForm.tasksAddTaskFormSubmitLabel = Opret
+# label for edit button in create task modal in edit mode
+be.contentSidebar.activityFeed.taskForm.tasksEditTaskFormSubmitLabel = Opdatering
 # Title for checkmark icon indicating someone completed a task
-be.completedAssignment = Fuldført
+be.contentSidebar.activityFeed.taskNew.taskAssignmentCompleted = Fuldført
+# Error message when we failed to load the collaborators when user tries to edit a task
+be.contentSidebar.activityFeed.taskNew.taskCollaboratorLoadErrorMessage = Der opstod en fejl under indlæsning af samarbejdspartnere. Prøv igen.
+# Label and date for task due date
+be.contentSidebar.activityFeed.taskNew.taskDueDateLabel = Forfalder: {date}
+# Button name to hide task assignee list
+be.contentSidebar.activityFeed.taskNew.taskShowLessAssignees = Vis mindre
+# Button name to expand task assignee list, additionalAssigneeCount is the number of additional task assignees that can be shown.
+be.contentSidebar.activityFeed.taskNew.taskShowMoreAssignees = Show {additionalAssigneeCount} More
+# Button name to expand task assignee list, when there is an unknown number of assignees beyond additionalAssigneeCount.
+be.contentSidebar.activityFeed.taskNew.taskShowMoreAssigneesOverflow = {additionalAssigneeCount, plural, one {Show #+ More} other {Show #+ More}}
+# Approve option for an approval task
+be.contentSidebar.activityFeed.taskNew.tasksFeedApproveAction = Godkend
+# Label for an approved task
+be.contentSidebar.activityFeed.taskNew.tasksFeedApprovedLabel = Godkendt
+# Title for list of all task assignees
+be.contentSidebar.activityFeed.taskNew.tasksFeedAssigneeListTitle = Opgavemodtagere
+# Completion option for a general task
+be.contentSidebar.activityFeed.taskNew.tasksFeedCompleteAction = Markér som fuldført
+# Label for a completed task
+be.contentSidebar.activityFeed.taskNew.tasksFeedCompletedLabel = Fuldført
+# Comment headline for an approval task
+be.contentSidebar.activityFeed.taskNew.tasksFeedHeadlineApproval = {user} tildelte en godkendelsesopgave
+# Comment headline for an approval task assigned to the current user
+be.contentSidebar.activityFeed.taskNew.tasksFeedHeadlineApprovalCurrentUser = {user} tildelte dig en godkendelsesopgave
+# Comment headline for a general task
+be.contentSidebar.activityFeed.taskNew.tasksFeedHeadlineGeneral = {user} tildelte en opgave
+# Comment headline for a general task assigned to the current user
+be.contentSidebar.activityFeed.taskNew.tasksFeedHeadlineGeneralCurrentUser = {user} tildelte dig en opgave
+# Label for a task in progress
+be.contentSidebar.activityFeed.taskNew.tasksFeedInProgressLabel = I gang
+# Label for button to expand flyout to see all task assignees
+be.contentSidebar.activityFeed.taskNew.tasksFeedMoreAssigneesLabel = Se alle opgavemodtagere
+# Reject option for an approval task
+be.contentSidebar.activityFeed.taskNew.tasksFeedRejectAction = Afvis
+# Label for a rejected task
+be.contentSidebar.activityFeed.taskNew.tasksFeedRejectedLabel = Afvist
+# Approved task status, where dateTime is a readable time like "Today at 2pm"
+be.contentSidebar.activityFeed.taskNew.tasksFeedStatusApproved = Godkendt {dateTime}
+# Completed task status, where dateTime is a readable time like "Today at 2pm"
+be.contentSidebar.activityFeed.taskNew.tasksFeedStatusCompleted = Fuldført {dateTime}
+# Label for the task status
+be.contentSidebar.activityFeed.taskNew.tasksFeedStatusLabel = Status: {taskStatus}
+# Rejected task status, where dateTime is a readable time like "Today at 2pm"
+be.contentSidebar.activityFeed.taskNew.tasksFeedStatusRejected = Afvist {dateTime}
+# label for button that opens task popup
+be.contentSidebar.addTask = Tilføj opgave
+# label for menu item that opens approval task popup
+be.contentSidebar.addTask.approval = Godkendelsesopgave
+# description for menu item that opens approval task popup
+be.contentSidebar.addTask.approval.description = Anmod om godkendelse til at fortsætte arbejdet
+# title for approval task popup
+be.contentSidebar.addTask.approval.title = Opret en godkendelsesopgave
+# label for menu item that opens general task popup
+be.contentSidebar.addTask.general = Generel opgave
+# description for menu item that opens general task popup
+be.contentSidebar.addTask.general.description = Hold styr på det arbejde, der skal laves
+# title for general task popup
+be.contentSidebar.addTask.general.title = Opret en generel opgave
+# title for when editing an existing approval task
+be.contentSidebar.editTask.approval.title = Rediger godkendelsesopgave
+# modal title for when editing an existing general task
+be.contentSidebar.editTask.general.title = Rediger generel opgave
 # Label for copy action.
 be.copy = Kopiér
 # Label for create action.
@@ -214,6 +320,8 @@ be.pointAnnotation = Punktanmærkningstilstand
 be.preview = Eksempelvisning
 # Error message when Preview fails due to the files call.
 be.previewError = Vi beklager! Eksempelvisningen kunne ikke indlæses. Opdater siden.
+# Error message when Preview fails due to the files call which is blocked by an access policy.
+be.previewErrorBlockedByPolicy = Your access is restricted due to the classification applied to this content.
 # Message when new preview is available.
 be.previewUpdate = En ny version af denne fil er tilgængelig.
 # Previous file button title
@@ -228,8 +336,6 @@ be.priorCollaborator = En tidligere samarbejdspartner
 be.recentsBreadcrumb = Seneste
 # Message shown when there are no recent items.
 be.recentsState = Der er ingen seneste elementer endnu.
-# Title for x icon indicating someone rejected a task
-be.rejectedAssignment = Afvist
 # Label for reload button.
 be.reload = Genindlæs
 # Label for remove action.
@@ -372,114 +478,6 @@ be.skillUnknownError = Der opstod et problem under kørsel af denne færdighed e
 be.sort = Sortér
 # Label for status skill card in the preview sidebar
 be.statusSkill = Status
-# Title shown when an error occurs performing an action on a task
-be.taskActionErrorTitle = Fejl
-# Approve option for a task
-be.taskApprove = Fuldfør
-# Error message when approving a task fails
-be.taskApproveErrorMessage = Der opstod en fejl under godkendelse af denne opgave. Opdater siden, og prøv igen.
-# Error message when we failed to load the collaborators when user tries to edit a task
-be.taskCollaboratorLoadErrorMessage = Der opstod en fejl under indlæsning af samarbejdspartnere. Prøv igen.
-# Error message when completing a task fails
-be.taskCompleteErrorMessage = Der opstod en fejl under fuldførelse af denne opgave. Opdater siden, og prøv igen.
-# Error message when a task creation fails
-be.taskCreateErrorMessage = Der opstod en fejl under oprettelse af denne opgave. Prøv igen.
-# Title shown above error message when a task creation fails
-be.taskCreateErrorTitle = Fejl
-# Error message when a task deletion fails
-be.taskDeleteErrorMessage = Der opstod en fejl under sletning af denne opgave. Opdater siden, og prøv igen.
-# Text to show on menu item to delete task
-be.taskDeleteMenuItem = Slet opgave
-# Confirmation prompt text to delete task
-be.taskDeletePrompt = Er du sikker på, at du vil slette denne opgave permanent?
-# Due date for a task
-be.taskDueDate = Deadline
-# Error message when a task edit fails
-be.taskEditErrorMessage = Der opstod en fejl under redigering af denne opgave. Prøv igen.
-# Text to show on menu item to edit task
-be.taskEditMenuItem = Rediger opgave
-# Reject option for a task
-be.taskReject = Afvis
-# Error message when rejecting a task fails
-be.taskRejectErrorMessage = Der opstod en fejl under afvisningen af denne opgave. Opdater siden, og prøv igen.
-# Button name to hide task assignee list
-be.taskShowLessAssignees = Vis mindre
-# Button name to expand task assignee list, additionalAssigneeCount is the number of additional task assignees that can be shown.
-be.taskShowMoreAssignees = Vis {additionalAssigneeCount} flere
-# Button name to expand task assignee list, when there is an unknown number of assignees beyond additionalAssigneeCount.
-be.taskShowMoreAssigneesOverflow = {additionalAssigneeCount, plural, one {Show #+ More} other {Show #+ More}}
-# label for button that opens task popup
-be.tasks.addTask = Tilføj opgave
-# label for menu item that opens approval task popup
-be.tasks.addTask.approval = Godkendelsesopgave
-# description for menu item that opens approval task popup
-be.tasks.addTask.approval.description = Anmod om godkendelse til at fortsætte arbejdet
-# label for menu item that opens general task popup
-be.tasks.addTask.general = Generel opgave
-# description for menu item that opens general task popup
-be.tasks.addTask.general.description = Hold styr på det arbejde, der skal laves
-# label for cancel button in create task popup
-be.tasks.addTaskForm.cancel = Annuller
-# label for task create form due date input
-be.tasks.addTaskForm.dueDateLabel = Deadline
-# label for task create form message input
-be.tasks.addTaskForm.messageLabel = Meddelelse
-# label for task create form assignee input
-be.tasks.addTaskForm.selectAssigneesLabel = Vælg modtagere
-# label for create button in create task modal in create mode
-be.tasks.addTaskForm.submit = Opret
-# title for approval task popup
-be.tasks.createTask.approval.title = Opret en godkendelsesopgave
-# title for general task popup
-be.tasks.createTask.general.title = Opret en generel opgave
-# title for when editing an existing approval task
-be.tasks.editTask.approval.title = Rediger godkendelsesopgave
-# modal title for when editing an existing general task
-be.tasks.editTask.general.title = Rediger generel opgave
-# label for edit button in create task modal in edit mode
-be.tasks.editTaskForm.submit = Opdatering
-# Approve option for an approval task
-be.tasks.feed.approveAction = Godkend
-# Label for an approved task
-be.tasks.feed.approvedLabel = Godkendt
-# Title for list of all task assignees
-be.tasks.feed.assigneeList.title = Opgavemodtagere
-# Completion option for a general task
-be.tasks.feed.completeAction = Markér som fuldført
-# Label for a completed task
-be.tasks.feed.completedLabel = Fuldført
-# Comment headline for an approval task
-be.tasks.feed.headline.approval = {user} tildelte en godkendelsesopgave
-# Comment headline for an approval task assigned to the current user
-be.tasks.feed.headline.approval.currentUser = {user} tildelte dig en godkendelsesopgave
-# Comment headline for a general task
-be.tasks.feed.headline.general = {user} tildelte en opgave
-# Comment headline for a general task assigned to the current user
-be.tasks.feed.headline.general.currentUser = {user} tildelte dig en opgave
-# Label for a task in progress
-be.tasks.feed.inProgressLabel = I gang
-# Label for button to expand flyout to see all task assignees
-be.tasks.feed.moreAssigneesLabel = Se alle opgavemodtagere
-# Reject option for an approval task
-be.tasks.feed.rejectAction = Afvis
-# Label for a rejected task
-be.tasks.feed.rejectedLabel = Afvist
-# Label for the task status
-be.tasks.feed.statusLabel = Status: {taskStatus}
-# Approved task status, where dateTime is a readable time like "Today at 2pm"
-be.tasks.status.approved = Godkendt {dateTime}
-# Completed task status, where dateTime is a readable time like "Today at 2pm"
-be.tasks.status.completed = Fuldført {dateTime}
-# Task status when in progress
-be.tasks.status.inProgress = Afventer
-# Task status when not started
-be.tasks.status.notStarted = Afventer
-# Rejected task status, where dateTime is a readable time like "Today at 2pm"
-be.tasks.status.rejected = Afvist {dateTime}
-# Label and date for task due date
-be.tasks.taskDueDate = Forfalder: {date}
-# Tasks for approval
-be.tasksForApproval = Opgaver
 # Shown instead of todays date.
 be.today = i dag
 # Label for keywords/topics skill section in the preview sidebar
