--- a/i18n/es-419.properties
+++ b/i18n/es-419.properties
@@ -4,6 +4,24 @@ be.accessStatsPermissionsError = Lo sentimos, no dispone de permiso para ver las
 be.activityFeedItemApiError = Se ha producido un problema al cargar el feed de actividad. Actualice la página o vuelva a intentarlo más tarde.
 # Label for add action
 be.add = Agregar
+# Error message when a comment creation fails due to a conflict
+be.api.commentCreateConflictMessage = Este comentario ya existe.
+# Error message when a comment creation fails
+be.api.commentCreateErrorMessage = Se ha producido un error al crear este comentario.
+# Error message when a comment deletion fails
+be.api.commentDeleteErrorMessage = Se ha producido un error al eliminar este comentario.
+# Title shown when an error occurs performing an action on a task
+be.api.taskActionErrorTitle = Error
+# Error message when approving a task fails
+be.api.taskApproveErrorMessage = Se ha producido un error al aprobar esta tarea. Actualice la página e inténtelo de nuevo.
+# Error message when completing a task fails
+be.api.taskCompleteErrorMessage = Se ha producido un error al completar esta tarea. Actualice la página e inténtelo de nuevo.
+# Error message when a task creation fails
+be.api.taskCreateErrorMessage = Se ha producido un error al crear esta tarea. Inténtelo de nuevo.
+# Error message when a task deletion fails
+be.api.taskDeleteErrorMessage = Se ha producido un error al eliminar esta tarea. Actualice la página e inténtelo de nuevo.
+# Error message when rejecting a task fails
+be.api.taskRejectErrorMessage = Se ha producido un error al rechazar esta tarea. Actualice la página e inténtelo de nuevo.
 # Alt message if app activity icon is missing or cannot load
 be.appActivityAltIcon = Icono {appActivityName}
 # App Activity created at full date time for title
@@ -12,20 +30,6 @@ be.appActivityCreatedAtFullDateTime = {time, date, full} a las {time, time, shor
 be.appActivityDeleteErrorMessage = Se ha producido un error al eliminar este elemento.
 # Confirmation prompt text to delete app activity
 be.appActivityDeletePrompt = ¿Eliminar actividad de la aplicación?
-# Placeholder for approvers input
-be.approvalAddAssignee = Agregar un destinatario
-# Label for checkbox to add approvers to a comment
-be.approvalAddTask = Agregar tarea
-# Tooltip text for checkbox to add approvers to a comment
-be.approvalAddTaskTooltip = Al asignar una tarea a alguien, se le enviará una notificación con el mensaje en el cuadro de comentarios y se le permitirá aprobarla o rechazarla.
-# Title for assignees input
-be.approvalAssignees = Destinatarios
-# Title for approvers due date input
-be.approvalDueDate = Fecha de vencimiento
-# Placeholder for due date input
-be.approvalSelectDate = Seleccione una fecha.
-# Mentioning call to action displayed below the comment input
-be.atMentionTip = @mencione a usuarios para que reciban una notificación.
 # Label for back button
 be.back = Atrás
 # Message when Box Tools cannot open a particular file type
@@ -40,28 +44,130 @@ be.choose = Seleccionar
 be.close = Cerrar
 # Message to the user to collapse the Transcript entries
 be.collapse = Contraer
+# Placeholder for approvers input
+be.contentSidebar.activityFeed.approvalCommentForm.approvalAddAssignee = Agregar un destinatario
+# Label for checkbox to add approvers to a comment
+be.contentSidebar.activityFeed.approvalCommentForm.approvalAddTask = Agregar tarea
+# Tooltip text for checkbox to add approvers to a comment
+be.contentSidebar.activityFeed.approvalCommentForm.approvalAddTaskTooltip = Al asignar una tarea a alguien, se le enviará una notificación con el mensaje en el cuadro de comentarios y se le permitirá aprobarla o rechazarla.
+# Title for assignees input
+be.contentSidebar.activityFeed.approvalCommentForm.approvalAssignees = Destinatarios
+# Title for approvers due date input
+be.contentSidebar.activityFeed.approvalCommentForm.approvalDueDate = Fecha de vencimiento
+# Placeholder for due date input
+be.contentSidebar.activityFeed.approvalCommentForm.approvalSelectDate = Seleccione una fecha.
+# Mentioning call to action displayed below the comment input
+be.contentSidebar.activityFeed.approvalCommentForm.atMentionTip = @mencione a usuarios para que reciban una notificación.
 # Text for cancel button
-be.commentCancel = Cancelar
-# Error message when a comment creation fails due to a conflict
-be.commentCreateConflictMessage = Este comentario ya existe.
-# Error message when a comment creation fails
-be.commentCreateErrorMessage = Se ha producido un error al crear este comentario.
-# Error message when a comment deletion fails
-be.commentDeleteErrorMessage = Se ha producido un error al eliminar este comentario.
-# Confirmation prompt text to delete comment
-be.commentDeletePrompt = ¿Eliminar comentario?
+be.contentSidebar.activityFeed.approvalCommentForm.commentCancel = Cancelar
 # Text for post button
-be.commentPost = Publicar
-# Comment posted full date time for title
-be.commentPostedFullDateTime = {time, date, full} a las {time, time, short}
-# Show original button for showing original comment
-be.commentShowOriginal = Mostrar original
-# Translate button for translating comment
-be.commentTranslate = Traducir
+be.contentSidebar.activityFeed.approvalCommentForm.commentPost = Publicar
 # Placeholder for comment input
-be.commentWrite = Escribir un comentario
+be.contentSidebar.activityFeed.approvalCommentForm.commentWrite = Escribir un comentario
+# Confirmation prompt text to delete comment
+be.contentSidebar.activityFeed.comment.commentDeletePrompt = ¿Eliminar comentario?
+# Comment posted full date time for title
+be.contentSidebar.activityFeed.comment.commentPostedFullDateTime = {time, date, full} a las {time, time, short}
+# Show original button for showing original comment
+be.contentSidebar.activityFeed.comment.commentShowOriginal = Mostrar original
+# Translate button for translating comment
+be.contentSidebar.activityFeed.comment.commentTranslate = Traducir
+# Text to show on menu item to delete task
+be.contentSidebar.activityFeed.comment.taskDeleteMenuItem = Eliminar tarea
+# Confirmation prompt text to delete task
+be.contentSidebar.activityFeed.comment.taskDeletePrompt = ¿Seguro que desea eliminar esta tarea de forma permanente?
+# Text to show on menu item to edit task
+be.contentSidebar.activityFeed.comment.taskEditMenuItem = Modificar tarea
+# Title for x icon indicating someone rejected a task
+be.contentSidebar.activityFeed.task.rejectedAssignment = Rechazada
+# Approve option for a task
+be.contentSidebar.activityFeed.task.taskApprove = Completar
+# Due date for a task
+be.contentSidebar.activityFeed.task.taskDueDate = Fecha de vencimiento
+# Reject option for a task
+be.contentSidebar.activityFeed.task.taskReject = Rechazar
+# Tasks for approval
+be.contentSidebar.activityFeed.task.tasksForApproval = Tareas
+# Title shown above error message when a task creation fails
+be.contentSidebar.activityFeed.taskForm.taskCreateErrorTitle = Error
+# Error message when a task edit fails
+be.contentSidebar.activityFeed.taskForm.taskUpdateErrorMessage = Se ha producido un error al modificar esta tarea. Inténtelo de nuevo.
+# label for cancel button in create task popup
+be.contentSidebar.activityFeed.taskForm.tasksAddTaskFormCancelLabel = Cancelar
+# label for task create form due date input
+be.contentSidebar.activityFeed.taskForm.tasksAddTaskFormDueDateLabel = Fecha de vencimiento
+# label for task create form message input
+be.contentSidebar.activityFeed.taskForm.tasksAddTaskFormMessageLabel = Mensaje
+# label for task create form assignee input
+be.contentSidebar.activityFeed.taskForm.tasksAddTaskFormSelectAssigneesLabel = Seleccionar destinatarios
+# label for create button in create task modal in create mode
+be.contentSidebar.activityFeed.taskForm.tasksAddTaskFormSubmitLabel = Crear
+# label for edit button in create task modal in edit mode
+be.contentSidebar.activityFeed.taskForm.tasksEditTaskFormSubmitLabel = Actualizar
 # Title for checkmark icon indicating someone completed a task
-be.completedAssignment = Completada
+be.contentSidebar.activityFeed.taskNew.taskAssignmentCompleted = Completadas
+# Error message when we failed to load the collaborators when user tries to edit a task
+be.contentSidebar.activityFeed.taskNew.taskCollaboratorLoadErrorMessage = Se ha producido un error al cargar los colaboradores para esta tarea. Inténtelo de nuevo.
+# Label and date for task due date
+be.contentSidebar.activityFeed.taskNew.taskDueDateLabel = Vencimiento: {date}
+# Button name to hide task assignee list
+be.contentSidebar.activityFeed.taskNew.taskShowLessAssignees = Mostrar menos
+# Button name to expand task assignee list, additionalAssigneeCount is the number of additional task assignees that can be shown.
+be.contentSidebar.activityFeed.taskNew.taskShowMoreAssignees = Show {additionalAssigneeCount} More
+# Button name to expand task assignee list, when there is an unknown number of assignees beyond additionalAssigneeCount.
+be.contentSidebar.activityFeed.taskNew.taskShowMoreAssigneesOverflow = {additionalAssigneeCount, plural, one {Show #+ More} other {Show #+ More}}
+# Approve option for an approval task
+be.contentSidebar.activityFeed.taskNew.tasksFeedApproveAction = Aprobar
+# Label for an approved task
+be.contentSidebar.activityFeed.taskNew.tasksFeedApprovedLabel = Aprobada
+# Title for list of all task assignees
+be.contentSidebar.activityFeed.taskNew.tasksFeedAssigneeListTitle = Destinatarios
+# Completion option for a general task
+be.contentSidebar.activityFeed.taskNew.tasksFeedCompleteAction = Marcar como completada
+# Label for a completed task
+be.contentSidebar.activityFeed.taskNew.tasksFeedCompletedLabel = Completadas
+# Comment headline for an approval task
+be.contentSidebar.activityFeed.taskNew.tasksFeedHeadlineApproval = {user} ha asignado una tarea de aprobación
+# Comment headline for an approval task assigned to the current user
+be.contentSidebar.activityFeed.taskNew.tasksFeedHeadlineApprovalCurrentUser = {user} le ha asignado una tarea de aprobación
+# Comment headline for a general task
+be.contentSidebar.activityFeed.taskNew.tasksFeedHeadlineGeneral = {user} ha asignado una tarea
+# Comment headline for a general task assigned to the current user
+be.contentSidebar.activityFeed.taskNew.tasksFeedHeadlineGeneralCurrentUser = {user} le ha asignado una tarea
+# Label for a task in progress
+be.contentSidebar.activityFeed.taskNew.tasksFeedInProgressLabel = En curso
+# Label for button to expand flyout to see all task assignees
+be.contentSidebar.activityFeed.taskNew.tasksFeedMoreAssigneesLabel = Ver todos los destinatarios
+# Reject option for an approval task
+be.contentSidebar.activityFeed.taskNew.tasksFeedRejectAction = Rechazar
+# Label for a rejected task
+be.contentSidebar.activityFeed.taskNew.tasksFeedRejectedLabel = Rechazada
+# Approved task status, where dateTime is a readable time like "Today at 2pm"
+be.contentSidebar.activityFeed.taskNew.tasksFeedStatusApproved = Aprobada {dateTime}
+# Completed task status, where dateTime is a readable time like "Today at 2pm"
+be.contentSidebar.activityFeed.taskNew.tasksFeedStatusCompleted = Completada ({dateTime})
+# Label for the task status
+be.contentSidebar.activityFeed.taskNew.tasksFeedStatusLabel = Estado: {taskStatus}
+# Rejected task status, where dateTime is a readable time like "Today at 2pm"
+be.contentSidebar.activityFeed.taskNew.tasksFeedStatusRejected = Rechazada ({dateTime})
+# label for button that opens task popup
+be.contentSidebar.addTask = Agregar tarea
+# label for menu item that opens approval task popup
+be.contentSidebar.addTask.approval = Tarea de aprobación
+# description for menu item that opens approval task popup
+be.contentSidebar.addTask.approval.description = Solicitar una aprobación para desarrollar el trabajo
+# title for approval task popup
+be.contentSidebar.addTask.approval.title = Crear una tarea de aprobación
+# label for menu item that opens general task popup
+be.contentSidebar.addTask.general = Tarea general
+# description for menu item that opens general task popup
+be.contentSidebar.addTask.general.description = Realizar un seguimiento del trabajo que hay que llevar a cabo.
+# title for general task popup
+be.contentSidebar.addTask.general.title = Crear una tarea general
+# title for when editing an existing approval task
+be.contentSidebar.editTask.approval.title = Modificar tarea de aprobación
+# modal title for when editing an existing general task
+be.contentSidebar.editTask.general.title = Modificar tarea general
 # Label for copy action.
 be.copy = Copiar
 # Label for create action.
@@ -214,6 +320,8 @@ be.pointAnnotation = Modo de anotación de puntos
 be.preview = Vista previa
 # Error message when Preview fails due to the files call.
 be.previewError = Lo sentimos, la previsualización no se ha cargado. Actualice la página.
+# Error message when Preview fails due to the files call which is blocked by an access policy.
+be.previewErrorBlockedByPolicy = Your access is restricted due to the classification applied to this content.
 # Message when new preview is available.
 be.previewUpdate = Hay disponible una nueva versión de este archivo.
 # Previous file button title
@@ -228,8 +336,6 @@ be.priorCollaborator = Un colaborador anterior
 be.recentsBreadcrumb = Recientes
 # Message shown when there are no recent items.
 be.recentsState = Aún no hay elementos recientes.
-# Title for x icon indicating someone rejected a task
-be.rejectedAssignment = Rechazada
 # Label for reload button.
 be.reload = Volver a cargar
 # Label for remove action.
@@ -372,114 +478,6 @@ be.skillUnknownError = Se ha producido un error al ejecutar esta capacidad o al 
 be.sort = Ordenar
 # Label for status skill card in the preview sidebar
 be.statusSkill = Estado
-# Title shown when an error occurs performing an action on a task
-be.taskActionErrorTitle = Error
-# Approve option for a task
-be.taskApprove = Completar
-# Error message when approving a task fails
-be.taskApproveErrorMessage = Se ha producido un error al aprobar esta tarea. Actualice la página e inténtelo de nuevo.
-# Error message when we failed to load the collaborators when user tries to edit a task
-be.taskCollaboratorLoadErrorMessage = Se ha producido un error al cargar los colaboradores para esta tarea. Inténtelo de nuevo.
-# Error message when completing a task fails
-be.taskCompleteErrorMessage = Se ha producido un error al completar esta tarea. Actualice la página e inténtelo de nuevo.
-# Error message when a task creation fails
-be.taskCreateErrorMessage = Se ha producido un error al crear esta tarea. Inténtelo de nuevo.
-# Title shown above error message when a task creation fails
-be.taskCreateErrorTitle = Error
-# Error message when a task deletion fails
-be.taskDeleteErrorMessage = Se ha producido un error al eliminar esta tarea. Actualice la página e inténtelo de nuevo.
-# Text to show on menu item to delete task
-be.taskDeleteMenuItem = Eliminar tarea
-# Confirmation prompt text to delete task
-be.taskDeletePrompt = ¿Seguro que desea eliminar esta tarea de forma permanente?
-# Due date for a task
-be.taskDueDate = Fecha de vencimiento
-# Error message when a task edit fails
-be.taskEditErrorMessage = Se ha producido un error al modificar esta tarea. Inténtelo de nuevo.
-# Text to show on menu item to edit task
-be.taskEditMenuItem = Modificar tarea
-# Reject option for a task
-be.taskReject = Rechazar
-# Error message when rejecting a task fails
-be.taskRejectErrorMessage = Se ha producido un error al rechazar esta tarea. Actualice la página e inténtelo de nuevo.
-# Button name to hide task assignee list
-be.taskShowLessAssignees = Mostrar menos
-# Button name to expand task assignee list, additionalAssigneeCount is the number of additional task assignees that can be shown.
-be.taskShowMoreAssignees = Mostrar {additionalAssigneeCount} más
-# Button name to expand task assignee list, when there is an unknown number of assignees beyond additionalAssigneeCount.
-be.taskShowMoreAssigneesOverflow = {additionalAssigneeCount, plural, one {Show #+ More} other {Show #+ More}}
-# label for button that opens task popup
-be.tasks.addTask = Agregar tarea
-# label for menu item that opens approval task popup
-be.tasks.addTask.approval = Tarea de aprobación
-# description for menu item that opens approval task popup
-be.tasks.addTask.approval.description = Solicitar una aprobación para desarrollar el trabajo
-# label for menu item that opens general task popup
-be.tasks.addTask.general = Tarea general
-# description for menu item that opens general task popup
-be.tasks.addTask.general.description = Realizar un seguimiento del trabajo que hay que llevar a cabo.
-# label for cancel button in create task popup
-be.tasks.addTaskForm.cancel = Cancelar
-# label for task create form due date input
-be.tasks.addTaskForm.dueDateLabel = Fecha de vencimiento
-# label for task create form message input
-be.tasks.addTaskForm.messageLabel = Mensaje
-# label for task create form assignee input
-be.tasks.addTaskForm.selectAssigneesLabel = Seleccionar destinatarios
-# label for create button in create task modal in create mode
-be.tasks.addTaskForm.submit = Crear
-# title for approval task popup
-be.tasks.createTask.approval.title = Crear una tarea de aprobación
-# title for general task popup
-be.tasks.createTask.general.title = Crear una tarea general
-# title for when editing an existing approval task
-be.tasks.editTask.approval.title = Modificar tarea de aprobación
-# modal title for when editing an existing general task
-be.tasks.editTask.general.title = Modificar tarea general
-# label for edit button in create task modal in edit mode
-be.tasks.editTaskForm.submit = Actualizar
-# Approve option for an approval task
-be.tasks.feed.approveAction = Aprobar
-# Label for an approved task
-be.tasks.feed.approvedLabel = Aprobada
-# Title for list of all task assignees
-be.tasks.feed.assigneeList.title = Destinatarios
-# Completion option for a general task
-be.tasks.feed.completeAction = Marcar como completada
-# Label for a completed task
-be.tasks.feed.completedLabel = Completada
-# Comment headline for an approval task
-be.tasks.feed.headline.approval = {user} ha asignado una tarea de aprobación
-# Comment headline for an approval task assigned to the current user
-be.tasks.feed.headline.approval.currentUser = {user} le ha asignado una tarea de aprobación
-# Comment headline for a general task
-be.tasks.feed.headline.general = {user} ha asignado una tarea
-# Comment headline for a general task assigned to the current user
-be.tasks.feed.headline.general.currentUser = {user} le ha asignado una tarea
-# Label for a task in progress
-be.tasks.feed.inProgressLabel = En curso
-# Label for button to expand flyout to see all task assignees
-be.tasks.feed.moreAssigneesLabel = Ver todos los destinatarios
-# Reject option for an approval task
-be.tasks.feed.rejectAction = Rechazar
-# Label for a rejected task
-be.tasks.feed.rejectedLabel = Rechazada
-# Label for the task status
-be.tasks.feed.statusLabel = Estado: {taskStatus}
-# Approved task status, where dateTime is a readable time like "Today at 2pm"
-be.tasks.status.approved = Aprobada {dateTime}
-# Completed task status, where dateTime is a readable time like "Today at 2pm"
-be.tasks.status.completed = Completada ({dateTime})
-# Task status when in progress
-be.tasks.status.inProgress = En espera
-# Task status when not started
-be.tasks.status.notStarted = En espera
-# Rejected task status, where dateTime is a readable time like "Today at 2pm"
-be.tasks.status.rejected = Rechazada ({dateTime})
-# Label and date for task due date
-be.tasks.taskDueDate = Vencimiento: {date}
-# Tasks for approval
-be.tasksForApproval = Tareas
 # Shown instead of todays date.
 be.today = hoy
 # Label for keywords/topics skill section in the preview sidebar
