--- a/i18n/fi-FI.properties
+++ b/i18n/fi-FI.properties
@@ -4,6 +4,24 @@ be.accessStatsPermissionsError = Sinulla ei ole oikeuksia tarkastella tämän ti
 be.activityFeedItemApiError = Tapahtumasyötteen lataamisessa tapahtui virhe. Päivitä sivu tai yritä myöhemmin uudelleen.
 # Label for add action
 be.add = Lisää
+# Error message when a comment creation fails due to a conflict
+be.api.commentCreateConflictMessage = Tämä kommentti on jo lisätty.
+# Error message when a comment creation fails
+be.api.commentCreateErrorMessage = Virhe luotaessa kommenttia.
+# Error message when a comment deletion fails
+be.api.commentDeleteErrorMessage = Virhe poistettaessa kommenttia.
+# Title shown when an error occurs performing an action on a task
+be.api.taskActionErrorTitle = Virhe
+# Error message when approving a task fails
+be.api.taskApproveErrorMessage = Tehtävän hyväksymisen aikana tapahtui virhe. Päivitä sivu ja yritä uudelleen.
+# Error message when completing a task fails
+be.api.taskCompleteErrorMessage = Tehtävän viimeistelyn aikana tapahtui virhe. Päivitä sivu ja yritä uudelleen.
+# Error message when a task creation fails
+be.api.taskCreateErrorMessage = Tehtävää luotaessa tapahtui virhe. Yritä uudelleen.
+# Error message when a task deletion fails
+be.api.taskDeleteErrorMessage = Tehtävän poistamisen aikana tapahtui virhe. Päivitä sivu ja yritä uudelleen.
+# Error message when rejecting a task fails
+be.api.taskRejectErrorMessage = Tehtävän hylkäämisen aikana tapahtui virhe. Päivitä sivu ja yritä uudelleen.
 # Alt message if app activity icon is missing or cannot load
 be.appActivityAltIcon = {appActivityName}-kuvake
 # App Activity created at full date time for title
@@ -12,20 +30,6 @@ be.appActivityCreatedAtFullDateTime = {time, date, full} kello {time, time, shor
 be.appActivityDeleteErrorMessage = Virhe poistettaessa kohdetta.
 # Confirmation prompt text to delete app activity
 be.appActivityDeletePrompt = Poistetaanko sovelluksen toiminta?
-# Placeholder for approvers input
-be.approvalAddAssignee = Lisää vastuuhenkilö
-# Label for checkbox to add approvers to a comment
-be.approvalAddTask = Lisää tehtävä
-# Tooltip text for checkbox to add approvers to a comment
-be.approvalAddTaskTooltip = Kun määrität tehtävän jollekulle, hänelle lähetetään ilmoitus, jonka kommenttikentässä on viesti, ja hän voi joko hyväksyä tai hylätä sen.
-# Title for assignees input
-be.approvalAssignees = Vastuuhenkilöt
-# Title for approvers due date input
-be.approvalDueDate = Määräpäivä
-# Placeholder for due date input
-be.approvalSelectDate = Valitse päivämäärä
-# Mentioning call to action displayed below the comment input
-be.atMentionTip = @mainitse käyttäjät, jotta he saavat ilmoituksen.
 # Label for back button
 be.back = Takaisin
 # Message when Box Tools cannot open a particular file type
@@ -40,28 +44,130 @@ be.choose = Valitse
 be.close = Sulje
 # Message to the user to collapse the Transcript entries
 be.collapse = Kutista
+# Placeholder for approvers input
+be.contentSidebar.activityFeed.approvalCommentForm.approvalAddAssignee = Lisää vastuuhenkilö
+# Label for checkbox to add approvers to a comment
+be.contentSidebar.activityFeed.approvalCommentForm.approvalAddTask = Lisää tehtävä
+# Tooltip text for checkbox to add approvers to a comment
+be.contentSidebar.activityFeed.approvalCommentForm.approvalAddTaskTooltip = Kun määrität tehtävän jollekulle, hänelle lähetetään ilmoitus, jonka kommenttikentässä on viesti, ja hän voi joko hyväksyä tai hylätä sen.
+# Title for assignees input
+be.contentSidebar.activityFeed.approvalCommentForm.approvalAssignees = Vastuuhenkilöt
+# Title for approvers due date input
+be.contentSidebar.activityFeed.approvalCommentForm.approvalDueDate = Määräpäivä
+# Placeholder for due date input
+be.contentSidebar.activityFeed.approvalCommentForm.approvalSelectDate = Valitse päivämäärä
+# Mentioning call to action displayed below the comment input
+be.contentSidebar.activityFeed.approvalCommentForm.atMentionTip = @mainitse käyttäjät, jotta he saavat ilmoituksen.
 # Text for cancel button
-be.commentCancel = Peruuta
-# Error message when a comment creation fails due to a conflict
-be.commentCreateConflictMessage = Tämä kommentti on jo lisätty.
-# Error message when a comment creation fails
-be.commentCreateErrorMessage = Virhe luotaessa kommenttia.
-# Error message when a comment deletion fails
-be.commentDeleteErrorMessage = Virhe poistettaessa kommenttia.
-# Confirmation prompt text to delete comment
-be.commentDeletePrompt = Poistetaanko kommentti?
+be.contentSidebar.activityFeed.approvalCommentForm.commentCancel = Peruuta
 # Text for post button
-be.commentPost = Lähetä
-# Comment posted full date time for title
-be.commentPostedFullDateTime = {time, date, full} kello {time, time, short}
-# Show original button for showing original comment
-be.commentShowOriginal = Näytä alkuperäinen
-# Translate button for translating comment
-be.commentTranslate = Käännä
+be.contentSidebar.activityFeed.approvalCommentForm.commentPost = Lähetä
 # Placeholder for comment input
-be.commentWrite = Kirjoita kommentti
+be.contentSidebar.activityFeed.approvalCommentForm.commentWrite = Kirjoita kommentti
+# Confirmation prompt text to delete comment
+be.contentSidebar.activityFeed.comment.commentDeletePrompt = Poistetaanko kommentti?
+# Comment posted full date time for title
+be.contentSidebar.activityFeed.comment.commentPostedFullDateTime = {time, date, full} kello {time, time, short}
+# Show original button for showing original comment
+be.contentSidebar.activityFeed.comment.commentShowOriginal = Näytä alkuperäinen
+# Translate button for translating comment
+be.contentSidebar.activityFeed.comment.commentTranslate = Käännä
+# Text to show on menu item to delete task
+be.contentSidebar.activityFeed.comment.taskDeleteMenuItem = Poista tehtävä
+# Confirmation prompt text to delete task
+be.contentSidebar.activityFeed.comment.taskDeletePrompt = Haluatko varmasti poistaa tämän tehtävän pysyvästi?
+# Text to show on menu item to edit task
+be.contentSidebar.activityFeed.comment.taskEditMenuItem = Muokkaa tehtävää
+# Title for x icon indicating someone rejected a task
+be.contentSidebar.activityFeed.task.rejectedAssignment = Hylätty
+# Approve option for a task
+be.contentSidebar.activityFeed.task.taskApprove = Valmis
+# Due date for a task
+be.contentSidebar.activityFeed.task.taskDueDate = Määräaika
+# Reject option for a task
+be.contentSidebar.activityFeed.task.taskReject = Hylkää
+# Tasks for approval
+be.contentSidebar.activityFeed.task.tasksForApproval = Tehtävät
+# Title shown above error message when a task creation fails
+be.contentSidebar.activityFeed.taskForm.taskCreateErrorTitle = Virhe
+# Error message when a task edit fails
+be.contentSidebar.activityFeed.taskForm.taskUpdateErrorMessage = Tehtävää muokattaessa tapahtui virhe. Yritä uudelleen.
+# label for cancel button in create task popup
+be.contentSidebar.activityFeed.taskForm.tasksAddTaskFormCancelLabel = Peruuta
+# label for task create form due date input
+be.contentSidebar.activityFeed.taskForm.tasksAddTaskFormDueDateLabel = Määräpäivä
+# label for task create form message input
+be.contentSidebar.activityFeed.taskForm.tasksAddTaskFormMessageLabel = Viesti
+# label for task create form assignee input
+be.contentSidebar.activityFeed.taskForm.tasksAddTaskFormSelectAssigneesLabel = Valitse vastuuhenkilöt
+# label for create button in create task modal in create mode
+be.contentSidebar.activityFeed.taskForm.tasksAddTaskFormSubmitLabel = Luo
+# label for edit button in create task modal in edit mode
+be.contentSidebar.activityFeed.taskForm.tasksEditTaskFormSubmitLabel = Päivitä
 # Title for checkmark icon indicating someone completed a task
-be.completedAssignment = Valmis
+be.contentSidebar.activityFeed.taskNew.taskAssignmentCompleted = Valmis
+# Error message when we failed to load the collaborators when user tries to edit a task
+be.contentSidebar.activityFeed.taskNew.taskCollaboratorLoadErrorMessage = Tehtävän yhteistyökumppanien lataamisessa tapahtui virhe. Yritä uudelleen.
+# Label and date for task due date
+be.contentSidebar.activityFeed.taskNew.taskDueDateLabel = Määräpäivä: {date}
+# Button name to hide task assignee list
+be.contentSidebar.activityFeed.taskNew.taskShowLessAssignees = Näytä vähemmän
+# Button name to expand task assignee list, additionalAssigneeCount is the number of additional task assignees that can be shown.
+be.contentSidebar.activityFeed.taskNew.taskShowMoreAssignees = Show {additionalAssigneeCount} More
+# Button name to expand task assignee list, when there is an unknown number of assignees beyond additionalAssigneeCount.
+be.contentSidebar.activityFeed.taskNew.taskShowMoreAssigneesOverflow = {additionalAssigneeCount, plural, one {Show #+ More} other {Show #+ More}}
+# Approve option for an approval task
+be.contentSidebar.activityFeed.taskNew.tasksFeedApproveAction = Hyväksy
+# Label for an approved task
+be.contentSidebar.activityFeed.taskNew.tasksFeedApprovedLabel = Hyväksytty
+# Title for list of all task assignees
+be.contentSidebar.activityFeed.taskNew.tasksFeedAssigneeListTitle = Vastuuhenkilöt
+# Completion option for a general task
+be.contentSidebar.activityFeed.taskNew.tasksFeedCompleteAction = Merkitse valmiiksi
+# Label for a completed task
+be.contentSidebar.activityFeed.taskNew.tasksFeedCompletedLabel = Valmis
+# Comment headline for an approval task
+be.contentSidebar.activityFeed.taskNew.tasksFeedHeadlineApproval = {user} määritti hyväksyntätehtävän
+# Comment headline for an approval task assigned to the current user
+be.contentSidebar.activityFeed.taskNew.tasksFeedHeadlineApprovalCurrentUser = {user} määritti sinulle hyväksyntätehtävän
+# Comment headline for a general task
+be.contentSidebar.activityFeed.taskNew.tasksFeedHeadlineGeneral = {user} määritti tehtävän
+# Comment headline for a general task assigned to the current user
+be.contentSidebar.activityFeed.taskNew.tasksFeedHeadlineGeneralCurrentUser = {user} määritti sinulle tehtävän
+# Label for a task in progress
+be.contentSidebar.activityFeed.taskNew.tasksFeedInProgressLabel = Käynnissä
+# Label for button to expand flyout to see all task assignees
+be.contentSidebar.activityFeed.taskNew.tasksFeedMoreAssigneesLabel = Näytä kaikki vastuuhenkilöt
+# Reject option for an approval task
+be.contentSidebar.activityFeed.taskNew.tasksFeedRejectAction = Hylkää
+# Label for a rejected task
+be.contentSidebar.activityFeed.taskNew.tasksFeedRejectedLabel = Hylätty
+# Approved task status, where dateTime is a readable time like "Today at 2pm"
+be.contentSidebar.activityFeed.taskNew.tasksFeedStatusApproved = Hyväksytty {dateTime}
+# Completed task status, where dateTime is a readable time like "Today at 2pm"
+be.contentSidebar.activityFeed.taskNew.tasksFeedStatusCompleted = Valmistunut {dateTime}
+# Label for the task status
+be.contentSidebar.activityFeed.taskNew.tasksFeedStatusLabel = Tila: {taskStatus}
+# Rejected task status, where dateTime is a readable time like "Today at 2pm"
+be.contentSidebar.activityFeed.taskNew.tasksFeedStatusRejected = Hylätty {dateTime}
+# label for button that opens task popup
+be.contentSidebar.addTask = Lisää tehtävä
+# label for menu item that opens approval task popup
+be.contentSidebar.addTask.approval = Hyväksyntätehtävä
+# description for menu item that opens approval task popup
+be.contentSidebar.addTask.approval.description = Pyydä lupa siirtää työ eteenpäin
+# title for approval task popup
+be.contentSidebar.addTask.approval.title = Luo hyväksyntätehtävä
+# label for menu item that opens general task popup
+be.contentSidebar.addTask.general = Yleinen tehtävä
+# description for menu item that opens general task popup
+be.contentSidebar.addTask.general.description = Seuraa töiden edistymistä
+# title for general task popup
+be.contentSidebar.addTask.general.title = Luo yleinen tehtävä
+# title for when editing an existing approval task
+be.contentSidebar.editTask.approval.title = Muokkaa hyväksyntätehtävää
+# modal title for when editing an existing general task
+be.contentSidebar.editTask.general.title = Muokkaa yleistä tehtävää
 # Label for copy action.
 be.copy = Kopioi
 # Label for create action.
@@ -214,6 +320,8 @@ be.pointAnnotation = Kohdan huomautustila
 be.preview = Esikatsele
 # Error message when Preview fails due to the files call.
 be.previewError = Esikatselua ei voitu ladata. Päivitä sivu.
+# Error message when Preview fails due to the files call which is blocked by an access policy.
+be.previewErrorBlockedByPolicy = Your access is restricted due to the classification applied to this content.
 # Message when new preview is available.
 be.previewUpdate = Tiedoston uusi versio on saatavana!
 # Previous file button title
@@ -228,8 +336,6 @@ be.priorCollaborator = Aiempi yhteistyökumppani
 be.recentsBreadcrumb = Viimeisimmät
 # Message shown when there are no recent items.
 be.recentsState = Ei viimeisimpiä kohteita.
-# Title for x icon indicating someone rejected a task
-be.rejectedAssignment = Hylätty
 # Label for reload button.
 be.reload = Lataa uudelleen
 # Label for remove action.
@@ -372,114 +478,6 @@ be.skillUnknownError = Tapahtui virhe osaamisen suorittamisessa tai sen tietojen
 be.sort = Lajittele
 # Label for status skill card in the preview sidebar
 be.statusSkill = Tila
-# Title shown when an error occurs performing an action on a task
-be.taskActionErrorTitle = Virhe
-# Approve option for a task
-be.taskApprove = Valmis
-# Error message when approving a task fails
-be.taskApproveErrorMessage = Tehtävän hyväksymisen aikana tapahtui virhe. Päivitä sivu ja yritä uudelleen.
-# Error message when we failed to load the collaborators when user tries to edit a task
-be.taskCollaboratorLoadErrorMessage = Tehtävän yhteistyökumppanien lataamisessa tapahtui virhe. Yritä uudelleen.
-# Error message when completing a task fails
-be.taskCompleteErrorMessage = Tehtävän viimeistelyn aikana tapahtui virhe. Päivitä sivu ja yritä uudelleen.
-# Error message when a task creation fails
-be.taskCreateErrorMessage = Tehtävää luotaessa tapahtui virhe. Yritä uudelleen.
-# Title shown above error message when a task creation fails
-be.taskCreateErrorTitle = Virhe
-# Error message when a task deletion fails
-be.taskDeleteErrorMessage = Tehtävän poistamisen aikana tapahtui virhe. Päivitä sivu ja yritä uudelleen.
-# Text to show on menu item to delete task
-be.taskDeleteMenuItem = Poista tehtävä
-# Confirmation prompt text to delete task
-be.taskDeletePrompt = Haluatko varmasti poistaa tämän tehtävän pysyvästi?
-# Due date for a task
-be.taskDueDate = Määräaika
-# Error message when a task edit fails
-be.taskEditErrorMessage = Tehtävää muokattaessa tapahtui virhe. Yritä uudelleen.
-# Text to show on menu item to edit task
-be.taskEditMenuItem = Muokkaa tehtävää
-# Reject option for a task
-be.taskReject = Hylkää
-# Error message when rejecting a task fails
-be.taskRejectErrorMessage = Tehtävän hylkäämisen aikana tapahtui virhe. Päivitä sivu ja yritä uudelleen.
-# Button name to hide task assignee list
-be.taskShowLessAssignees = Näytä vähemmän
-# Button name to expand task assignee list, additionalAssigneeCount is the number of additional task assignees that can be shown.
-be.taskShowMoreAssignees = Näytä {additionalAssigneeCount} enemmän
-# Button name to expand task assignee list, when there is an unknown number of assignees beyond additionalAssigneeCount.
-be.taskShowMoreAssigneesOverflow = {additionalAssigneeCount, plural, one {Show #+ More} other {Show #+ More}}
-# label for button that opens task popup
-be.tasks.addTask = Lisää tehtävä
-# label for menu item that opens approval task popup
-be.tasks.addTask.approval = Hyväksyntätehtävä
-# description for menu item that opens approval task popup
-be.tasks.addTask.approval.description = Pyydä lupa siirtää työ eteenpäin
-# label for menu item that opens general task popup
-be.tasks.addTask.general = Yleinen tehtävä
-# description for menu item that opens general task popup
-be.tasks.addTask.general.description = Seuraa töiden edistymistä
-# label for cancel button in create task popup
-be.tasks.addTaskForm.cancel = Peruuta
-# label for task create form due date input
-be.tasks.addTaskForm.dueDateLabel = Määräpäivä
-# label for task create form message input
-be.tasks.addTaskForm.messageLabel = Viesti
-# label for task create form assignee input
-be.tasks.addTaskForm.selectAssigneesLabel = Valitse vastuuhenkilöt
-# label for create button in create task modal in create mode
-be.tasks.addTaskForm.submit = Luo
-# title for approval task popup
-be.tasks.createTask.approval.title = Luo hyväksyntätehtävä
-# title for general task popup
-be.tasks.createTask.general.title = Luo yleinen tehtävä
-# title for when editing an existing approval task
-be.tasks.editTask.approval.title = Muokkaa hyväksyntätehtävää
-# modal title for when editing an existing general task
-be.tasks.editTask.general.title = Muokkaa yleistä tehtävää
-# label for edit button in create task modal in edit mode
-be.tasks.editTaskForm.submit = Päivitä
-# Approve option for an approval task
-be.tasks.feed.approveAction = Hyväksy
-# Label for an approved task
-be.tasks.feed.approvedLabel = Hyväksytty
-# Title for list of all task assignees
-be.tasks.feed.assigneeList.title = Vastuuhenkilöt
-# Completion option for a general task
-be.tasks.feed.completeAction = Merkitse valmiiksi
-# Label for a completed task
-be.tasks.feed.completedLabel = Valmis
-# Comment headline for an approval task
-be.tasks.feed.headline.approval = {user} määritti hyväksyntätehtävän
-# Comment headline for an approval task assigned to the current user
-be.tasks.feed.headline.approval.currentUser = {user} määritti sinulle hyväksyntätehtävän
-# Comment headline for a general task
-be.tasks.feed.headline.general = {user} määritti tehtävän
-# Comment headline for a general task assigned to the current user
-be.tasks.feed.headline.general.currentUser = {user} määritti sinulle tehtävän
-# Label for a task in progress
-be.tasks.feed.inProgressLabel = Käynnissä
-# Label for button to expand flyout to see all task assignees
-be.tasks.feed.moreAssigneesLabel = Näytä kaikki vastuuhenkilöt
-# Reject option for an approval task
-be.tasks.feed.rejectAction = Hylkää
-# Label for a rejected task
-be.tasks.feed.rejectedLabel = Hylätty
-# Label for the task status
-be.tasks.feed.statusLabel = Tila: {taskStatus}
-# Approved task status, where dateTime is a readable time like "Today at 2pm"
-be.tasks.status.approved = Hyväksytty {dateTime}
-# Completed task status, where dateTime is a readable time like "Today at 2pm"
-be.tasks.status.completed = Valmistunut {dateTime}
-# Task status when in progress
-be.tasks.status.inProgress = Odottaa
-# Task status when not started
-be.tasks.status.notStarted = Odottaa
-# Rejected task status, where dateTime is a readable time like "Today at 2pm"
-be.tasks.status.rejected = Hylätty {dateTime}
-# Label and date for task due date
-be.tasks.taskDueDate = Määräpäivä: {date}
-# Tasks for approval
-be.tasksForApproval = Tehtävät
 # Shown instead of todays date.
 be.today = tänään
 # Label for keywords/topics skill section in the preview sidebar
