--- a/i18n/it-IT.properties
+++ b/i18n/it-IT.properties
@@ -4,6 +4,24 @@ be.accessStatsPermissionsError = Non disponi dell'autorizzazione per visualizzar
 be.activityFeedItemApiError = Si è verificato un problema durante il caricamento del feed attività. Aggiorna la pagina o riprova più tardi.
 # Label for add action
 be.add = Aggiungi
+# Error message when a comment creation fails due to a conflict
+be.api.commentCreateConflictMessage = Commento già esistente.
+# Error message when a comment creation fails
+be.api.commentCreateErrorMessage = Errore durante la creazione di questo commento.
+# Error message when a comment deletion fails
+be.api.commentDeleteErrorMessage = Errore durante l'eliminazione di questo commento.
+# Title shown when an error occurs performing an action on a task
+be.api.taskActionErrorTitle = Errore
+# Error message when approving a task fails
+be.api.taskApproveErrorMessage = Si è verificato un errore durante l'approvazione dell'attività. Aggiorna la pagina e riprova.
+# Error message when completing a task fails
+be.api.taskCompleteErrorMessage = Si è verificato un errore durante il completamento dell'attività. Aggiorna la pagina e riprova.
+# Error message when a task creation fails
+be.api.taskCreateErrorMessage = Si è verificato un errore durante la creazione di questa attività. Riprova.
+# Error message when a task deletion fails
+be.api.taskDeleteErrorMessage = Si è verificato un errore durante l'eliminazione dell'attività. Aggiorna la pagina e riprova.
+# Error message when rejecting a task fails
+be.api.taskRejectErrorMessage = Si è verificato un errore durante il rifiuto dell'attività. Aggiorna la pagina e riprova.
 # Alt message if app activity icon is missing or cannot load
 be.appActivityAltIcon = Icona {appActivityName}
 # App Activity created at full date time for title
@@ -12,20 +30,6 @@ be.appActivityCreatedAtFullDateTime = {time, date, full} alle {time, time, short
 be.appActivityDeleteErrorMessage = Errore durante l'eliminazione di questo elemento.
 # Confirmation prompt text to delete app activity
 be.appActivityDeletePrompt = Eliminare attività app?
-# Placeholder for approvers input
-be.approvalAddAssignee = Aggiungi un assegnatario
-# Label for checkbox to add approvers to a comment
-be.approvalAddTask = Aggiungi attività
-# Tooltip text for checkbox to add approvers to a comment
-be.approvalAddTaskTooltip = Se assegni un'attività, all'assegnatario arriverà una notifica con il messaggio nel riquadro dei commenti, che consentirà di approvare o rifiutare l'assegnazione.
-# Title for assignees input
-be.approvalAssignees = Assegnatari
-# Title for approvers due date input
-be.approvalDueDate = Data di scadenza
-# Placeholder for due date input
-be.approvalSelectDate = Seleziona una data
-# Mentioning call to action displayed below the comment input
-be.atMentionTip = @menziona gli utenti per avvisarli.
 # Label for back button
 be.back = Indietro
 # Message when Box Tools cannot open a particular file type
@@ -40,28 +44,130 @@ be.choose = Scegli
 be.close = Chiudi
 # Message to the user to collapse the Transcript entries
 be.collapse = Comprimi
+# Placeholder for approvers input
+be.contentSidebar.activityFeed.approvalCommentForm.approvalAddAssignee = Aggiungi un assegnatario
+# Label for checkbox to add approvers to a comment
+be.contentSidebar.activityFeed.approvalCommentForm.approvalAddTask = Aggiungi attività
+# Tooltip text for checkbox to add approvers to a comment
+be.contentSidebar.activityFeed.approvalCommentForm.approvalAddTaskTooltip = Se assegni un'attività, all'assegnatario arriverà una notifica con il messaggio nel riquadro dei commenti, che consentirà di approvare o rifiutare l'assegnazione.
+# Title for assignees input
+be.contentSidebar.activityFeed.approvalCommentForm.approvalAssignees = Assegnatari
+# Title for approvers due date input
+be.contentSidebar.activityFeed.approvalCommentForm.approvalDueDate = Data di scadenza
+# Placeholder for due date input
+be.contentSidebar.activityFeed.approvalCommentForm.approvalSelectDate = Seleziona una data
+# Mentioning call to action displayed below the comment input
+be.contentSidebar.activityFeed.approvalCommentForm.atMentionTip = @menziona gli utenti per avvisarli.
 # Text for cancel button
-be.commentCancel = Annulla
-# Error message when a comment creation fails due to a conflict
-be.commentCreateConflictMessage = Commento già esistente.
-# Error message when a comment creation fails
-be.commentCreateErrorMessage = Errore durante la creazione di questo commento.
-# Error message when a comment deletion fails
-be.commentDeleteErrorMessage = Errore durante l'eliminazione di questo commento.
-# Confirmation prompt text to delete comment
-be.commentDeletePrompt = Eliminare il commento?
+be.contentSidebar.activityFeed.approvalCommentForm.commentCancel = Annulla
 # Text for post button
-be.commentPost = Pubblica
-# Comment posted full date time for title
-be.commentPostedFullDateTime = {time, date, full} alle {time, time, short}
-# Show original button for showing original comment
-be.commentShowOriginal = Mostra originale
-# Translate button for translating comment
-be.commentTranslate = Traduci
+be.contentSidebar.activityFeed.approvalCommentForm.commentPost = Pubblica
 # Placeholder for comment input
-be.commentWrite = Scrivi un commento
+be.contentSidebar.activityFeed.approvalCommentForm.commentWrite = Scrivi un commento
+# Confirmation prompt text to delete comment
+be.contentSidebar.activityFeed.comment.commentDeletePrompt = Eliminare il commento?
+# Comment posted full date time for title
+be.contentSidebar.activityFeed.comment.commentPostedFullDateTime = {time, date, full} alle {time, time, short}
+# Show original button for showing original comment
+be.contentSidebar.activityFeed.comment.commentShowOriginal = Mostra originale
+# Translate button for translating comment
+be.contentSidebar.activityFeed.comment.commentTranslate = Traduci
+# Text to show on menu item to delete task
+be.contentSidebar.activityFeed.comment.taskDeleteMenuItem = Elimina attività
+# Confirmation prompt text to delete task
+be.contentSidebar.activityFeed.comment.taskDeletePrompt = Eliminare definitivamente questa attività?
+# Text to show on menu item to edit task
+be.contentSidebar.activityFeed.comment.taskEditMenuItem = Modifica attività
+# Title for x icon indicating someone rejected a task
+be.contentSidebar.activityFeed.task.rejectedAssignment = Rifiutata
+# Approve option for a task
+be.contentSidebar.activityFeed.task.taskApprove = Completa
+# Due date for a task
+be.contentSidebar.activityFeed.task.taskDueDate = Scadenza
+# Reject option for a task
+be.contentSidebar.activityFeed.task.taskReject = Rifiuta
+# Tasks for approval
+be.contentSidebar.activityFeed.task.tasksForApproval = Attività
+# Title shown above error message when a task creation fails
+be.contentSidebar.activityFeed.taskForm.taskCreateErrorTitle = Errore
+# Error message when a task edit fails
+be.contentSidebar.activityFeed.taskForm.taskUpdateErrorMessage = Si è verificato un errore durante la modifica di questa attività. Riprova.
+# label for cancel button in create task popup
+be.contentSidebar.activityFeed.taskForm.tasksAddTaskFormCancelLabel = Annulla
+# label for task create form due date input
+be.contentSidebar.activityFeed.taskForm.tasksAddTaskFormDueDateLabel = Data di scadenza
+# label for task create form message input
+be.contentSidebar.activityFeed.taskForm.tasksAddTaskFormMessageLabel = Messaggio
+# label for task create form assignee input
+be.contentSidebar.activityFeed.taskForm.tasksAddTaskFormSelectAssigneesLabel = Seleziona assegnatari
+# label for create button in create task modal in create mode
+be.contentSidebar.activityFeed.taskForm.tasksAddTaskFormSubmitLabel = Crea
+# label for edit button in create task modal in edit mode
+be.contentSidebar.activityFeed.taskForm.tasksEditTaskFormSubmitLabel = Aggiorna
 # Title for checkmark icon indicating someone completed a task
-be.completedAssignment = Completati
+be.contentSidebar.activityFeed.taskNew.taskAssignmentCompleted = Completati
+# Error message when we failed to load the collaborators when user tries to edit a task
+be.contentSidebar.activityFeed.taskNew.taskCollaboratorLoadErrorMessage = Si è verificato un errore durante il caricamento dei collaboratori per questa attività. Riprova.
+# Label and date for task due date
+be.contentSidebar.activityFeed.taskNew.taskDueDateLabel = Scadenza: {date}
+# Button name to hide task assignee list
+be.contentSidebar.activityFeed.taskNew.taskShowLessAssignees = Mostra meno
+# Button name to expand task assignee list, additionalAssigneeCount is the number of additional task assignees that can be shown.
+be.contentSidebar.activityFeed.taskNew.taskShowMoreAssignees = Show {additionalAssigneeCount} More
+# Button name to expand task assignee list, when there is an unknown number of assignees beyond additionalAssigneeCount.
+be.contentSidebar.activityFeed.taskNew.taskShowMoreAssigneesOverflow = {additionalAssigneeCount, plural, one {Show #+ More} other {Show #+ More}}
+# Approve option for an approval task
+be.contentSidebar.activityFeed.taskNew.tasksFeedApproveAction = Approva
+# Label for an approved task
+be.contentSidebar.activityFeed.taskNew.tasksFeedApprovedLabel = Approvata
+# Title for list of all task assignees
+be.contentSidebar.activityFeed.taskNew.tasksFeedAssigneeListTitle = Assegnatari
+# Completion option for a general task
+be.contentSidebar.activityFeed.taskNew.tasksFeedCompleteAction = Contrassegna come completata
+# Label for a completed task
+be.contentSidebar.activityFeed.taskNew.tasksFeedCompletedLabel = Completati
+# Comment headline for an approval task
+be.contentSidebar.activityFeed.taskNew.tasksFeedHeadlineApproval = {user} ha assegnato un'attività di approvazione
+# Comment headline for an approval task assigned to the current user
+be.contentSidebar.activityFeed.taskNew.tasksFeedHeadlineApprovalCurrentUser = {user} ti ha assegnato un'attività di approvazione
+# Comment headline for a general task
+be.contentSidebar.activityFeed.taskNew.tasksFeedHeadlineGeneral = {user} ha assegnato un'attività
+# Comment headline for a general task assigned to the current user
+be.contentSidebar.activityFeed.taskNew.tasksFeedHeadlineGeneralCurrentUser = {user} ti ha assegnato un'attività
+# Label for a task in progress
+be.contentSidebar.activityFeed.taskNew.tasksFeedInProgressLabel = In corso
+# Label for button to expand flyout to see all task assignees
+be.contentSidebar.activityFeed.taskNew.tasksFeedMoreAssigneesLabel = Visualizza tutti gli assegnatari
+# Reject option for an approval task
+be.contentSidebar.activityFeed.taskNew.tasksFeedRejectAction = Rifiuta
+# Label for a rejected task
+be.contentSidebar.activityFeed.taskNew.tasksFeedRejectedLabel = Rifiutata
+# Approved task status, where dateTime is a readable time like "Today at 2pm"
+be.contentSidebar.activityFeed.taskNew.tasksFeedStatusApproved = Approvata {dateTime}
+# Completed task status, where dateTime is a readable time like "Today at 2pm"
+be.contentSidebar.activityFeed.taskNew.tasksFeedStatusCompleted = Completata: {dateTime}
+# Label for the task status
+be.contentSidebar.activityFeed.taskNew.tasksFeedStatusLabel = Stato: {taskStatus}
+# Rejected task status, where dateTime is a readable time like "Today at 2pm"
+be.contentSidebar.activityFeed.taskNew.tasksFeedStatusRejected = Rifiutata: {dateTime}
+# label for button that opens task popup
+be.contentSidebar.addTask = Aggiungi attività
+# label for menu item that opens approval task popup
+be.contentSidebar.addTask.approval = Attività di approvazione
+# description for menu item that opens approval task popup
+be.contentSidebar.addTask.approval.description = Richiede un'approvazione per procedere con il lavoro
+# title for approval task popup
+be.contentSidebar.addTask.approval.title = Crea attività di approvazione
+# label for menu item that opens general task popup
+be.contentSidebar.addTask.general = Attività generale
+# description for menu item that opens general task popup
+be.contentSidebar.addTask.general.description = Monitora il lavoro da svolgere
+# title for general task popup
+be.contentSidebar.addTask.general.title = Crea attività generale
+# title for when editing an existing approval task
+be.contentSidebar.editTask.approval.title = Modifica attività di approvazione
+# modal title for when editing an existing general task
+be.contentSidebar.editTask.general.title = Modifica attività generale
 # Label for copy action.
 be.copy = Copia
 # Label for create action.
@@ -214,6 +320,8 @@ be.pointAnnotation = Modalità puntamento nota
 be.preview = Anteprima
 # Error message when Preview fails due to the files call.
 be.previewError = Caricamento dell'anteprima non riuscito. Aggiorna la pagina.
+# Error message when Preview fails due to the files call which is blocked by an access policy.
+be.previewErrorBlockedByPolicy = Your access is restricted due to the classification applied to this content.
 # Message when new preview is available.
 be.previewUpdate = È disponibile una nuova versione del file.
 # Previous file button title
@@ -228,8 +336,6 @@ be.priorCollaborator = Un ex collaboratore
 be.recentsBreadcrumb = Recenti
 # Message shown when there are no recent items.
 be.recentsState = Non sono ancora presenti elementi
-# Title for x icon indicating someone rejected a task
-be.rejectedAssignment = Rifiutata
 # Label for reload button.
 be.reload = Ricarica
 # Label for remove action.
@@ -372,114 +478,6 @@ be.skillUnknownError = Si è verificato un problema nell'esecuzione di questa sk
 be.sort = Ordina
 # Label for status skill card in the preview sidebar
 be.statusSkill = Stato
-# Title shown when an error occurs performing an action on a task
-be.taskActionErrorTitle = Errore
-# Approve option for a task
-be.taskApprove = Completa
-# Error message when approving a task fails
-be.taskApproveErrorMessage = Si è verificato un errore durante l'approvazione dell'attività. Aggiorna la pagina e riprova.
-# Error message when we failed to load the collaborators when user tries to edit a task
-be.taskCollaboratorLoadErrorMessage = Si è verificato un errore durante il caricamento dei collaboratori per questa attività. Riprova.
-# Error message when completing a task fails
-be.taskCompleteErrorMessage = Si è verificato un errore durante il completamento dell'attività. Aggiorna la pagina e riprova.
-# Error message when a task creation fails
-be.taskCreateErrorMessage = Si è verificato un errore durante la creazione di questa attività. Riprova.
-# Title shown above error message when a task creation fails
-be.taskCreateErrorTitle = Errore
-# Error message when a task deletion fails
-be.taskDeleteErrorMessage = Si è verificato un errore durante l'eliminazione dell'attività. Aggiorna la pagina e riprova.
-# Text to show on menu item to delete task
-be.taskDeleteMenuItem = Elimina attività
-# Confirmation prompt text to delete task
-be.taskDeletePrompt = Eliminare definitivamente questa attività?
-# Due date for a task
-be.taskDueDate = Scadenza
-# Error message when a task edit fails
-be.taskEditErrorMessage = Si è verificato un errore durante la modifica di questa attività. Riprova.
-# Text to show on menu item to edit task
-be.taskEditMenuItem = Modifica attività
-# Reject option for a task
-be.taskReject = Rifiuta
-# Error message when rejecting a task fails
-be.taskRejectErrorMessage = Si è verificato un errore durante il rifiuto dell'attività. Aggiorna la pagina e riprova.
-# Button name to hide task assignee list
-be.taskShowLessAssignees = Mostra meno
-# Button name to expand task assignee list, additionalAssigneeCount is the number of additional task assignees that can be shown.
-be.taskShowMoreAssignees = Mostra altri {additionalAssigneeCount}
-# Button name to expand task assignee list, when there is an unknown number of assignees beyond additionalAssigneeCount.
-be.taskShowMoreAssigneesOverflow = {additionalAssigneeCount, plural, one {Show #+ More} other {Show #+ More}}
-# label for button that opens task popup
-be.tasks.addTask = Aggiungi attività
-# label for menu item that opens approval task popup
-be.tasks.addTask.approval = Attività di approvazione
-# description for menu item that opens approval task popup
-be.tasks.addTask.approval.description = Richiede un'approvazione per procedere con il lavoro
-# label for menu item that opens general task popup
-be.tasks.addTask.general = Attività generale
-# description for menu item that opens general task popup
-be.tasks.addTask.general.description = Monitora il lavoro da svolgere
-# label for cancel button in create task popup
-be.tasks.addTaskForm.cancel = Annulla
-# label for task create form due date input
-be.tasks.addTaskForm.dueDateLabel = Data di scadenza
-# label for task create form message input
-be.tasks.addTaskForm.messageLabel = Messaggio
-# label for task create form assignee input
-be.tasks.addTaskForm.selectAssigneesLabel = Seleziona assegnatari
-# label for create button in create task modal in create mode
-be.tasks.addTaskForm.submit = Crea
-# title for approval task popup
-be.tasks.createTask.approval.title = Crea attività di approvazione
-# title for general task popup
-be.tasks.createTask.general.title = Crea attività generale
-# title for when editing an existing approval task
-be.tasks.editTask.approval.title = Modifica attività di approvazione
-# modal title for when editing an existing general task
-be.tasks.editTask.general.title = Modifica attività generale
-# label for edit button in create task modal in edit mode
-be.tasks.editTaskForm.submit = Aggiorna
-# Approve option for an approval task
-be.tasks.feed.approveAction = Approva
-# Label for an approved task
-be.tasks.feed.approvedLabel = Approvata
-# Title for list of all task assignees
-be.tasks.feed.assigneeList.title = Assegnatari
-# Completion option for a general task
-be.tasks.feed.completeAction = Contrassegna come completata
-# Label for a completed task
-be.tasks.feed.completedLabel = Completata
-# Comment headline for an approval task
-be.tasks.feed.headline.approval = {user} ha assegnato un'attività di approvazione
-# Comment headline for an approval task assigned to the current user
-be.tasks.feed.headline.approval.currentUser = {user} ti ha assegnato un'attività di approvazione
-# Comment headline for a general task
-be.tasks.feed.headline.general = {user} ha assegnato un'attività
-# Comment headline for a general task assigned to the current user
-be.tasks.feed.headline.general.currentUser = {user} ti ha assegnato un'attività
-# Label for a task in progress
-be.tasks.feed.inProgressLabel = In corso
-# Label for button to expand flyout to see all task assignees
-be.tasks.feed.moreAssigneesLabel = Visualizza tutti gli assegnatari
-# Reject option for an approval task
-be.tasks.feed.rejectAction = Rifiuta
-# Label for a rejected task
-be.tasks.feed.rejectedLabel = Rifiutata
-# Label for the task status
-be.tasks.feed.statusLabel = Stato: {taskStatus}
-# Approved task status, where dateTime is a readable time like "Today at 2pm"
-be.tasks.status.approved = Approvata {dateTime}
-# Completed task status, where dateTime is a readable time like "Today at 2pm"
-be.tasks.status.completed = Completata: {dateTime}
-# Task status when in progress
-be.tasks.status.inProgress = In attesa
-# Task status when not started
-be.tasks.status.notStarted = In attesa
-# Rejected task status, where dateTime is a readable time like "Today at 2pm"
-be.tasks.status.rejected = Rifiutata: {dateTime}
-# Label and date for task due date
-be.tasks.taskDueDate = Scadenza: {date}
-# Tasks for approval
-be.tasksForApproval = Attività
 # Shown instead of todays date.
 be.today = oggi
 # Label for keywords/topics skill section in the preview sidebar
