--- a/i18n/ko-KR.properties
+++ b/i18n/ko-KR.properties
@@ -4,6 +4,24 @@ be.accessStatsPermissionsError = 죄송합니다. 이 파일에 대한 액세스
 be.activityFeedItemApiError = 활동 피드를 로드하는 중 문제가 발생했습니다. 페이지를 새로 고치거나 나중에 다시 시도하십시오.
 # Label for add action
 be.add = 추가
+# Error message when a comment creation fails due to a conflict
+be.api.commentCreateConflictMessage = 이 코멘트는 이미 있습니다.
+# Error message when a comment creation fails
+be.api.commentCreateErrorMessage = 이 코멘트를 만드는 동안 오류가 발생했습니다.
+# Error message when a comment deletion fails
+be.api.commentDeleteErrorMessage = 이 코멘트를 삭제하는 동안 오류가 발생했습니다.
+# Title shown when an error occurs performing an action on a task
+be.api.taskActionErrorTitle = 오류
+# Error message when approving a task fails
+be.api.taskApproveErrorMessage = 이 작업을 승인하는 중 오류가 발생했습니다. 페이지를 새로 고치고 다시 시도하십시오.
+# Error message when completing a task fails
+be.api.taskCompleteErrorMessage = 이 작업을 완료하는 중 오류가 발생했습니다. 페이지를 새로 고치고 다시 시도하십시오.
+# Error message when a task creation fails
+be.api.taskCreateErrorMessage = 이 작업을 만드는 중 오류가 발생했습니다. 다시 시도하십시오.
+# Error message when a task deletion fails
+be.api.taskDeleteErrorMessage = 이 작업을 삭제하는 중 오류가 발생했습니다. 페이지를 새로 고치고 다시 시도하십시오.
+# Error message when rejecting a task fails
+be.api.taskRejectErrorMessage = 이 작업을 거부하는 중 오류가 발생했습니다. 페이지를 새로 고치고 다시 시도하십시오.
 # Alt message if app activity icon is missing or cannot load
 be.appActivityAltIcon = {appActivityName} 아이콘
 # App Activity created at full date time for title
@@ -12,20 +30,6 @@ be.appActivityCreatedAtFullDateTime = {time, date, full}, {time, time, short}
 be.appActivityDeleteErrorMessage = 이 항목을 삭제하는 동안 오류가 발생했습니다.
 # Confirmation prompt text to delete app activity
 be.appActivityDeletePrompt = 앱 활동을 삭제하시겠습니까?
-# Placeholder for approvers input
-be.approvalAddAssignee = 담당자 추가
-# Label for checkbox to add approvers to a comment
-be.approvalAddTask = 작업 추가
-# Tooltip text for checkbox to add approvers to a comment
-be.approvalAddTaskTooltip = 작업을 다른 사용자에게 할당하면 코멘트 상자의 메시지가 포함된 알림이 해당 사용자에게 전송되며 해당 사용자는 이를 승인하거나 거부할 수 있습니다.
-# Title for assignees input
-be.approvalAssignees = 담당자
-# Title for approvers due date input
-be.approvalDueDate = 기한
-# Placeholder for due date input
-be.approvalSelectDate = 날짜 선택
-# Mentioning call to action displayed below the comment input
-be.atMentionTip = 사용자에게 알리기 위해 @멘션을 답니다.
 # Label for back button
 be.back = 뒤로
 # Message when Box Tools cannot open a particular file type
@@ -40,28 +44,130 @@ be.choose = 선택
 be.close = 닫기
 # Message to the user to collapse the Transcript entries
 be.collapse = 축소
+# Placeholder for approvers input
+be.contentSidebar.activityFeed.approvalCommentForm.approvalAddAssignee = 담당자 추가
+# Label for checkbox to add approvers to a comment
+be.contentSidebar.activityFeed.approvalCommentForm.approvalAddTask = 작업 추가
+# Tooltip text for checkbox to add approvers to a comment
+be.contentSidebar.activityFeed.approvalCommentForm.approvalAddTaskTooltip = 작업을 다른 사용자에게 할당하면 코멘트 상자의 메시지가 포함된 알림이 해당 사용자에게 전송되며 해당 사용자는 이를 승인하거나 거부할 수 있습니다.
+# Title for assignees input
+be.contentSidebar.activityFeed.approvalCommentForm.approvalAssignees = 담당자
+# Title for approvers due date input
+be.contentSidebar.activityFeed.approvalCommentForm.approvalDueDate = 기한
+# Placeholder for due date input
+be.contentSidebar.activityFeed.approvalCommentForm.approvalSelectDate = 날짜 선택
+# Mentioning call to action displayed below the comment input
+be.contentSidebar.activityFeed.approvalCommentForm.atMentionTip = 사용자에게 알리기 위해 @멘션을 답니다.
 # Text for cancel button
-be.commentCancel = 취소
-# Error message when a comment creation fails due to a conflict
-be.commentCreateConflictMessage = 이 코멘트는 이미 있습니다.
-# Error message when a comment creation fails
-be.commentCreateErrorMessage = 이 코멘트를 만드는 동안 오류가 발생했습니다.
-# Error message when a comment deletion fails
-be.commentDeleteErrorMessage = 이 코멘트를 삭제하는 동안 오류가 발생했습니다.
-# Confirmation prompt text to delete comment
-be.commentDeletePrompt = 코멘트를 삭제하시겠습니까?
+be.contentSidebar.activityFeed.approvalCommentForm.commentCancel = 취소
 # Text for post button
-be.commentPost = 게시
-# Comment posted full date time for title
-be.commentPostedFullDateTime = {time, date, full}, {time, time, short}
-# Show original button for showing original comment
-be.commentShowOriginal = 원본 표시
-# Translate button for translating comment
-be.commentTranslate = 번역
+be.contentSidebar.activityFeed.approvalCommentForm.commentPost = 게시
 # Placeholder for comment input
-be.commentWrite = 코멘트 작성
+be.contentSidebar.activityFeed.approvalCommentForm.commentWrite = 코멘트 작성
+# Confirmation prompt text to delete comment
+be.contentSidebar.activityFeed.comment.commentDeletePrompt = 코멘트를 삭제하시겠습니까?
+# Comment posted full date time for title
+be.contentSidebar.activityFeed.comment.commentPostedFullDateTime = {time, date, full}, {time, time, short}
+# Show original button for showing original comment
+be.contentSidebar.activityFeed.comment.commentShowOriginal = 원본 표시
+# Translate button for translating comment
+be.contentSidebar.activityFeed.comment.commentTranslate = 번역
+# Text to show on menu item to delete task
+be.contentSidebar.activityFeed.comment.taskDeleteMenuItem = 작업 삭제
+# Confirmation prompt text to delete task
+be.contentSidebar.activityFeed.comment.taskDeletePrompt = 이 작업을 영구적으로 삭제하시겠습니까?
+# Text to show on menu item to edit task
+be.contentSidebar.activityFeed.comment.taskEditMenuItem = 작업 수정
+# Title for x icon indicating someone rejected a task
+be.contentSidebar.activityFeed.task.rejectedAssignment = 거부됨
+# Approve option for a task
+be.contentSidebar.activityFeed.task.taskApprove = 완료
+# Due date for a task
+be.contentSidebar.activityFeed.task.taskDueDate = 기한
+# Reject option for a task
+be.contentSidebar.activityFeed.task.taskReject = 거부
+# Tasks for approval
+be.contentSidebar.activityFeed.task.tasksForApproval = 작업
+# Title shown above error message when a task creation fails
+be.contentSidebar.activityFeed.taskForm.taskCreateErrorTitle = 오류
+# Error message when a task edit fails
+be.contentSidebar.activityFeed.taskForm.taskUpdateErrorMessage = 이 작업을 수정하는 중 오류가 발생했습니다. 다시 시도하십시오.
+# label for cancel button in create task popup
+be.contentSidebar.activityFeed.taskForm.tasksAddTaskFormCancelLabel = 취소
+# label for task create form due date input
+be.contentSidebar.activityFeed.taskForm.tasksAddTaskFormDueDateLabel = 기한
+# label for task create form message input
+be.contentSidebar.activityFeed.taskForm.tasksAddTaskFormMessageLabel = 메시지
+# label for task create form assignee input
+be.contentSidebar.activityFeed.taskForm.tasksAddTaskFormSelectAssigneesLabel = 담당자 선택
+# label for create button in create task modal in create mode
+be.contentSidebar.activityFeed.taskForm.tasksAddTaskFormSubmitLabel = 만들기
+# label for edit button in create task modal in edit mode
+be.contentSidebar.activityFeed.taskForm.tasksEditTaskFormSubmitLabel = 업데이트
 # Title for checkmark icon indicating someone completed a task
-be.completedAssignment = 완료됨
+be.contentSidebar.activityFeed.taskNew.taskAssignmentCompleted = 완료됨
+# Error message when we failed to load the collaborators when user tries to edit a task
+be.contentSidebar.activityFeed.taskNew.taskCollaboratorLoadErrorMessage = 이 작업에 대한 공동 작업자를 로드하는 중 오류가 발생했습니다. 다시 시도하십시오.
+# Label and date for task due date
+be.contentSidebar.activityFeed.taskNew.taskDueDateLabel = 기한: {date}
+# Button name to hide task assignee list
+be.contentSidebar.activityFeed.taskNew.taskShowLessAssignees = 간단히 표시
+# Button name to expand task assignee list, additionalAssigneeCount is the number of additional task assignees that can be shown.
+be.contentSidebar.activityFeed.taskNew.taskShowMoreAssignees = Show {additionalAssigneeCount} More
+# Button name to expand task assignee list, when there is an unknown number of assignees beyond additionalAssigneeCount.
+be.contentSidebar.activityFeed.taskNew.taskShowMoreAssigneesOverflow = {additionalAssigneeCount, plural, one {Show #+ More} other {Show #+ More}}
+# Approve option for an approval task
+be.contentSidebar.activityFeed.taskNew.tasksFeedApproveAction = 승인
+# Label for an approved task
+be.contentSidebar.activityFeed.taskNew.tasksFeedApprovedLabel = 승인됨
+# Title for list of all task assignees
+be.contentSidebar.activityFeed.taskNew.tasksFeedAssigneeListTitle = 담당자
+# Completion option for a general task
+be.contentSidebar.activityFeed.taskNew.tasksFeedCompleteAction = 완료로 표시
+# Label for a completed task
+be.contentSidebar.activityFeed.taskNew.tasksFeedCompletedLabel = 완료됨
+# Comment headline for an approval task
+be.contentSidebar.activityFeed.taskNew.tasksFeedHeadlineApproval = {user} 님이 승인 작업을 할당함
+# Comment headline for an approval task assigned to the current user
+be.contentSidebar.activityFeed.taskNew.tasksFeedHeadlineApprovalCurrentUser = {user} 님이 귀하에게 승인 작업을 할당함
+# Comment headline for a general task
+be.contentSidebar.activityFeed.taskNew.tasksFeedHeadlineGeneral = {user} 님이 작업을 할당함
+# Comment headline for a general task assigned to the current user
+be.contentSidebar.activityFeed.taskNew.tasksFeedHeadlineGeneralCurrentUser = {user} 님이 귀하에게 작업을 할당함
+# Label for a task in progress
+be.contentSidebar.activityFeed.taskNew.tasksFeedInProgressLabel = 진행 중
+# Label for button to expand flyout to see all task assignees
+be.contentSidebar.activityFeed.taskNew.tasksFeedMoreAssigneesLabel = 모든 담당자 보기
+# Reject option for an approval task
+be.contentSidebar.activityFeed.taskNew.tasksFeedRejectAction = 거부
+# Label for a rejected task
+be.contentSidebar.activityFeed.taskNew.tasksFeedRejectedLabel = 거부됨
+# Approved task status, where dateTime is a readable time like "Today at 2pm"
+be.contentSidebar.activityFeed.taskNew.tasksFeedStatusApproved = {dateTime} 승인됨
+# Completed task status, where dateTime is a readable time like "Today at 2pm"
+be.contentSidebar.activityFeed.taskNew.tasksFeedStatusCompleted = 완료: {dateTime}
+# Label for the task status
+be.contentSidebar.activityFeed.taskNew.tasksFeedStatusLabel = 상태: {taskStatus}
+# Rejected task status, where dateTime is a readable time like "Today at 2pm"
+be.contentSidebar.activityFeed.taskNew.tasksFeedStatusRejected = 거부: {dateTime}
+# label for button that opens task popup
+be.contentSidebar.addTask = 작업 추가
+# label for menu item that opens approval task popup
+be.contentSidebar.addTask.approval = 승인 작업
+# description for menu item that opens approval task popup
+be.contentSidebar.addTask.approval.description = 작업 진행에 대한 승인 요청
+# title for approval task popup
+be.contentSidebar.addTask.approval.title = 승인 작업 만들기
+# label for menu item that opens general task popup
+be.contentSidebar.addTask.general = 일반 작업
+# description for menu item that opens general task popup
+be.contentSidebar.addTask.general.description = 완료해야 할 작업 계속해서 추적
+# title for general task popup
+be.contentSidebar.addTask.general.title = 일반 작업 만들기
+# title for when editing an existing approval task
+be.contentSidebar.editTask.approval.title = 승인 작업 수정
+# modal title for when editing an existing general task
+be.contentSidebar.editTask.general.title = 일반 작업 수정
 # Label for copy action.
 be.copy = 복사
 # Label for create action.
@@ -214,6 +320,8 @@ be.pointAnnotation = 지점 주석 모드
 be.preview = 미리 보기
 # Error message when Preview fails due to the files call.
 be.previewError = 죄송합니다. 미리 보기가 로드되지 않았습니다. 페이지를 새로 고치십시오.
+# Error message when Preview fails due to the files call which is blocked by an access policy.
+be.previewErrorBlockedByPolicy = Your access is restricted due to the classification applied to this content.
 # Message when new preview is available.
 be.previewUpdate = 이 파일의 새로운 버전을 사용할 수 있습니다.
 # Previous file button title
@@ -228,8 +336,6 @@ be.priorCollaborator = 이전 공동 작업자
 be.recentsBreadcrumb = 최근 항목
 # Message shown when there are no recent items.
 be.recentsState = 아직 최근 항목이 없습니다.
-# Title for x icon indicating someone rejected a task
-be.rejectedAssignment = 거부됨
 # Label for reload button.
 be.reload = 다시 로드
 # Label for remove action.
@@ -372,114 +478,6 @@ be.skillUnknownError = 이 스킬을 실행하는 중 또는 해당 데이터를
 be.sort = 정렬
 # Label for status skill card in the preview sidebar
 be.statusSkill = 상태
-# Title shown when an error occurs performing an action on a task
-be.taskActionErrorTitle = 오류
-# Approve option for a task
-be.taskApprove = 완료
-# Error message when approving a task fails
-be.taskApproveErrorMessage = 이 작업을 승인하는 중 오류가 발생했습니다. 페이지를 새로 고치고 다시 시도하십시오.
-# Error message when we failed to load the collaborators when user tries to edit a task
-be.taskCollaboratorLoadErrorMessage = 이 작업에 대한 공동 작업자를 로드하는 중 오류가 발생했습니다. 다시 시도하십시오.
-# Error message when completing a task fails
-be.taskCompleteErrorMessage = 이 작업을 완료하는 중 오류가 발생했습니다. 페이지를 새로 고치고 다시 시도하십시오.
-# Error message when a task creation fails
-be.taskCreateErrorMessage = 이 작업을 만드는 중 오류가 발생했습니다. 다시 시도하십시오.
-# Title shown above error message when a task creation fails
-be.taskCreateErrorTitle = 오류
-# Error message when a task deletion fails
-be.taskDeleteErrorMessage = 이 작업을 삭제하는 중 오류가 발생했습니다. 페이지를 새로 고치고 다시 시도하십시오.
-# Text to show on menu item to delete task
-be.taskDeleteMenuItem = 작업 삭제
-# Confirmation prompt text to delete task
-be.taskDeletePrompt = 이 작업을 영구적으로 삭제하시겠습니까?
-# Due date for a task
-be.taskDueDate = 기한
-# Error message when a task edit fails
-be.taskEditErrorMessage = 이 작업을 수정하는 중 오류가 발생했습니다. 다시 시도하십시오.
-# Text to show on menu item to edit task
-be.taskEditMenuItem = 작업 수정
-# Reject option for a task
-be.taskReject = 거부
-# Error message when rejecting a task fails
-be.taskRejectErrorMessage = 이 작업을 거부하는 중 오류가 발생했습니다. 페이지를 새로 고치고 다시 시도하십시오.
-# Button name to hide task assignee list
-be.taskShowLessAssignees = 간단히 표시
-# Button name to expand task assignee list, additionalAssigneeCount is the number of additional task assignees that can be shown.
-be.taskShowMoreAssignees = {additionalAssigneeCount}명 더 표시
-# Button name to expand task assignee list, when there is an unknown number of assignees beyond additionalAssigneeCount.
-be.taskShowMoreAssigneesOverflow = {additionalAssigneeCount, plural, one {Show #+ More} other {Show #+ More}}
-# label for button that opens task popup
-be.tasks.addTask = 작업 추가
-# label for menu item that opens approval task popup
-be.tasks.addTask.approval = 승인 작업
-# description for menu item that opens approval task popup
-be.tasks.addTask.approval.description = 작업 진행에 대한 승인 요청
-# label for menu item that opens general task popup
-be.tasks.addTask.general = 일반 작업
-# description for menu item that opens general task popup
-be.tasks.addTask.general.description = 완료해야 할 작업 계속해서 추적
-# label for cancel button in create task popup
-be.tasks.addTaskForm.cancel = 취소
-# label for task create form due date input
-be.tasks.addTaskForm.dueDateLabel = 기한
-# label for task create form message input
-be.tasks.addTaskForm.messageLabel = 메시지
-# label for task create form assignee input
-be.tasks.addTaskForm.selectAssigneesLabel = 담당자 선택
-# label for create button in create task modal in create mode
-be.tasks.addTaskForm.submit = 만들기
-# title for approval task popup
-be.tasks.createTask.approval.title = 승인 작업 만들기
-# title for general task popup
-be.tasks.createTask.general.title = 일반 작업 만들기
-# title for when editing an existing approval task
-be.tasks.editTask.approval.title = 승인 작업 수정
-# modal title for when editing an existing general task
-be.tasks.editTask.general.title = 일반 작업 수정
-# label for edit button in create task modal in edit mode
-be.tasks.editTaskForm.submit = 업데이트
-# Approve option for an approval task
-be.tasks.feed.approveAction = 승인
-# Label for an approved task
-be.tasks.feed.approvedLabel = 승인됨
-# Title for list of all task assignees
-be.tasks.feed.assigneeList.title = 담당자
-# Completion option for a general task
-be.tasks.feed.completeAction = 완료로 표시
-# Label for a completed task
-be.tasks.feed.completedLabel = 완료됨
-# Comment headline for an approval task
-be.tasks.feed.headline.approval = {user} 님이 승인 작업을 할당함
-# Comment headline for an approval task assigned to the current user
-be.tasks.feed.headline.approval.currentUser = {user} 님이 귀하에게 승인 작업을 할당함
-# Comment headline for a general task
-be.tasks.feed.headline.general = {user} 님이 작업을 할당함
-# Comment headline for a general task assigned to the current user
-be.tasks.feed.headline.general.currentUser = {user} 님이 귀하에게 작업을 할당함
-# Label for a task in progress
-be.tasks.feed.inProgressLabel = 진행 중
-# Label for button to expand flyout to see all task assignees
-be.tasks.feed.moreAssigneesLabel = 모든 담당자 보기
-# Reject option for an approval task
-be.tasks.feed.rejectAction = 거부
-# Label for a rejected task
-be.tasks.feed.rejectedLabel = 거부됨
-# Label for the task status
-be.tasks.feed.statusLabel = 상태: {taskStatus}
-# Approved task status, where dateTime is a readable time like "Today at 2pm"
-be.tasks.status.approved = {dateTime} 승인됨
-# Completed task status, where dateTime is a readable time like "Today at 2pm"
-be.tasks.status.completed = 완료: {dateTime}
-# Task status when in progress
-be.tasks.status.inProgress = 대기 중
-# Task status when not started
-be.tasks.status.notStarted = 대기 중
-# Rejected task status, where dateTime is a readable time like "Today at 2pm"
-be.tasks.status.rejected = 거부: {dateTime}
-# Label and date for task due date
-be.tasks.taskDueDate = 기한: {date}
-# Tasks for approval
-be.tasksForApproval = 작업
 # Shown instead of todays date.
 be.today = 오늘
 # Label for keywords/topics skill section in the preview sidebar
