--- a/i18n/pl-PL.properties
+++ b/i18n/pl-PL.properties
@@ -4,6 +4,24 @@ be.accessStatsPermissionsError = Przepraszamy, brak uprawnień do wyświetlania 
 be.activityFeedItemApiError = Podczas wczytywania kanału aktywności wystąpił błąd. Odśwież stronę lub spróbuj ponownie później.
 # Label for add action
 be.add = Dodaj
+# Error message when a comment creation fails due to a conflict
+be.api.commentCreateConflictMessage = Ten komentarz już istnieje.
+# Error message when a comment creation fails
+be.api.commentCreateErrorMessage = Podczas tworzenia komentarza wystąpił błąd.
+# Error message when a comment deletion fails
+be.api.commentDeleteErrorMessage = Podczas usuwania komentarza wystąpił błąd.
+# Title shown when an error occurs performing an action on a task
+be.api.taskActionErrorTitle = Błąd
+# Error message when approving a task fails
+be.api.taskApproveErrorMessage = Podczas zatwierdzania tego zadania wystąpił błąd. Odśwież stronę i spróbuj ponownie.
+# Error message when completing a task fails
+be.api.taskCompleteErrorMessage = Podczas kończenia tego zadania wystąpił błąd. Odśwież stronę i spróbuj ponownie.
+# Error message when a task creation fails
+be.api.taskCreateErrorMessage = Podczas tworzenia tego zadania wystąpił błąd. Spróbuj ponownie.
+# Error message when a task deletion fails
+be.api.taskDeleteErrorMessage = Podczas usuwania tego zadania wystąpił błąd. Odśwież stronę i spróbuj ponownie.
+# Error message when rejecting a task fails
+be.api.taskRejectErrorMessage = Podczas odrzucania tego zadania wystąpił błąd. Odśwież stronę i spróbuj ponownie.
 # Alt message if app activity icon is missing or cannot load
 be.appActivityAltIcon = Ikona {appActivityName}
 # App Activity created at full date time for title
@@ -12,20 +30,6 @@ be.appActivityCreatedAtFullDateTime = {time, date, full} o godzinie {time, time,
 be.appActivityDeleteErrorMessage = Podczas usuwania elementu wystąpił błąd.
 # Confirmation prompt text to delete app activity
 be.appActivityDeletePrompt = Usunąć aktywność aplikacji?
-# Placeholder for approvers input
-be.approvalAddAssignee = Dodaj osobę przypisaną
-# Label for checkbox to add approvers to a comment
-be.approvalAddTask = Dodaj zadanie
-# Tooltip text for checkbox to add approvers to a comment
-be.approvalAddTaskTooltip = Przypisanie zadania do użytkownika spowoduje wysłanie powiadomienia z wiadomością w polu komentarza i umożliwi zatwierdzanie lub odrzucanie.
-# Title for assignees input
-be.approvalAssignees = Osoby przypisane
-# Title for approvers due date input
-be.approvalDueDate = Termin
-# Placeholder for due date input
-be.approvalSelectDate = Wybierz datę
-# Mentioning call to action displayed below the comment input
-be.atMentionTip = @Wspomnij użytkowników, aby wysłać im powiadomienie.
 # Label for back button
 be.back = Wstecz
 # Message when Box Tools cannot open a particular file type
@@ -40,28 +44,130 @@ be.choose = Wybierz
 be.close = Zamknij
 # Message to the user to collapse the Transcript entries
 be.collapse = Zwiń
+# Placeholder for approvers input
+be.contentSidebar.activityFeed.approvalCommentForm.approvalAddAssignee = Dodaj osobę przypisaną
+# Label for checkbox to add approvers to a comment
+be.contentSidebar.activityFeed.approvalCommentForm.approvalAddTask = Dodaj zadanie
+# Tooltip text for checkbox to add approvers to a comment
+be.contentSidebar.activityFeed.approvalCommentForm.approvalAddTaskTooltip = Przypisanie zadania do użytkownika spowoduje wysłanie powiadomienia z wiadomością w polu komentarza i umożliwi zatwierdzanie lub odrzucanie.
+# Title for assignees input
+be.contentSidebar.activityFeed.approvalCommentForm.approvalAssignees = Osoby przypisane
+# Title for approvers due date input
+be.contentSidebar.activityFeed.approvalCommentForm.approvalDueDate = Termin
+# Placeholder for due date input
+be.contentSidebar.activityFeed.approvalCommentForm.approvalSelectDate = Wybierz datę
+# Mentioning call to action displayed below the comment input
+be.contentSidebar.activityFeed.approvalCommentForm.atMentionTip = @Wspomnij użytkowników, aby wysłać im powiadomienie.
 # Text for cancel button
-be.commentCancel = Anuluj
-# Error message when a comment creation fails due to a conflict
-be.commentCreateConflictMessage = Ten komentarz już istnieje.
-# Error message when a comment creation fails
-be.commentCreateErrorMessage = Podczas tworzenia komentarza wystąpił błąd.
-# Error message when a comment deletion fails
-be.commentDeleteErrorMessage = Podczas usuwania komentarza wystąpił błąd.
-# Confirmation prompt text to delete comment
-be.commentDeletePrompt = Usunąć komentarz?
+be.contentSidebar.activityFeed.approvalCommentForm.commentCancel = Anuluj
 # Text for post button
-be.commentPost = Opublikuj
-# Comment posted full date time for title
-be.commentPostedFullDateTime = {time, date, full} o godzinie {time, time, short}
-# Show original button for showing original comment
-be.commentShowOriginal = Pokaż oryginalny
-# Translate button for translating comment
-be.commentTranslate = Przetłumacz
+be.contentSidebar.activityFeed.approvalCommentForm.commentPost = Opublikuj
 # Placeholder for comment input
-be.commentWrite = Napisz komentarz
+be.contentSidebar.activityFeed.approvalCommentForm.commentWrite = Napisz komentarz
+# Confirmation prompt text to delete comment
+be.contentSidebar.activityFeed.comment.commentDeletePrompt = Usunąć komentarz?
+# Comment posted full date time for title
+be.contentSidebar.activityFeed.comment.commentPostedFullDateTime = {time, date, full} o godzinie {time, time, short}
+# Show original button for showing original comment
+be.contentSidebar.activityFeed.comment.commentShowOriginal = Pokaż oryginalny
+# Translate button for translating comment
+be.contentSidebar.activityFeed.comment.commentTranslate = Przetłumacz
+# Text to show on menu item to delete task
+be.contentSidebar.activityFeed.comment.taskDeleteMenuItem = Usuń zadanie
+# Confirmation prompt text to delete task
+be.contentSidebar.activityFeed.comment.taskDeletePrompt = Czy na pewno chcesz trwale usunąć to zadanie?
+# Text to show on menu item to edit task
+be.contentSidebar.activityFeed.comment.taskEditMenuItem = Modyfikuj zadanie
+# Title for x icon indicating someone rejected a task
+be.contentSidebar.activityFeed.task.rejectedAssignment = Odrzucono
+# Approve option for a task
+be.contentSidebar.activityFeed.task.taskApprove = Gotowe
+# Due date for a task
+be.contentSidebar.activityFeed.task.taskDueDate = Termin
+# Reject option for a task
+be.contentSidebar.activityFeed.task.taskReject = Odrzuć
+# Tasks for approval
+be.contentSidebar.activityFeed.task.tasksForApproval = Zadania
+# Title shown above error message when a task creation fails
+be.contentSidebar.activityFeed.taskForm.taskCreateErrorTitle = Błąd
+# Error message when a task edit fails
+be.contentSidebar.activityFeed.taskForm.taskUpdateErrorMessage = Podczas modyfikowania tego zadania wystąpił błąd. Spróbuj ponownie.
+# label for cancel button in create task popup
+be.contentSidebar.activityFeed.taskForm.tasksAddTaskFormCancelLabel = Anuluj
+# label for task create form due date input
+be.contentSidebar.activityFeed.taskForm.tasksAddTaskFormDueDateLabel = Termin
+# label for task create form message input
+be.contentSidebar.activityFeed.taskForm.tasksAddTaskFormMessageLabel = Wiadomość
+# label for task create form assignee input
+be.contentSidebar.activityFeed.taskForm.tasksAddTaskFormSelectAssigneesLabel = Wybierz osoby przypisane
+# label for create button in create task modal in create mode
+be.contentSidebar.activityFeed.taskForm.tasksAddTaskFormSubmitLabel = Utwórz
+# label for edit button in create task modal in edit mode
+be.contentSidebar.activityFeed.taskForm.tasksEditTaskFormSubmitLabel = Zaktualizuj
 # Title for checkmark icon indicating someone completed a task
-be.completedAssignment = Zakończono
+be.contentSidebar.activityFeed.taskNew.taskAssignmentCompleted = Zakończono
+# Error message when we failed to load the collaborators when user tries to edit a task
+be.contentSidebar.activityFeed.taskNew.taskCollaboratorLoadErrorMessage = Podczas wczytywania współpracowników wystąpił błąd. Spróbuj ponownie.
+# Label and date for task due date
+be.contentSidebar.activityFeed.taskNew.taskDueDateLabel = Termin: {date}
+# Button name to hide task assignee list
+be.contentSidebar.activityFeed.taskNew.taskShowLessAssignees = Pokaż mniej
+# Button name to expand task assignee list, additionalAssigneeCount is the number of additional task assignees that can be shown.
+be.contentSidebar.activityFeed.taskNew.taskShowMoreAssignees = Show {additionalAssigneeCount} More
+# Button name to expand task assignee list, when there is an unknown number of assignees beyond additionalAssigneeCount.
+be.contentSidebar.activityFeed.taskNew.taskShowMoreAssigneesOverflow = {additionalAssigneeCount, plural, one {Show #+ More} other {Show #+ More}}
+# Approve option for an approval task
+be.contentSidebar.activityFeed.taskNew.tasksFeedApproveAction = Zatwierdź
+# Label for an approved task
+be.contentSidebar.activityFeed.taskNew.tasksFeedApprovedLabel = Zatwierdzone
+# Title for list of all task assignees
+be.contentSidebar.activityFeed.taskNew.tasksFeedAssigneeListTitle = Osoby przypisane
+# Completion option for a general task
+be.contentSidebar.activityFeed.taskNew.tasksFeedCompleteAction = Oznacz jako zakończone
+# Label for a completed task
+be.contentSidebar.activityFeed.taskNew.tasksFeedCompletedLabel = Zakończono
+# Comment headline for an approval task
+be.contentSidebar.activityFeed.taskNew.tasksFeedHeadlineApproval = Użytkownik {user} przypisał zadanie zatwierdzenia
+# Comment headline for an approval task assigned to the current user
+be.contentSidebar.activityFeed.taskNew.tasksFeedHeadlineApprovalCurrentUser = Użytkownik {user} przypisał Ci zadanie zatwierdzenia
+# Comment headline for a general task
+be.contentSidebar.activityFeed.taskNew.tasksFeedHeadlineGeneral = Użytkownik {user} przypisał zadanie
+# Comment headline for a general task assigned to the current user
+be.contentSidebar.activityFeed.taskNew.tasksFeedHeadlineGeneralCurrentUser = Użytkownik {user} przypisał Ci zadanie
+# Label for a task in progress
+be.contentSidebar.activityFeed.taskNew.tasksFeedInProgressLabel = W toku
+# Label for button to expand flyout to see all task assignees
+be.contentSidebar.activityFeed.taskNew.tasksFeedMoreAssigneesLabel = Wyświetl wszystkie osoby przypisane
+# Reject option for an approval task
+be.contentSidebar.activityFeed.taskNew.tasksFeedRejectAction = Odrzuć
+# Label for a rejected task
+be.contentSidebar.activityFeed.taskNew.tasksFeedRejectedLabel = Odrzucono
+# Approved task status, where dateTime is a readable time like "Today at 2pm"
+be.contentSidebar.activityFeed.taskNew.tasksFeedStatusApproved = Zatwierdzone {dateTime}
+# Completed task status, where dateTime is a readable time like "Today at 2pm"
+be.contentSidebar.activityFeed.taskNew.tasksFeedStatusCompleted = Ukończone {dateTime}
+# Label for the task status
+be.contentSidebar.activityFeed.taskNew.tasksFeedStatusLabel = Stan: {taskStatus}
+# Rejected task status, where dateTime is a readable time like "Today at 2pm"
+be.contentSidebar.activityFeed.taskNew.tasksFeedStatusRejected = Odrzucone {dateTime}
+# label for button that opens task popup
+be.contentSidebar.addTask = Dodaj zadanie
+# label for menu item that opens approval task popup
+be.contentSidebar.addTask.approval = Zadanie zatwierdzenia
+# description for menu item that opens approval task popup
+be.contentSidebar.addTask.approval.description = Poproś o zatwierdzenie, aby kontynuować pracę
+# title for approval task popup
+be.contentSidebar.addTask.approval.title = Utwórz zadanie zatwierdzenia
+# label for menu item that opens general task popup
+be.contentSidebar.addTask.general = Zadanie ogólne
+# description for menu item that opens general task popup
+be.contentSidebar.addTask.general.description = Śledź oczekujące zadania
+# title for general task popup
+be.contentSidebar.addTask.general.title = Utwórz zadanie ogólne
+# title for when editing an existing approval task
+be.contentSidebar.editTask.approval.title = Modyfikuj zadanie zatwierdzenia
+# modal title for when editing an existing general task
+be.contentSidebar.editTask.general.title = Modyfikuj zadanie ogólne
 # Label for copy action.
 be.copy = Kopiuj
 # Label for create action.
@@ -214,6 +320,8 @@ be.pointAnnotation = Tryb uwag punktowych
 be.preview = Wyświetl podgląd
 # Error message when Preview fails due to the files call.
 be.previewError = Przepraszamy, nie można wczytać podglądu. Odśwież stronę.
+# Error message when Preview fails due to the files call which is blocked by an access policy.
+be.previewErrorBlockedByPolicy = Your access is restricted due to the classification applied to this content.
 # Message when new preview is available.
 be.previewUpdate = Dostępna jest nowa wersja tego pliku.
 # Previous file button title
@@ -228,8 +336,6 @@ be.priorCollaborator = Wcześniejszy współpracownik
 be.recentsBreadcrumb = Ostatnie
 # Message shown when there are no recent items.
 be.recentsState = Brak ostatnich elementów.
-# Title for x icon indicating someone rejected a task
-be.rejectedAssignment = Odrzucono
 # Label for reload button.
 be.reload = Wczytaj ponownie
 # Label for remove action.
@@ -372,114 +478,6 @@ be.skillUnknownError = Podczas uruchamiania umiejętności lub pobierania danych
 be.sort = Sortuj
 # Label for status skill card in the preview sidebar
 be.statusSkill = Stan
-# Title shown when an error occurs performing an action on a task
-be.taskActionErrorTitle = Błąd
-# Approve option for a task
-be.taskApprove = Gotowe
-# Error message when approving a task fails
-be.taskApproveErrorMessage = Podczas zatwierdzania tego zadania wystąpił błąd. Odśwież stronę i spróbuj ponownie.
-# Error message when we failed to load the collaborators when user tries to edit a task
-be.taskCollaboratorLoadErrorMessage = Podczas wczytywania współpracowników wystąpił błąd. Spróbuj ponownie.
-# Error message when completing a task fails
-be.taskCompleteErrorMessage = Podczas kończenia tego zadania wystąpił błąd. Odśwież stronę i spróbuj ponownie.
-# Error message when a task creation fails
-be.taskCreateErrorMessage = Podczas tworzenia tego zadania wystąpił błąd. Spróbuj ponownie.
-# Title shown above error message when a task creation fails
-be.taskCreateErrorTitle = Błąd
-# Error message when a task deletion fails
-be.taskDeleteErrorMessage = Podczas usuwania tego zadania wystąpił błąd. Odśwież stronę i spróbuj ponownie.
-# Text to show on menu item to delete task
-be.taskDeleteMenuItem = Usuń zadanie
-# Confirmation prompt text to delete task
-be.taskDeletePrompt = Czy na pewno chcesz trwale usunąć to zadanie?
-# Due date for a task
-be.taskDueDate = Termin
-# Error message when a task edit fails
-be.taskEditErrorMessage = Podczas modyfikowania tego zadania wystąpił błąd. Spróbuj ponownie.
-# Text to show on menu item to edit task
-be.taskEditMenuItem = Modyfikuj zadanie
-# Reject option for a task
-be.taskReject = Odrzuć
-# Error message when rejecting a task fails
-be.taskRejectErrorMessage = Podczas odrzucania tego zadania wystąpił błąd. Odśwież stronę i spróbuj ponownie.
-# Button name to hide task assignee list
-be.taskShowLessAssignees = Pokaż mniej
-# Button name to expand task assignee list, additionalAssigneeCount is the number of additional task assignees that can be shown.
-be.taskShowMoreAssignees = Pokaż {additionalAssigneeCount} więcej
-# Button name to expand task assignee list, when there is an unknown number of assignees beyond additionalAssigneeCount.
-be.taskShowMoreAssigneesOverflow = {additionalAssigneeCount, plural, one {Show #+ More} other {Show #+ More}}
-# label for button that opens task popup
-be.tasks.addTask = Dodaj zadanie
-# label for menu item that opens approval task popup
-be.tasks.addTask.approval = Zadanie zatwierdzenia
-# description for menu item that opens approval task popup
-be.tasks.addTask.approval.description = Poproś o zatwierdzenie, aby kontynuować pracę
-# label for menu item that opens general task popup
-be.tasks.addTask.general = Zadanie ogólne
-# description for menu item that opens general task popup
-be.tasks.addTask.general.description = Śledź oczekujące zadania
-# label for cancel button in create task popup
-be.tasks.addTaskForm.cancel = Anuluj
-# label for task create form due date input
-be.tasks.addTaskForm.dueDateLabel = Termin
-# label for task create form message input
-be.tasks.addTaskForm.messageLabel = Wiadomość
-# label for task create form assignee input
-be.tasks.addTaskForm.selectAssigneesLabel = Wybierz osoby przypisane
-# label for create button in create task modal in create mode
-be.tasks.addTaskForm.submit = Utwórz
-# title for approval task popup
-be.tasks.createTask.approval.title = Utwórz zadanie zatwierdzenia
-# title for general task popup
-be.tasks.createTask.general.title = Utwórz zadanie ogólne
-# title for when editing an existing approval task
-be.tasks.editTask.approval.title = Modyfikuj zadanie zatwierdzenia
-# modal title for when editing an existing general task
-be.tasks.editTask.general.title = Modyfikuj zadanie ogólne
-# label for edit button in create task modal in edit mode
-be.tasks.editTaskForm.submit = Zaktualizuj
-# Approve option for an approval task
-be.tasks.feed.approveAction = Zatwierdź
-# Label for an approved task
-be.tasks.feed.approvedLabel = Zatwierdzone
-# Title for list of all task assignees
-be.tasks.feed.assigneeList.title = Osoby przypisane
-# Completion option for a general task
-be.tasks.feed.completeAction = Oznacz jako zakończone
-# Label for a completed task
-be.tasks.feed.completedLabel = Ukończone
-# Comment headline for an approval task
-be.tasks.feed.headline.approval = Użytkownik {user} przypisał zadanie zatwierdzenia
-# Comment headline for an approval task assigned to the current user
-be.tasks.feed.headline.approval.currentUser = Użytkownik {user} przypisał Ci zadanie zatwierdzenia
-# Comment headline for a general task
-be.tasks.feed.headline.general = Użytkownik {user} przypisał zadanie
-# Comment headline for a general task assigned to the current user
-be.tasks.feed.headline.general.currentUser = Użytkownik {user} przypisał Ci zadanie
-# Label for a task in progress
-be.tasks.feed.inProgressLabel = W toku
-# Label for button to expand flyout to see all task assignees
-be.tasks.feed.moreAssigneesLabel = Wyświetl wszystkie osoby przypisane
-# Reject option for an approval task
-be.tasks.feed.rejectAction = Odrzuć
-# Label for a rejected task
-be.tasks.feed.rejectedLabel = Odrzucone
-# Label for the task status
-be.tasks.feed.statusLabel = Stan: {taskStatus}
-# Approved task status, where dateTime is a readable time like "Today at 2pm"
-be.tasks.status.approved = Zatwierdzone {dateTime}
-# Completed task status, where dateTime is a readable time like "Today at 2pm"
-be.tasks.status.completed = Ukończone {dateTime}
-# Task status when in progress
-be.tasks.status.inProgress = Oczekiwanie
-# Task status when not started
-be.tasks.status.notStarted = Oczekiwanie
-# Rejected task status, where dateTime is a readable time like "Today at 2pm"
-be.tasks.status.rejected = Odrzucone {dateTime}
-# Label and date for task due date
-be.tasks.taskDueDate = Termin: {date}
-# Tasks for approval
-be.tasksForApproval = Zadania
 # Shown instead of todays date.
 be.today = dziś
 # Label for keywords/topics skill section in the preview sidebar
