--- a/i18n/sv-SE.properties
+++ b/i18n/sv-SE.properties
@@ -4,6 +4,24 @@ be.accessStatsPermissionsError = Tyvärr, du har inte behörighet att se åtkoms
 be.activityFeedItemApiError = Ett problem uppstod när aktivetsflödet lästes in. Uppdatera sidan eller försök senare.
 # Label for add action
 be.add = Lägg till
+# Error message when a comment creation fails due to a conflict
+be.api.commentCreateConflictMessage = Den här kommentaren finns redan.
+# Error message when a comment creation fails
+be.api.commentCreateErrorMessage = Ett fel inträffade när kommentaren skulle skapas.
+# Error message when a comment deletion fails
+be.api.commentDeleteErrorMessage = Ett fel inträffade när kommentaren skulle raderas.
+# Title shown when an error occurs performing an action on a task
+be.api.taskActionErrorTitle = Fel
+# Error message when approving a task fails
+be.api.taskApproveErrorMessage = Ett fel inträffade när uppgiften godkändes. Uppdatera sidan och försök igen.
+# Error message when completing a task fails
+be.api.taskCompleteErrorMessage = Ett fel inträffade när uppgiften slutfördes. Uppdatera sidan och försök igen.
+# Error message when a task creation fails
+be.api.taskCreateErrorMessage = Ett fel uppstod när uppgiften skapades. Försök igen.
+# Error message when a task deletion fails
+be.api.taskDeleteErrorMessage = Ett fel inträffade när uppgiften raderades. Uppdatera sidan och försök igen.
+# Error message when rejecting a task fails
+be.api.taskRejectErrorMessage = Ett fel inträffade när uppgiften avvisades. Uppdatera sidan och försök igen.
 # Alt message if app activity icon is missing or cannot load
 be.appActivityAltIcon = Ikon för {appActivityName}
 # App Activity created at full date time for title
@@ -12,20 +30,6 @@ be.appActivityCreatedAtFullDateTime = {time, date, full} vid {time, time, short}
 be.appActivityDeleteErrorMessage = Ett fel inträffade när objektet skulle raderas.
 # Confirmation prompt text to delete app activity
 be.appActivityDeletePrompt = Ta bort Appaktivitet?
-# Placeholder for approvers input
-be.approvalAddAssignee = Lägg till en tilldelad
-# Label for checkbox to add approvers to a comment
-be.approvalAddTask = Lägg till uppgift
-# Tooltip text for checkbox to add approvers to a comment
-be.approvalAddTaskTooltip = När någon tilldelas en uppgift skickas ett meddelande med text i kommentarrutan som personen kan godkänna eller neka.
-# Title for assignees input
-be.approvalAssignees = Delegerade
-# Title for approvers due date input
-be.approvalDueDate = Förfallodatum
-# Placeholder for due date input
-be.approvalSelectDate = Välj ett datum
-# Mentioning call to action displayed below the comment input
-be.atMentionTip = Använd @nämn om du vill meddela användare.
 # Label for back button
 be.back = Tillbaka
 # Message when Box Tools cannot open a particular file type
@@ -40,28 +44,130 @@ be.choose = Välj
 be.close = Stäng
 # Message to the user to collapse the Transcript entries
 be.collapse = Komprimera
+# Placeholder for approvers input
+be.contentSidebar.activityFeed.approvalCommentForm.approvalAddAssignee = Lägg till en tilldelad
+# Label for checkbox to add approvers to a comment
+be.contentSidebar.activityFeed.approvalCommentForm.approvalAddTask = Lägg till uppgift
+# Tooltip text for checkbox to add approvers to a comment
+be.contentSidebar.activityFeed.approvalCommentForm.approvalAddTaskTooltip = När någon tilldelas en uppgift skickas ett meddelande med text i kommentarrutan som personen kan godkänna eller neka.
+# Title for assignees input
+be.contentSidebar.activityFeed.approvalCommentForm.approvalAssignees = Delegerade
+# Title for approvers due date input
+be.contentSidebar.activityFeed.approvalCommentForm.approvalDueDate = Förfallodatum
+# Placeholder for due date input
+be.contentSidebar.activityFeed.approvalCommentForm.approvalSelectDate = Välj ett datum
+# Mentioning call to action displayed below the comment input
+be.contentSidebar.activityFeed.approvalCommentForm.atMentionTip = Använd @nämn om du vill meddela användare.
 # Text for cancel button
-be.commentCancel = Avbryt
-# Error message when a comment creation fails due to a conflict
-be.commentCreateConflictMessage = Den här kommentaren finns redan.
-# Error message when a comment creation fails
-be.commentCreateErrorMessage = Ett fel inträffade när kommentaren skulle skapas.
-# Error message when a comment deletion fails
-be.commentDeleteErrorMessage = Ett fel inträffade när kommentaren skulle raderas.
-# Confirmation prompt text to delete comment
-be.commentDeletePrompt = Radera kommentar?
+be.contentSidebar.activityFeed.approvalCommentForm.commentCancel = Avbryt
 # Text for post button
-be.commentPost = Publicera
-# Comment posted full date time for title
-be.commentPostedFullDateTime = {time, date, full} vid {time, time, short}
-# Show original button for showing original comment
-be.commentShowOriginal = Visa original
-# Translate button for translating comment
-be.commentTranslate = Översätt
+be.contentSidebar.activityFeed.approvalCommentForm.commentPost = Publicera
 # Placeholder for comment input
-be.commentWrite = Skriv en kommentar
+be.contentSidebar.activityFeed.approvalCommentForm.commentWrite = Skriv en kommentar
+# Confirmation prompt text to delete comment
+be.contentSidebar.activityFeed.comment.commentDeletePrompt = Radera kommentar?
+# Comment posted full date time for title
+be.contentSidebar.activityFeed.comment.commentPostedFullDateTime = {time, date, full} vid {time, time, short}
+# Show original button for showing original comment
+be.contentSidebar.activityFeed.comment.commentShowOriginal = Visa original
+# Translate button for translating comment
+be.contentSidebar.activityFeed.comment.commentTranslate = Översätt
+# Text to show on menu item to delete task
+be.contentSidebar.activityFeed.comment.taskDeleteMenuItem = Radera uppgift
+# Confirmation prompt text to delete task
+be.contentSidebar.activityFeed.comment.taskDeletePrompt = Vill du radera den här uppgiften permanent?
+# Text to show on menu item to edit task
+be.contentSidebar.activityFeed.comment.taskEditMenuItem = Modifiera uppgiften
+# Title for x icon indicating someone rejected a task
+be.contentSidebar.activityFeed.task.rejectedAssignment = Avvisat
+# Approve option for a task
+be.contentSidebar.activityFeed.task.taskApprove = Slutför
+# Due date for a task
+be.contentSidebar.activityFeed.task.taskDueDate = Förfaller
+# Reject option for a task
+be.contentSidebar.activityFeed.task.taskReject = Avvisa
+# Tasks for approval
+be.contentSidebar.activityFeed.task.tasksForApproval = Uppgifter
+# Title shown above error message when a task creation fails
+be.contentSidebar.activityFeed.taskForm.taskCreateErrorTitle = Fel
+# Error message when a task edit fails
+be.contentSidebar.activityFeed.taskForm.taskUpdateErrorMessage = Ett fel uppstod när uppgiften ändrades. Försök igen.
+# label for cancel button in create task popup
+be.contentSidebar.activityFeed.taskForm.tasksAddTaskFormCancelLabel = Avbryt
+# label for task create form due date input
+be.contentSidebar.activityFeed.taskForm.tasksAddTaskFormDueDateLabel = Förfallodatum
+# label for task create form message input
+be.contentSidebar.activityFeed.taskForm.tasksAddTaskFormMessageLabel = Meddelande
+# label for task create form assignee input
+be.contentSidebar.activityFeed.taskForm.tasksAddTaskFormSelectAssigneesLabel = Välj tilldelade
+# label for create button in create task modal in create mode
+be.contentSidebar.activityFeed.taskForm.tasksAddTaskFormSubmitLabel = Skapa
+# label for edit button in create task modal in edit mode
+be.contentSidebar.activityFeed.taskForm.tasksEditTaskFormSubmitLabel = Uppdatera
 # Title for checkmark icon indicating someone completed a task
-be.completedAssignment = Klar
+be.contentSidebar.activityFeed.taskNew.taskAssignmentCompleted = Klar
+# Error message when we failed to load the collaborators when user tries to edit a task
+be.contentSidebar.activityFeed.taskNew.taskCollaboratorLoadErrorMessage = Ett fel uppstod när medarbetare lästes in för den här uppgiften. Försök igen.
+# Label and date for task due date
+be.contentSidebar.activityFeed.taskNew.taskDueDateLabel = Förfaller: {date}
+# Button name to hide task assignee list
+be.contentSidebar.activityFeed.taskNew.taskShowLessAssignees = Visa mindre
+# Button name to expand task assignee list, additionalAssigneeCount is the number of additional task assignees that can be shown.
+be.contentSidebar.activityFeed.taskNew.taskShowMoreAssignees = Show {additionalAssigneeCount} More
+# Button name to expand task assignee list, when there is an unknown number of assignees beyond additionalAssigneeCount.
+be.contentSidebar.activityFeed.taskNew.taskShowMoreAssigneesOverflow = {additionalAssigneeCount, plural, one {Show #+ More} other {Show #+ More}}
+# Approve option for an approval task
+be.contentSidebar.activityFeed.taskNew.tasksFeedApproveAction = Godkänn
+# Label for an approved task
+be.contentSidebar.activityFeed.taskNew.tasksFeedApprovedLabel = Godkänt
+# Title for list of all task assignees
+be.contentSidebar.activityFeed.taskNew.tasksFeedAssigneeListTitle = Delegerade
+# Completion option for a general task
+be.contentSidebar.activityFeed.taskNew.tasksFeedCompleteAction = Markera som slutförd
+# Label for a completed task
+be.contentSidebar.activityFeed.taskNew.tasksFeedCompletedLabel = Klar
+# Comment headline for an approval task
+be.contentSidebar.activityFeed.taskNew.tasksFeedHeadlineApproval = {user} tilldelade en godkännandeuppgift
+# Comment headline for an approval task assigned to the current user
+be.contentSidebar.activityFeed.taskNew.tasksFeedHeadlineApprovalCurrentUser = {user} har tilldelat dig en godkännandeuppgift
+# Comment headline for a general task
+be.contentSidebar.activityFeed.taskNew.tasksFeedHeadlineGeneral = {user} tilldelade en uppgift
+# Comment headline for a general task assigned to the current user
+be.contentSidebar.activityFeed.taskNew.tasksFeedHeadlineGeneralCurrentUser = {user} har tilldelat dig en uppgift
+# Label for a task in progress
+be.contentSidebar.activityFeed.taskNew.tasksFeedInProgressLabel = Pågår
+# Label for button to expand flyout to see all task assignees
+be.contentSidebar.activityFeed.taskNew.tasksFeedMoreAssigneesLabel = Se alla tilldelade
+# Reject option for an approval task
+be.contentSidebar.activityFeed.taskNew.tasksFeedRejectAction = Avvisa
+# Label for a rejected task
+be.contentSidebar.activityFeed.taskNew.tasksFeedRejectedLabel = Avvisat
+# Approved task status, where dateTime is a readable time like "Today at 2pm"
+be.contentSidebar.activityFeed.taskNew.tasksFeedStatusApproved = Godkänd {dateTime}
+# Completed task status, where dateTime is a readable time like "Today at 2pm"
+be.contentSidebar.activityFeed.taskNew.tasksFeedStatusCompleted = Klart {dateTime}
+# Label for the task status
+be.contentSidebar.activityFeed.taskNew.tasksFeedStatusLabel = Status: {taskStatus}
+# Rejected task status, where dateTime is a readable time like "Today at 2pm"
+be.contentSidebar.activityFeed.taskNew.tasksFeedStatusRejected = Avvisat {dateTime}
+# label for button that opens task popup
+be.contentSidebar.addTask = Lägg till uppgift
+# label for menu item that opens approval task popup
+be.contentSidebar.addTask.approval = Godkännandeuppgift
+# description for menu item that opens approval task popup
+be.contentSidebar.addTask.approval.description = Begär ett godkännande för att flytta arbetet framåt
+# title for approval task popup
+be.contentSidebar.addTask.approval.title = Skapa godkännandeuppgift
+# label for menu item that opens general task popup
+be.contentSidebar.addTask.general = Allmän uppgift
+# description for menu item that opens general task popup
+be.contentSidebar.addTask.general.description = Spåra arbete som behöver utföras
+# title for general task popup
+be.contentSidebar.addTask.general.title = Skapa allmän uppgift
+# title for when editing an existing approval task
+be.contentSidebar.editTask.approval.title = Ändra godkännandeuppgift
+# modal title for when editing an existing general task
+be.contentSidebar.editTask.general.title = Ändra allmän uppgift
 # Label for copy action.
 be.copy = Kopiera
 # Label for create action.
@@ -214,6 +320,8 @@ be.pointAnnotation = Läge för punktanteckningar
 be.preview = Förhandsgranska
 # Error message when Preview fails due to the files call.
 be.previewError = Det gick inte att läsa in förhandsgranskningen. Uppdatera sidan.
+# Error message when Preview fails due to the files call which is blocked by an access policy.
+be.previewErrorBlockedByPolicy = Your access is restricted due to the classification applied to this content.
 # Message when new preview is available.
 be.previewUpdate = En nyare version av filen är tillgänglig.
 # Previous file button title
@@ -228,8 +336,6 @@ be.priorCollaborator = En tidigare medarbetare
 be.recentsBreadcrumb = Senaste
 # Message shown when there are no recent items.
 be.recentsState = Det finns inga senaste objekt ännu.
-# Title for x icon indicating someone rejected a task
-be.rejectedAssignment = Avvisat
 # Label for reload button.
 be.reload = Ladda om
 # Label for remove action.
@@ -372,114 +478,6 @@ be.skillUnknownError = Något gick fel när funktionen kördes eller när dess d
 be.sort = Sortera
 # Label for status skill card in the preview sidebar
 be.statusSkill = Status
-# Title shown when an error occurs performing an action on a task
-be.taskActionErrorTitle = Fel
-# Approve option for a task
-be.taskApprove = Slutför
-# Error message when approving a task fails
-be.taskApproveErrorMessage = Ett fel inträffade när uppgiften godkändes. Uppdatera sidan och försök igen.
-# Error message when we failed to load the collaborators when user tries to edit a task
-be.taskCollaboratorLoadErrorMessage = Ett fel uppstod när medarbetare lästes in för den här uppgiften. Försök igen.
-# Error message when completing a task fails
-be.taskCompleteErrorMessage = Ett fel inträffade när uppgiften slutfördes. Uppdatera sidan och försök igen.
-# Error message when a task creation fails
-be.taskCreateErrorMessage = Ett fel uppstod när uppgiften skapades. Försök igen.
-# Title shown above error message when a task creation fails
-be.taskCreateErrorTitle = Fel
-# Error message when a task deletion fails
-be.taskDeleteErrorMessage = Ett fel inträffade när uppgiften raderades. Uppdatera sidan och försök igen.
-# Text to show on menu item to delete task
-be.taskDeleteMenuItem = Radera uppgift
-# Confirmation prompt text to delete task
-be.taskDeletePrompt = Vill du radera den här uppgiften permanent?
-# Due date for a task
-be.taskDueDate = Förfaller
-# Error message when a task edit fails
-be.taskEditErrorMessage = Ett fel uppstod när uppgiften ändrades. Försök igen.
-# Text to show on menu item to edit task
-be.taskEditMenuItem = Modifiera uppgiften
-# Reject option for a task
-be.taskReject = Avvisa
-# Error message when rejecting a task fails
-be.taskRejectErrorMessage = Ett fel inträffade när uppgiften avvisades. Uppdatera sidan och försök igen.
-# Button name to hide task assignee list
-be.taskShowLessAssignees = Visa mindre
-# Button name to expand task assignee list, additionalAssigneeCount is the number of additional task assignees that can be shown.
-be.taskShowMoreAssignees = Visa {additionalAssigneeCount} mer
-# Button name to expand task assignee list, when there is an unknown number of assignees beyond additionalAssigneeCount.
-be.taskShowMoreAssigneesOverflow = {additionalAssigneeCount, plural, one {Show #+ More} other {Show #+ More}}
-# label for button that opens task popup
-be.tasks.addTask = Lägg till uppgift
-# label for menu item that opens approval task popup
-be.tasks.addTask.approval = Godkännandeuppgift
-# description for menu item that opens approval task popup
-be.tasks.addTask.approval.description = Begär ett godkännande för att flytta arbetet framåt
-# label for menu item that opens general task popup
-be.tasks.addTask.general = Allmän uppgift
-# description for menu item that opens general task popup
-be.tasks.addTask.general.description = Spåra arbete som behöver utföras
-# label for cancel button in create task popup
-be.tasks.addTaskForm.cancel = Avbryt
-# label for task create form due date input
-be.tasks.addTaskForm.dueDateLabel = Förfallodatum
-# label for task create form message input
-be.tasks.addTaskForm.messageLabel = Meddelande
-# label for task create form assignee input
-be.tasks.addTaskForm.selectAssigneesLabel = Välj tilldelade
-# label for create button in create task modal in create mode
-be.tasks.addTaskForm.submit = Skapa
-# title for approval task popup
-be.tasks.createTask.approval.title = Skapa godkännandeuppgift
-# title for general task popup
-be.tasks.createTask.general.title = Skapa allmän uppgift
-# title for when editing an existing approval task
-be.tasks.editTask.approval.title = Ändra godkännandeuppgift
-# modal title for when editing an existing general task
-be.tasks.editTask.general.title = Ändra allmän uppgift
-# label for edit button in create task modal in edit mode
-be.tasks.editTaskForm.submit = Uppdatera
-# Approve option for an approval task
-be.tasks.feed.approveAction = Godkänn
-# Label for an approved task
-be.tasks.feed.approvedLabel = Godkänt
-# Title for list of all task assignees
-be.tasks.feed.assigneeList.title = Delegerade
-# Completion option for a general task
-be.tasks.feed.completeAction = Markera som slutförd
-# Label for a completed task
-be.tasks.feed.completedLabel = Klart
-# Comment headline for an approval task
-be.tasks.feed.headline.approval = {user} tilldelade en godkännandeuppgift
-# Comment headline for an approval task assigned to the current user
-be.tasks.feed.headline.approval.currentUser = {user} har tilldelat dig en godkännandeuppgift
-# Comment headline for a general task
-be.tasks.feed.headline.general = {user} tilldelade en uppgift
-# Comment headline for a general task assigned to the current user
-be.tasks.feed.headline.general.currentUser = {user} har tilldelat dig en uppgift
-# Label for a task in progress
-be.tasks.feed.inProgressLabel = Pågår
-# Label for button to expand flyout to see all task assignees
-be.tasks.feed.moreAssigneesLabel = Se alla tilldelade
-# Reject option for an approval task
-be.tasks.feed.rejectAction = Avvisa
-# Label for a rejected task
-be.tasks.feed.rejectedLabel = Avvisat
-# Label for the task status
-be.tasks.feed.statusLabel = Status: {taskStatus}
-# Approved task status, where dateTime is a readable time like "Today at 2pm"
-be.tasks.status.approved = Godkänd {dateTime}
-# Completed task status, where dateTime is a readable time like "Today at 2pm"
-be.tasks.status.completed = Klart {dateTime}
-# Task status when in progress
-be.tasks.status.inProgress = Väntande
-# Task status when not started
-be.tasks.status.notStarted = Väntande
-# Rejected task status, where dateTime is a readable time like "Today at 2pm"
-be.tasks.status.rejected = Avvisat {dateTime}
-# Label and date for task due date
-be.tasks.taskDueDate = Förfaller: {date}
-# Tasks for approval
-be.tasksForApproval = Uppgifter
 # Shown instead of todays date.
 be.today = idag
 # Label for keywords/topics skill section in the preview sidebar
