--- a/i18n/tr-TR.properties
+++ b/i18n/tr-TR.properties
@@ -4,6 +4,24 @@ be.accessStatsPermissionsError = Üzgünüz, bu dosyanın erişim istatistikleri
 be.activityFeedItemApiError = Etkinlik akışı yüklenirken bir sorun oluştu. Lütfen sayfayı yenileyin veya daha sonra tekrar deneyin.
 # Label for add action
 be.add = Ekle
+# Error message when a comment creation fails due to a conflict
+be.api.commentCreateConflictMessage = Bu yorum zaten yapılmış.
+# Error message when a comment creation fails
+be.api.commentCreateErrorMessage = Bu yorum oluşturulurken bir hata oluştu.
+# Error message when a comment deletion fails
+be.api.commentDeleteErrorMessage = Bu yorum silinirken bir hata oluştu.
+# Title shown when an error occurs performing an action on a task
+be.api.taskActionErrorTitle = Hata
+# Error message when approving a task fails
+be.api.taskApproveErrorMessage = Bu görev onaylanırken bir hata oluştu. Lütfen sayfayı yenileyin ve tekrar deneyin.
+# Error message when completing a task fails
+be.api.taskCompleteErrorMessage = Bu görev tamamlanırken bir hata oluştu. Lütfen sayfayı yenileyin ve tekrar deneyin.
+# Error message when a task creation fails
+be.api.taskCreateErrorMessage = Bu görev oluşturulurken bir hata oluştu. Lütfen tekrar deneyin.
+# Error message when a task deletion fails
+be.api.taskDeleteErrorMessage = Bu görev silinirken bir hata oluştu. Lütfen sayfayı yenileyin ve tekrar deneyin.
+# Error message when rejecting a task fails
+be.api.taskRejectErrorMessage = Bu görev reddedilirken bir hata oluştu. Lütfen sayfayı yenileyin ve tekrar deneyin.
 # Alt message if app activity icon is missing or cannot load
 be.appActivityAltIcon = {appActivityName} Simgesi
 # App Activity created at full date time for title
@@ -12,20 +30,6 @@ be.appActivityCreatedAtFullDateTime = {time, date, full}, {time, time, short}
 be.appActivityDeleteErrorMessage = Bu öğe silinirken bir hata oluştu.
 # Confirmation prompt text to delete app activity
 be.appActivityDeletePrompt = Uygulama Etkinliği silinsin mi?
-# Placeholder for approvers input
-be.approvalAddAssignee = Atanan ekleyin
-# Label for checkbox to add approvers to a comment
-be.approvalAddTask = Görev ekleyin
-# Tooltip text for checkbox to add approvers to a comment
-be.approvalAddTaskTooltip = Bir kişiye görev atandığında, kişiye yorum kutusundaki mesaj şeklinde bir bildirim iletilir; kişi görevi onaylayabilir ya da reddedebilir.
-# Title for assignees input
-be.approvalAssignees = Atananlar
-# Title for approvers due date input
-be.approvalDueDate = Bitiş Tarihi
-# Placeholder for due date input
-be.approvalSelectDate = Bir tarih seçin
-# Mentioning call to action displayed below the comment input
-be.atMentionTip = Bildirim alması için kullanıcılardan @bahsedin.
 # Label for back button
 be.back = Geri
 # Message when Box Tools cannot open a particular file type
@@ -40,28 +44,130 @@ be.choose = Seç
 be.close = Kapat
 # Message to the user to collapse the Transcript entries
 be.collapse = Daralt
+# Placeholder for approvers input
+be.contentSidebar.activityFeed.approvalCommentForm.approvalAddAssignee = Atanan ekleyin
+# Label for checkbox to add approvers to a comment
+be.contentSidebar.activityFeed.approvalCommentForm.approvalAddTask = Görev ekleyin
+# Tooltip text for checkbox to add approvers to a comment
+be.contentSidebar.activityFeed.approvalCommentForm.approvalAddTaskTooltip = Bir kişiye görev atandığında, kişiye yorum kutusundaki mesaj şeklinde bir bildirim iletilir; kişi görevi onaylayabilir ya da reddedebilir.
+# Title for assignees input
+be.contentSidebar.activityFeed.approvalCommentForm.approvalAssignees = Atananlar
+# Title for approvers due date input
+be.contentSidebar.activityFeed.approvalCommentForm.approvalDueDate = Bitiş Tarihi
+# Placeholder for due date input
+be.contentSidebar.activityFeed.approvalCommentForm.approvalSelectDate = Bir tarih seçin
+# Mentioning call to action displayed below the comment input
+be.contentSidebar.activityFeed.approvalCommentForm.atMentionTip = Bildirim alması için kullanıcılardan @bahsedin.
 # Text for cancel button
-be.commentCancel = İptal
-# Error message when a comment creation fails due to a conflict
-be.commentCreateConflictMessage = Bu yorum zaten yapılmış.
-# Error message when a comment creation fails
-be.commentCreateErrorMessage = Bu yorum oluşturulurken bir hata oluştu.
-# Error message when a comment deletion fails
-be.commentDeleteErrorMessage = Bu yorum silinirken bir hata oluştu.
-# Confirmation prompt text to delete comment
-be.commentDeletePrompt = Yorum silinsin mi?
+be.contentSidebar.activityFeed.approvalCommentForm.commentCancel = İptal
 # Text for post button
-be.commentPost = Gönder
-# Comment posted full date time for title
-be.commentPostedFullDateTime = {time, date, full}, {time, time, short}
-# Show original button for showing original comment
-be.commentShowOriginal = Orijinali Göster
-# Translate button for translating comment
-be.commentTranslate = Çevir
+be.contentSidebar.activityFeed.approvalCommentForm.commentPost = Gönder
 # Placeholder for comment input
-be.commentWrite = Bir yorum yazın
+be.contentSidebar.activityFeed.approvalCommentForm.commentWrite = Bir yorum yazın
+# Confirmation prompt text to delete comment
+be.contentSidebar.activityFeed.comment.commentDeletePrompt = Yorum silinsin mi?
+# Comment posted full date time for title
+be.contentSidebar.activityFeed.comment.commentPostedFullDateTime = {time, date, full}, {time, time, short}
+# Show original button for showing original comment
+be.contentSidebar.activityFeed.comment.commentShowOriginal = Orijinali Göster
+# Translate button for translating comment
+be.contentSidebar.activityFeed.comment.commentTranslate = Çevir
+# Text to show on menu item to delete task
+be.contentSidebar.activityFeed.comment.taskDeleteMenuItem = Görevi sil
+# Confirmation prompt text to delete task
+be.contentSidebar.activityFeed.comment.taskDeletePrompt = Bu görevi kalıcı olarak silmek istediğinizden emin misiniz?
+# Text to show on menu item to edit task
+be.contentSidebar.activityFeed.comment.taskEditMenuItem = Görevi değiştir
+# Title for x icon indicating someone rejected a task
+be.contentSidebar.activityFeed.task.rejectedAssignment = Reddedildi
+# Approve option for a task
+be.contentSidebar.activityFeed.task.taskApprove = Tamamla
+# Due date for a task
+be.contentSidebar.activityFeed.task.taskDueDate = Son Tarih
+# Reject option for a task
+be.contentSidebar.activityFeed.task.taskReject = Geri Çevir
+# Tasks for approval
+be.contentSidebar.activityFeed.task.tasksForApproval = Görevler
+# Title shown above error message when a task creation fails
+be.contentSidebar.activityFeed.taskForm.taskCreateErrorTitle = Hata
+# Error message when a task edit fails
+be.contentSidebar.activityFeed.taskForm.taskUpdateErrorMessage = Bu görev değiştirilirken bir hata oluştu. Lütfen tekrar deneyin.
+# label for cancel button in create task popup
+be.contentSidebar.activityFeed.taskForm.tasksAddTaskFormCancelLabel = İptal
+# label for task create form due date input
+be.contentSidebar.activityFeed.taskForm.tasksAddTaskFormDueDateLabel = Bitiş Tarihi
+# label for task create form message input
+be.contentSidebar.activityFeed.taskForm.tasksAddTaskFormMessageLabel = Mesaj
+# label for task create form assignee input
+be.contentSidebar.activityFeed.taskForm.tasksAddTaskFormSelectAssigneesLabel = Atananları Seçin
+# label for create button in create task modal in create mode
+be.contentSidebar.activityFeed.taskForm.tasksAddTaskFormSubmitLabel = Oluştur
+# label for edit button in create task modal in edit mode
+be.contentSidebar.activityFeed.taskForm.tasksEditTaskFormSubmitLabel = Güncelle
 # Title for checkmark icon indicating someone completed a task
-be.completedAssignment = Tamamlandı
+be.contentSidebar.activityFeed.taskNew.taskAssignmentCompleted = Tamamlandı
+# Error message when we failed to load the collaborators when user tries to edit a task
+be.contentSidebar.activityFeed.taskNew.taskCollaboratorLoadErrorMessage = Bu görev için işbirlikçiler yüklenirken bir hata oluştu. Lütfen tekrar deneyin.
+# Label and date for task due date
+be.contentSidebar.activityFeed.taskNew.taskDueDateLabel = Son tarih: {date}
+# Button name to hide task assignee list
+be.contentSidebar.activityFeed.taskNew.taskShowLessAssignees = Daha Az Göster
+# Button name to expand task assignee list, additionalAssigneeCount is the number of additional task assignees that can be shown.
+be.contentSidebar.activityFeed.taskNew.taskShowMoreAssignees = Show {additionalAssigneeCount} More
+# Button name to expand task assignee list, when there is an unknown number of assignees beyond additionalAssigneeCount.
+be.contentSidebar.activityFeed.taskNew.taskShowMoreAssigneesOverflow = {additionalAssigneeCount, plural, one {Show #+ More} other {Show #+ More}}
+# Approve option for an approval task
+be.contentSidebar.activityFeed.taskNew.tasksFeedApproveAction = Onayla
+# Label for an approved task
+be.contentSidebar.activityFeed.taskNew.tasksFeedApprovedLabel = Onaylandı
+# Title for list of all task assignees
+be.contentSidebar.activityFeed.taskNew.tasksFeedAssigneeListTitle = Atananlar
+# Completion option for a general task
+be.contentSidebar.activityFeed.taskNew.tasksFeedCompleteAction = Tamamlandı Olarak İşaretle
+# Label for a completed task
+be.contentSidebar.activityFeed.taskNew.tasksFeedCompletedLabel = Tamamlandı
+# Comment headline for an approval task
+be.contentSidebar.activityFeed.taskNew.tasksFeedHeadlineApproval = {user}, bir Onay Görevi atadı
+# Comment headline for an approval task assigned to the current user
+be.contentSidebar.activityFeed.taskNew.tasksFeedHeadlineApprovalCurrentUser = {user}, size bir Onay Görevi atadı
+# Comment headline for a general task
+be.contentSidebar.activityFeed.taskNew.tasksFeedHeadlineGeneral = {user}, bir görev atadı
+# Comment headline for a general task assigned to the current user
+be.contentSidebar.activityFeed.taskNew.tasksFeedHeadlineGeneralCurrentUser = {user}, size bir Görev atadı
+# Label for a task in progress
+be.contentSidebar.activityFeed.taskNew.tasksFeedInProgressLabel = Sürüyor
+# Label for button to expand flyout to see all task assignees
+be.contentSidebar.activityFeed.taskNew.tasksFeedMoreAssigneesLabel = Tüm atananları gör
+# Reject option for an approval task
+be.contentSidebar.activityFeed.taskNew.tasksFeedRejectAction = Reddet
+# Label for a rejected task
+be.contentSidebar.activityFeed.taskNew.tasksFeedRejectedLabel = Reddedildi
+# Approved task status, where dateTime is a readable time like "Today at 2pm"
+be.contentSidebar.activityFeed.taskNew.tasksFeedStatusApproved = Onaylandı: {dateTime}
+# Completed task status, where dateTime is a readable time like "Today at 2pm"
+be.contentSidebar.activityFeed.taskNew.tasksFeedStatusCompleted = Tamamlandı: {dateTime}
+# Label for the task status
+be.contentSidebar.activityFeed.taskNew.tasksFeedStatusLabel = Durum: {taskStatus}
+# Rejected task status, where dateTime is a readable time like "Today at 2pm"
+be.contentSidebar.activityFeed.taskNew.tasksFeedStatusRejected = Reddedildi: {dateTime}
+# label for button that opens task popup
+be.contentSidebar.addTask = Görev ekleyin
+# label for menu item that opens approval task popup
+be.contentSidebar.addTask.approval = Onay Görevi
+# description for menu item that opens approval task popup
+be.contentSidebar.addTask.approval.description = İşi ilerletmek için onay isteyin
+# title for approval task popup
+be.contentSidebar.addTask.approval.title = Onay Görevi Oluşturun
+# label for menu item that opens general task popup
+be.contentSidebar.addTask.general = Genel Görev
+# description for menu item that opens general task popup
+be.contentSidebar.addTask.general.description = Yapılması gereken işleri takip edin
+# title for general task popup
+be.contentSidebar.addTask.general.title = Genel Görev Oluşturun
+# title for when editing an existing approval task
+be.contentSidebar.editTask.approval.title = Onay Görevini Değiştirin
+# modal title for when editing an existing general task
+be.contentSidebar.editTask.general.title = Genel Görevi Değiştirin
 # Label for copy action.
 be.copy = Kopyala
 # Label for create action.
@@ -214,6 +320,8 @@ be.pointAnnotation = Nokta açıklaması modu
 be.preview = Ön Görüntüle
 # Error message when Preview fails due to the files call.
 be.previewError = Üzgünüz, ön görüntüleme yüklenmedi. Lütfen sayfayı yenileyin.
+# Error message when Preview fails due to the files call which is blocked by an access policy.
+be.previewErrorBlockedByPolicy = Your access is restricted due to the classification applied to this content.
 # Message when new preview is available.
 be.previewUpdate = Bu dosyanın yeni bir sürümü mevcut.
 # Previous file button title
@@ -228,8 +336,6 @@ be.priorCollaborator = Eski Bir İşbirlikçi
 be.recentsBreadcrumb = Son Dosyalar
 # Message shown when there are no recent items.
 be.recentsState = Henüz son öğe yok.
-# Title for x icon indicating someone rejected a task
-be.rejectedAssignment = Reddedildi
 # Label for reload button.
 be.reload = Yeniden Yükle
 # Label for remove action.
@@ -372,114 +478,6 @@ be.skillUnknownError = Bu Skill özelliği kullanılırken veya ilgili veriler g
 be.sort = Sırala
 # Label for status skill card in the preview sidebar
 be.statusSkill = Durum
-# Title shown when an error occurs performing an action on a task
-be.taskActionErrorTitle = Hata
-# Approve option for a task
-be.taskApprove = Tamamla
-# Error message when approving a task fails
-be.taskApproveErrorMessage = Bu görev onaylanırken bir hata oluştu. Lütfen sayfayı yenileyin ve tekrar deneyin.
-# Error message when we failed to load the collaborators when user tries to edit a task
-be.taskCollaboratorLoadErrorMessage = Bu görev için işbirlikçiler yüklenirken bir hata oluştu. Lütfen tekrar deneyin.
-# Error message when completing a task fails
-be.taskCompleteErrorMessage = Bu görev tamamlanırken bir hata oluştu. Lütfen sayfayı yenileyin ve tekrar deneyin.
-# Error message when a task creation fails
-be.taskCreateErrorMessage = Bu görev oluşturulurken bir hata oluştu. Lütfen tekrar deneyin.
-# Title shown above error message when a task creation fails
-be.taskCreateErrorTitle = Hata
-# Error message when a task deletion fails
-be.taskDeleteErrorMessage = Bu görev silinirken bir hata oluştu. Lütfen sayfayı yenileyin ve tekrar deneyin.
-# Text to show on menu item to delete task
-be.taskDeleteMenuItem = Görevi sil
-# Confirmation prompt text to delete task
-be.taskDeletePrompt = Bu görevi kalıcı olarak silmek istediğinizden emin misiniz?
-# Due date for a task
-be.taskDueDate = Son Tarih
-# Error message when a task edit fails
-be.taskEditErrorMessage = Bu görev değiştirilirken bir hata oluştu. Lütfen tekrar deneyin.
-# Text to show on menu item to edit task
-be.taskEditMenuItem = Görevi değiştir
-# Reject option for a task
-be.taskReject = Geri Çevir
-# Error message when rejecting a task fails
-be.taskRejectErrorMessage = Bu görev reddedilirken bir hata oluştu. Lütfen sayfayı yenileyin ve tekrar deneyin.
-# Button name to hide task assignee list
-be.taskShowLessAssignees = Daha Az Göster
-# Button name to expand task assignee list, additionalAssigneeCount is the number of additional task assignees that can be shown.
-be.taskShowMoreAssignees = {additionalAssigneeCount} Adet Daha Göster
-# Button name to expand task assignee list, when there is an unknown number of assignees beyond additionalAssigneeCount.
-be.taskShowMoreAssigneesOverflow = {additionalAssigneeCount, plural, one {Show #+ More} other {Show #+ More}}
-# label for button that opens task popup
-be.tasks.addTask = Görev ekleyin
-# label for menu item that opens approval task popup
-be.tasks.addTask.approval = Onay Görevi
-# description for menu item that opens approval task popup
-be.tasks.addTask.approval.description = İşi ilerletmek için onay isteyin
-# label for menu item that opens general task popup
-be.tasks.addTask.general = Genel Görev
-# description for menu item that opens general task popup
-be.tasks.addTask.general.description = Yapılması gereken işleri takip edin
-# label for cancel button in create task popup
-be.tasks.addTaskForm.cancel = İptal
-# label for task create form due date input
-be.tasks.addTaskForm.dueDateLabel = Bitiş Tarihi
-# label for task create form message input
-be.tasks.addTaskForm.messageLabel = Mesaj
-# label for task create form assignee input
-be.tasks.addTaskForm.selectAssigneesLabel = Atananları Seçin
-# label for create button in create task modal in create mode
-be.tasks.addTaskForm.submit = Oluştur
-# title for approval task popup
-be.tasks.createTask.approval.title = Onay Görevi Oluşturun
-# title for general task popup
-be.tasks.createTask.general.title = Genel Görev Oluşturun
-# title for when editing an existing approval task
-be.tasks.editTask.approval.title = Onay Görevini Değiştirin
-# modal title for when editing an existing general task
-be.tasks.editTask.general.title = Genel Görevi Değiştirin
-# label for edit button in create task modal in edit mode
-be.tasks.editTaskForm.submit = Güncelle
-# Approve option for an approval task
-be.tasks.feed.approveAction = Onayla
-# Label for an approved task
-be.tasks.feed.approvedLabel = Onaylandı
-# Title for list of all task assignees
-be.tasks.feed.assigneeList.title = Atananlar
-# Completion option for a general task
-be.tasks.feed.completeAction = Tamamlandı Olarak İşaretle
-# Label for a completed task
-be.tasks.feed.completedLabel = Tamamlandı
-# Comment headline for an approval task
-be.tasks.feed.headline.approval = {user}, bir Onay Görevi atadı
-# Comment headline for an approval task assigned to the current user
-be.tasks.feed.headline.approval.currentUser = {user}, size bir Onay Görevi atadı
-# Comment headline for a general task
-be.tasks.feed.headline.general = {user}, bir görev atadı
-# Comment headline for a general task assigned to the current user
-be.tasks.feed.headline.general.currentUser = {user}, size bir Görev atadı
-# Label for a task in progress
-be.tasks.feed.inProgressLabel = Sürüyor
-# Label for button to expand flyout to see all task assignees
-be.tasks.feed.moreAssigneesLabel = Tüm atananları gör
-# Reject option for an approval task
-be.tasks.feed.rejectAction = Reddet
-# Label for a rejected task
-be.tasks.feed.rejectedLabel = Reddedildi
-# Label for the task status
-be.tasks.feed.statusLabel = Durum: {taskStatus}
-# Approved task status, where dateTime is a readable time like "Today at 2pm"
-be.tasks.status.approved = Onaylandı: {dateTime}
-# Completed task status, where dateTime is a readable time like "Today at 2pm"
-be.tasks.status.completed = Tamamlandı: {dateTime}
-# Task status when in progress
-be.tasks.status.inProgress = Bekleniyor
-# Task status when not started
-be.tasks.status.notStarted = Bekleniyor
-# Rejected task status, where dateTime is a readable time like "Today at 2pm"
-be.tasks.status.rejected = Reddedildi: {dateTime}
-# Label and date for task due date
-be.tasks.taskDueDate = Son tarih: {date}
-# Tasks for approval
-be.tasksForApproval = Görevler
 # Shown instead of todays date.
 be.today = bugün
 # Label for keywords/topics skill section in the preview sidebar
