--- a/i18n/en-GB.properties
+++ b/i18n/en-GB.properties
@@ -4,6 +4,24 @@ be.accessStatsPermissionsError = Sorry, you do not have permission to see the ac
 be.activityFeedItemApiError = There was a problem loading the activity feed. Please refresh the page or try again later.
 # Label for add action
 be.add = Add
+# Error message when a comment creation fails due to a conflict
+be.api.commentCreateConflictMessage = This comment already exists.
+# Error message when a comment creation fails
+be.api.commentCreateErrorMessage = There was an error creating this comment.
+# Error message when a comment deletion fails
+be.api.commentDeleteErrorMessage = There was an error deleting this comment.
+# Title shown when an error occurs performing an action on a task
+be.api.taskActionErrorTitle = Error
+# Error message when approving a task fails
+be.api.taskApproveErrorMessage = An error has occurred while approving this task. Please refresh the page and try again.
+# Error message when completing a task fails
+be.api.taskCompleteErrorMessage = An error has occurred while completing this task. Please refresh the page and try again.
+# Error message when a task creation fails
+be.api.taskCreateErrorMessage = An error occurred while creating this task. Please try again.
+# Error message when a task deletion fails
+be.api.taskDeleteErrorMessage = There was an error while deleting this task. Please refresh the page and try again.
+# Error message when rejecting a task fails
+be.api.taskRejectErrorMessage = An error has occurred while rejecting this task. Please refresh the page and try again.
 # Alt message if app activity icon is missing or cannot load
 be.appActivityAltIcon = {appActivityName} Icon
 # App Activity created at full date time for title
@@ -12,20 +30,6 @@ be.appActivityCreatedAtFullDateTime = {time, date, full} at {time, time, short}
 be.appActivityDeleteErrorMessage = There was an error deleting this item.
 # Confirmation prompt text to delete app activity
 be.appActivityDeletePrompt = Delete app activity?
-# Placeholder for approvers input
-be.approvalAddAssignee = Add an assignee
-# Label for checkbox to add approvers to a comment
-be.approvalAddTask = Add task
-# Tooltip text for checkbox to add approvers to a comment
-be.approvalAddTaskTooltip = Assigning a task to someone will send them a notification with the message in the comment box and allow them to approve or deny.
-# Title for assignees input
-be.approvalAssignees = Assignees
-# Title for approvers due date input
-be.approvalDueDate = Due date
-# Placeholder for due date input
-be.approvalSelectDate = Select a date
-# Mentioning call to action displayed below the comment input
-be.atMentionTip = @mention users to notify them.
 # Label for back button
 be.back = Back
 # Message when Box Tools cannot open a particular file type
@@ -40,28 +44,130 @@ be.choose = Choose
 be.close = Close
 # Message to the user to collapse the Transcript entries
 be.collapse = Collapse
+# Placeholder for approvers input
+be.contentSidebar.activityFeed.approvalCommentForm.approvalAddAssignee = Add an assignee
+# Label for checkbox to add approvers to a comment
+be.contentSidebar.activityFeed.approvalCommentForm.approvalAddTask = Add task
+# Tooltip text for checkbox to add approvers to a comment
+be.contentSidebar.activityFeed.approvalCommentForm.approvalAddTaskTooltip = Assigning a task to someone will send them a notification with the message in the comment box and allow them to approve or deny.
+# Title for assignees input
+be.contentSidebar.activityFeed.approvalCommentForm.approvalAssignees = Assignees
+# Title for approvers due date input
+be.contentSidebar.activityFeed.approvalCommentForm.approvalDueDate = Due date
+# Placeholder for due date input
+be.contentSidebar.activityFeed.approvalCommentForm.approvalSelectDate = Select a date
+# Mentioning call to action displayed below the comment input
+be.contentSidebar.activityFeed.approvalCommentForm.atMentionTip = @mention users to notify them.
 # Text for cancel button
-be.commentCancel = Cancel
-# Error message when a comment creation fails due to a conflict
-be.commentCreateConflictMessage = This comment already exists.
-# Error message when a comment creation fails
-be.commentCreateErrorMessage = There was an error creating this comment.
-# Error message when a comment deletion fails
-be.commentDeleteErrorMessage = There was an error deleting this comment.
-# Confirmation prompt text to delete comment
-be.commentDeletePrompt = Delete comment?
+be.contentSidebar.activityFeed.approvalCommentForm.commentCancel = Cancel
 # Text for post button
-be.commentPost = Post
-# Comment posted full date time for title
-be.commentPostedFullDateTime = {time, date, full} at {time, time, short}
-# Show original button for showing original comment
-be.commentShowOriginal = Show original
-# Translate button for translating comment
-be.commentTranslate = Translate
+be.contentSidebar.activityFeed.approvalCommentForm.commentPost = Post
 # Placeholder for comment input
-be.commentWrite = Write a comment
+be.contentSidebar.activityFeed.approvalCommentForm.commentWrite = Write a comment
+# Confirmation prompt text to delete comment
+be.contentSidebar.activityFeed.comment.commentDeletePrompt = Delete comment?
+# Comment posted full date time for title
+be.contentSidebar.activityFeed.comment.commentPostedFullDateTime = {time, date, full} at {time, time, short}
+# Show original button for showing original comment
+be.contentSidebar.activityFeed.comment.commentShowOriginal = Show original
+# Translate button for translating comment
+be.contentSidebar.activityFeed.comment.commentTranslate = Translate
+# Text to show on menu item to delete task
+be.contentSidebar.activityFeed.comment.taskDeleteMenuItem = Delete task
+# Confirmation prompt text to delete task
+be.contentSidebar.activityFeed.comment.taskDeletePrompt = Are you sure you want to permanently delete this task?
+# Text to show on menu item to edit task
+be.contentSidebar.activityFeed.comment.taskEditMenuItem = Modify task
+# Title for x icon indicating someone rejected a task
+be.contentSidebar.activityFeed.task.rejectedAssignment = Rejected
+# Approve option for a task
+be.contentSidebar.activityFeed.task.taskApprove = Complete
+# Due date for a task
+be.contentSidebar.activityFeed.task.taskDueDate = Due
+# Reject option for a task
+be.contentSidebar.activityFeed.task.taskReject = Decline
+# Tasks for approval
+be.contentSidebar.activityFeed.task.tasksForApproval = Tasks
+# Title shown above error message when a task creation fails
+be.contentSidebar.activityFeed.taskForm.taskCreateErrorTitle = Error
+# Error message when a task edit fails
+be.contentSidebar.activityFeed.taskForm.taskUpdateErrorMessage = An error occurred while modifying this task. Please try again.
+# label for cancel button in create task popup
+be.contentSidebar.activityFeed.taskForm.tasksAddTaskFormCancelLabel = Cancel
+# label for task create form due date input
+be.contentSidebar.activityFeed.taskForm.tasksAddTaskFormDueDateLabel = Due date
+# label for task create form message input
+be.contentSidebar.activityFeed.taskForm.tasksAddTaskFormMessageLabel = Message
+# label for task create form assignee input
+be.contentSidebar.activityFeed.taskForm.tasksAddTaskFormSelectAssigneesLabel = Select assignees
+# label for create button in create task modal in create mode
+be.contentSidebar.activityFeed.taskForm.tasksAddTaskFormSubmitLabel = Create
+# label for edit button in create task modal in edit mode
+be.contentSidebar.activityFeed.taskForm.tasksEditTaskFormSubmitLabel = Update
 # Title for checkmark icon indicating someone completed a task
-be.completedAssignment = Completed
+be.contentSidebar.activityFeed.taskNew.taskAssignmentCompleted = Completed
+# Error message when we failed to load the collaborators when user tries to edit a task
+be.contentSidebar.activityFeed.taskNew.taskCollaboratorLoadErrorMessage = An error has occurred while loading collaborators for this task. Please try again.
+# Label and date for task due date
+be.contentSidebar.activityFeed.taskNew.taskDueDateLabel = Due: {date}
+# Button name to hide task assignee list
+be.contentSidebar.activityFeed.taskNew.taskShowLessAssignees = Show less
+# Button name to expand task assignee list, additionalAssigneeCount is the number of additional task assignees that can be shown.
+be.contentSidebar.activityFeed.taskNew.taskShowMoreAssignees = Show {additionalAssigneeCount} More
+# Button name to expand task assignee list, when there is an unknown number of assignees beyond additionalAssigneeCount.
+be.contentSidebar.activityFeed.taskNew.taskShowMoreAssigneesOverflow = {additionalAssigneeCount, plural, one {Show #+ More} other {Show #+ More}}
+# Approve option for an approval task
+be.contentSidebar.activityFeed.taskNew.tasksFeedApproveAction = Approve
+# Label for an approved task
+be.contentSidebar.activityFeed.taskNew.tasksFeedApprovedLabel = Approved
+# Title for list of all task assignees
+be.contentSidebar.activityFeed.taskNew.tasksFeedAssigneeListTitle = Assignees
+# Completion option for a general task
+be.contentSidebar.activityFeed.taskNew.tasksFeedCompleteAction = Mark as complete
+# Label for a completed task
+be.contentSidebar.activityFeed.taskNew.tasksFeedCompletedLabel = Completed
+# Comment headline for an approval task
+be.contentSidebar.activityFeed.taskNew.tasksFeedHeadlineApproval = {user} assigned an approval task
+# Comment headline for an approval task assigned to the current user
+be.contentSidebar.activityFeed.taskNew.tasksFeedHeadlineApprovalCurrentUser = {user} assigned you an approval task
+# Comment headline for a general task
+be.contentSidebar.activityFeed.taskNew.tasksFeedHeadlineGeneral = {user} assigned a task
+# Comment headline for a general task assigned to the current user
+be.contentSidebar.activityFeed.taskNew.tasksFeedHeadlineGeneralCurrentUser = {user} assigned you a task
+# Label for a task in progress
+be.contentSidebar.activityFeed.taskNew.tasksFeedInProgressLabel = In progress
+# Label for button to expand flyout to see all task assignees
+be.contentSidebar.activityFeed.taskNew.tasksFeedMoreAssigneesLabel = See all assignees
+# Reject option for an approval task
+be.contentSidebar.activityFeed.taskNew.tasksFeedRejectAction = Reject
+# Label for a rejected task
+be.contentSidebar.activityFeed.taskNew.tasksFeedRejectedLabel = Rejected
+# Approved task status, where dateTime is a readable time like "Today at 2pm"
+be.contentSidebar.activityFeed.taskNew.tasksFeedStatusApproved = Approved {dateTime}
+# Completed task status, where dateTime is a readable time like "Today at 2pm"
+be.contentSidebar.activityFeed.taskNew.tasksFeedStatusCompleted = Completed {dateTime}
+# Label for the task status
+be.contentSidebar.activityFeed.taskNew.tasksFeedStatusLabel = Status: {taskStatus}
+# Rejected task status, where dateTime is a readable time like "Today at 2pm"
+be.contentSidebar.activityFeed.taskNew.tasksFeedStatusRejected = Rejected {dateTime}
+# label for button that opens task popup
+be.contentSidebar.addTask = Add task
+# label for menu item that opens approval task popup
+be.contentSidebar.addTask.approval = Approval task
+# description for menu item that opens approval task popup
+be.contentSidebar.addTask.approval.description = Request approval to progress with work
+# title for approval task popup
+be.contentSidebar.addTask.approval.title = Create approval task
+# label for menu item that opens general task popup
+be.contentSidebar.addTask.general = General task
+# description for menu item that opens general task popup
+be.contentSidebar.addTask.general.description = Keep track of work that needs to get done
+# title for general task popup
+be.contentSidebar.addTask.general.title = Create general task
+# title for when editing an existing approval task
+be.contentSidebar.editTask.approval.title = Modify approval task
+# modal title for when editing an existing general task
+be.contentSidebar.editTask.general.title = Modify general task
 # Label for copy action.
 be.copy = Copy
 # Label for create action.
@@ -214,6 +320,8 @@ be.pointAnnotation = Point annotation mode
 be.preview = Preview
 # Error message when Preview fails due to the files call.
 be.previewError = We’re sorry, the preview didn’t load. Please refresh the page.
+# Error message when Preview fails due to the files call which is blocked by an access policy.
+be.previewErrorBlockedByPolicy = Your access is restricted due to the classification applied to this content.
 # Message when new preview is available.
 be.previewUpdate = A new version of this file is available.
 # Previous file button title
@@ -228,8 +336,6 @@ be.priorCollaborator = A previous collaborator
 be.recentsBreadcrumb = Recents
 # Message shown when there are no recent items.
 be.recentsState = There are no recent items yet.
-# Title for x icon indicating someone rejected a task
-be.rejectedAssignment = Rejected
 # Label for reload button.
 be.reload = Reload
 # Label for remove action.
@@ -372,114 +478,6 @@ be.skillUnknownError = Something went wrong while running this skill or fetching
 be.sort = Sort
 # Label for status skill card in the preview sidebar
 be.statusSkill = Status
-# Title shown when an error occurs performing an action on a task
-be.taskActionErrorTitle = Error
-# Approve option for a task
-be.taskApprove = Complete
-# Error message when approving a task fails
-be.taskApproveErrorMessage = An error has occurred while approving this task. Please refresh the page and try again.
-# Error message when we failed to load the collaborators when user tries to edit a task
-be.taskCollaboratorLoadErrorMessage = An error has occurred while loading collaborators for this task. Please try again.
-# Error message when completing a task fails
-be.taskCompleteErrorMessage = An error has occurred while completing this task. Please refresh the page and try again.
-# Error message when a task creation fails
-be.taskCreateErrorMessage = An error occurred while creating this task. Please try again.
-# Title shown above error message when a task creation fails
-be.taskCreateErrorTitle = Error
-# Error message when a task deletion fails
-be.taskDeleteErrorMessage = There was an error while deleting this task. Please refresh the page and try again.
-# Text to show on menu item to delete task
-be.taskDeleteMenuItem = Delete task
-# Confirmation prompt text to delete task
-be.taskDeletePrompt = Are you sure you want to permanently delete this task?
-# Due date for a task
-be.taskDueDate = Due
-# Error message when a task edit fails
-be.taskEditErrorMessage = An error occurred while modifying this task. Please try again.
-# Text to show on menu item to edit task
-be.taskEditMenuItem = Modify task
-# Reject option for a task
-be.taskReject = Decline
-# Error message when rejecting a task fails
-be.taskRejectErrorMessage = An error has occurred while rejecting this task. Please refresh the page and try again.
-# Button name to hide task assignee list
-be.taskShowLessAssignees = Show less
-# Button name to expand task assignee list, additionalAssigneeCount is the number of additional task assignees that can be shown.
-be.taskShowMoreAssignees = Show {additionalAssigneeCount} more
-# Button name to expand task assignee list, when there is an unknown number of assignees beyond additionalAssigneeCount.
-be.taskShowMoreAssigneesOverflow = {additionalAssigneeCount, plural, one {Show #+ More} other {Show #+ More}}
-# label for button that opens task popup
-be.tasks.addTask = Add task
-# label for menu item that opens approval task popup
-be.tasks.addTask.approval = Approval task
-# description for menu item that opens approval task popup
-be.tasks.addTask.approval.description = Request approval to progress with work
-# label for menu item that opens general task popup
-be.tasks.addTask.general = General task
-# description for menu item that opens general task popup
-be.tasks.addTask.general.description = Keep track of work that needs to get done
-# label for cancel button in create task popup
-be.tasks.addTaskForm.cancel = Cancel
-# label for task create form due date input
-be.tasks.addTaskForm.dueDateLabel = Due date
-# label for task create form message input
-be.tasks.addTaskForm.messageLabel = Message
-# label for task create form assignee input
-be.tasks.addTaskForm.selectAssigneesLabel = Select assignees
-# label for create button in create task modal in create mode
-be.tasks.addTaskForm.submit = Create
-# title for approval task popup
-be.tasks.createTask.approval.title = Create approval task
-# title for general task popup
-be.tasks.createTask.general.title = Create general task
-# title for when editing an existing approval task
-be.tasks.editTask.approval.title = Modify approval task
-# modal title for when editing an existing general task
-be.tasks.editTask.general.title = Modify general task
-# label for edit button in create task modal in edit mode
-be.tasks.editTaskForm.submit = Update
-# Approve option for an approval task
-be.tasks.feed.approveAction = Approve
-# Label for an approved task
-be.tasks.feed.approvedLabel = Approved
-# Title for list of all task assignees
-be.tasks.feed.assigneeList.title = Assignees
-# Completion option for a general task
-be.tasks.feed.completeAction = Mark as complete
-# Label for a completed task
-be.tasks.feed.completedLabel = Completed
-# Comment headline for an approval task
-be.tasks.feed.headline.approval = {user} assigned an approval task
-# Comment headline for an approval task assigned to the current user
-be.tasks.feed.headline.approval.currentUser = {user} assigned you an approval task
-# Comment headline for a general task
-be.tasks.feed.headline.general = {user} assigned a task
-# Comment headline for a general task assigned to the current user
-be.tasks.feed.headline.general.currentUser = {user} assigned you a task
-# Label for a task in progress
-be.tasks.feed.inProgressLabel = In progress
-# Label for button to expand flyout to see all task assignees
-be.tasks.feed.moreAssigneesLabel = See all assignees
-# Reject option for an approval task
-be.tasks.feed.rejectAction = Reject
-# Label for a rejected task
-be.tasks.feed.rejectedLabel = Rejected
-# Label for the task status
-be.tasks.feed.statusLabel = Status: {taskStatus}
-# Approved task status, where dateTime is a readable time like "Today at 2pm"
-be.tasks.status.approved = Approved {dateTime}
-# Completed task status, where dateTime is a readable time like "Today at 2pm"
-be.tasks.status.completed = Completed {dateTime}
-# Task status when in progress
-be.tasks.status.inProgress = Awaiting
-# Task status when not started
-be.tasks.status.notStarted = Awaiting
-# Rejected task status, where dateTime is a readable time like "Today at 2pm"
-be.tasks.status.rejected = Rejected {dateTime}
-# Label and date for task due date
-be.tasks.taskDueDate = Due: {date}
-# Tasks for approval
-be.tasksForApproval = Tasks
 # Shown instead of todays date.
 be.today = today
 # Label for keywords/topics skill section in the preview sidebar
