--- a/i18n/nb-NO.properties
+++ b/i18n/nb-NO.properties
@@ -4,6 +4,24 @@ be.accessStatsPermissionsError = Du har ikke tillatelse til å se tilgangsstatis
 be.activityFeedItemApiError = Kan ikke laste inn aktivitetsfeeden. Last inn siden på nytt eller prøv igjen senere.
 # Label for add action
 be.add = Legg til
+# Error message when a comment creation fails due to a conflict
+be.api.commentCreateConflictMessage = Denne kommentaren finnes allerede.
+# Error message when a comment creation fails
+be.api.commentCreateErrorMessage = Det oppstod en feil med å opprette denne kommentaren.
+# Error message when a comment deletion fails
+be.api.commentDeleteErrorMessage = Det oppstod en feil med å slette denne kommentaren.
+# Title shown when an error occurs performing an action on a task
+be.api.taskActionErrorTitle = Feil
+# Error message when approving a task fails
+be.api.taskApproveErrorMessage = Det oppsto en feil ved godkjenningen av denne oppgaven. Last inn siden på nytt, og prøv igjen.
+# Error message when completing a task fails
+be.api.taskCompleteErrorMessage = Det oppsto en feil ved gjennomføringen av denne oppgaven. Last inn siden på nytt, og prøv igjen.
+# Error message when a task creation fails
+be.api.taskCreateErrorMessage = Det oppsto en feil da du opprettet denne oppgaven. Prøv igjen.
+# Error message when a task deletion fails
+be.api.taskDeleteErrorMessage = Kan ikke slette denne oppgaven. Last inn siden på nytt, og prøv igjen.
+# Error message when rejecting a task fails
+be.api.taskRejectErrorMessage = Det oppsto en feil ved avvisningen av denne oppgaven. Last inn siden på nytt, og prøv igjen.
 # Alt message if app activity icon is missing or cannot load
 be.appActivityAltIcon = {appActivityName}-ikon
 # App Activity created at full date time for title
@@ -12,20 +30,6 @@ be.appActivityCreatedAtFullDateTime = {time, date, full} kl. {time, time, short}
 be.appActivityDeleteErrorMessage = Det oppstod en feil med å slette dette elementet.
 # Confirmation prompt text to delete app activity
 be.appActivityDeletePrompt = Vil du slette appaktiviteten?
-# Placeholder for approvers input
-be.approvalAddAssignee = Legg til en ansvarlig
-# Label for checkbox to add approvers to a comment
-be.approvalAddTask = Legg til oppgave
-# Tooltip text for checkbox to add approvers to a comment
-be.approvalAddTaskTooltip = Når du tilordner en oppgave til noen, får vedkommende et varsel med meldingen i kommentarboksen og mulighet til å godkjenne eller avslå.
-# Title for assignees input
-be.approvalAssignees = Ansvarlige
-# Title for approvers due date input
-be.approvalDueDate = Forfallsdato
-# Placeholder for due date input
-be.approvalSelectDate = Velg en dato
-# Mentioning call to action displayed below the comment input
-be.atMentionTip = @nevn brukere for å varsle dem.
 # Label for back button
 be.back = Tilbake
 # Message when Box Tools cannot open a particular file type
@@ -40,28 +44,130 @@ be.choose = Velg
 be.close = Lukk
 # Message to the user to collapse the Transcript entries
 be.collapse = Lukk
+# Placeholder for approvers input
+be.contentSidebar.activityFeed.approvalCommentForm.approvalAddAssignee = Legg til en ansvarlig
+# Label for checkbox to add approvers to a comment
+be.contentSidebar.activityFeed.approvalCommentForm.approvalAddTask = Legg til oppgave
+# Tooltip text for checkbox to add approvers to a comment
+be.contentSidebar.activityFeed.approvalCommentForm.approvalAddTaskTooltip = Når du tilordner en oppgave til noen, får vedkommende et varsel med meldingen i kommentarboksen og mulighet til å godkjenne eller avslå.
+# Title for assignees input
+be.contentSidebar.activityFeed.approvalCommentForm.approvalAssignees = Ansvarlige
+# Title for approvers due date input
+be.contentSidebar.activityFeed.approvalCommentForm.approvalDueDate = Forfallsdato
+# Placeholder for due date input
+be.contentSidebar.activityFeed.approvalCommentForm.approvalSelectDate = Velg en dato
+# Mentioning call to action displayed below the comment input
+be.contentSidebar.activityFeed.approvalCommentForm.atMentionTip = @nevn brukere for å varsle dem.
 # Text for cancel button
-be.commentCancel = Avbryt
-# Error message when a comment creation fails due to a conflict
-be.commentCreateConflictMessage = Denne kommentaren finnes allerede.
-# Error message when a comment creation fails
-be.commentCreateErrorMessage = Det oppstod en feil med å opprette denne kommentaren.
-# Error message when a comment deletion fails
-be.commentDeleteErrorMessage = Det oppstod en feil med å slette denne kommentaren.
-# Confirmation prompt text to delete comment
-be.commentDeletePrompt = Vil du slette kommentaren?
+be.contentSidebar.activityFeed.approvalCommentForm.commentCancel = Avbryt
 # Text for post button
-be.commentPost = Legg inn
-# Comment posted full date time for title
-be.commentPostedFullDateTime = {time, date, full} kl. {time, time, short}
-# Show original button for showing original comment
-be.commentShowOriginal = Vis opprinnelig
-# Translate button for translating comment
-be.commentTranslate = Oversett
+be.contentSidebar.activityFeed.approvalCommentForm.commentPost = Legg inn
 # Placeholder for comment input
-be.commentWrite = Skriv en kommentar
+be.contentSidebar.activityFeed.approvalCommentForm.commentWrite = Skriv en kommentar
+# Confirmation prompt text to delete comment
+be.contentSidebar.activityFeed.comment.commentDeletePrompt = Vil du slette kommentaren?
+# Comment posted full date time for title
+be.contentSidebar.activityFeed.comment.commentPostedFullDateTime = {time, date, full} kl. {time, time, short}
+# Show original button for showing original comment
+be.contentSidebar.activityFeed.comment.commentShowOriginal = Vis opprinnelig
+# Translate button for translating comment
+be.contentSidebar.activityFeed.comment.commentTranslate = Oversett
+# Text to show on menu item to delete task
+be.contentSidebar.activityFeed.comment.taskDeleteMenuItem = Slett oppgave
+# Confirmation prompt text to delete task
+be.contentSidebar.activityFeed.comment.taskDeletePrompt = Er du sikker på at du vil slette denne oppgaven for godt?
+# Text to show on menu item to edit task
+be.contentSidebar.activityFeed.comment.taskEditMenuItem = Endre oppgave
+# Title for x icon indicating someone rejected a task
+be.contentSidebar.activityFeed.task.rejectedAssignment = Avvist
+# Approve option for a task
+be.contentSidebar.activityFeed.task.taskApprove = Fullfør
+# Due date for a task
+be.contentSidebar.activityFeed.task.taskDueDate = Forfaller
+# Reject option for a task
+be.contentSidebar.activityFeed.task.taskReject = Avslå
+# Tasks for approval
+be.contentSidebar.activityFeed.task.tasksForApproval = Oppgaver
+# Title shown above error message when a task creation fails
+be.contentSidebar.activityFeed.taskForm.taskCreateErrorTitle = Feil
+# Error message when a task edit fails
+be.contentSidebar.activityFeed.taskForm.taskUpdateErrorMessage = Det oppsto en feil da du endret denne oppgaven. Prøv igjen.
+# label for cancel button in create task popup
+be.contentSidebar.activityFeed.taskForm.tasksAddTaskFormCancelLabel = Avbryt
+# label for task create form due date input
+be.contentSidebar.activityFeed.taskForm.tasksAddTaskFormDueDateLabel = Forfallsdato
+# label for task create form message input
+be.contentSidebar.activityFeed.taskForm.tasksAddTaskFormMessageLabel = Melding
+# label for task create form assignee input
+be.contentSidebar.activityFeed.taskForm.tasksAddTaskFormSelectAssigneesLabel = Velg ansvarlige
+# label for create button in create task modal in create mode
+be.contentSidebar.activityFeed.taskForm.tasksAddTaskFormSubmitLabel = Opprett
+# label for edit button in create task modal in edit mode
+be.contentSidebar.activityFeed.taskForm.tasksEditTaskFormSubmitLabel = Oppdater
 # Title for checkmark icon indicating someone completed a task
-be.completedAssignment = Fullført
+be.contentSidebar.activityFeed.taskNew.taskAssignmentCompleted = Fullført
+# Error message when we failed to load the collaborators when user tries to edit a task
+be.contentSidebar.activityFeed.taskNew.taskCollaboratorLoadErrorMessage = Det oppsto en feil under lasting av samarbeidspartnere for denne oppgaven. Prøv igjen.
+# Label and date for task due date
+be.contentSidebar.activityFeed.taskNew.taskDueDateLabel = Forfaller: {date}
+# Button name to hide task assignee list
+be.contentSidebar.activityFeed.taskNew.taskShowLessAssignees = Vis mindre
+# Button name to expand task assignee list, additionalAssigneeCount is the number of additional task assignees that can be shown.
+be.contentSidebar.activityFeed.taskNew.taskShowMoreAssignees = Show {additionalAssigneeCount} More
+# Button name to expand task assignee list, when there is an unknown number of assignees beyond additionalAssigneeCount.
+be.contentSidebar.activityFeed.taskNew.taskShowMoreAssigneesOverflow = {additionalAssigneeCount, plural, one {Show #+ More} other {Show #+ More}}
+# Approve option for an approval task
+be.contentSidebar.activityFeed.taskNew.tasksFeedApproveAction = Godkjenn
+# Label for an approved task
+be.contentSidebar.activityFeed.taskNew.tasksFeedApprovedLabel = Godkjent
+# Title for list of all task assignees
+be.contentSidebar.activityFeed.taskNew.tasksFeedAssigneeListTitle = Ansvarlige
+# Completion option for a general task
+be.contentSidebar.activityFeed.taskNew.tasksFeedCompleteAction = Merk som fullført
+# Label for a completed task
+be.contentSidebar.activityFeed.taskNew.tasksFeedCompletedLabel = Fullført
+# Comment headline for an approval task
+be.contentSidebar.activityFeed.taskNew.tasksFeedHeadlineApproval = {user} tilordnet en godkjenningsoppgave
+# Comment headline for an approval task assigned to the current user
+be.contentSidebar.activityFeed.taskNew.tasksFeedHeadlineApprovalCurrentUser = {user} tilordnet deg en godkjenningsoppgave
+# Comment headline for a general task
+be.contentSidebar.activityFeed.taskNew.tasksFeedHeadlineGeneral = {user} tilordnet en oppgave
+# Comment headline for a general task assigned to the current user
+be.contentSidebar.activityFeed.taskNew.tasksFeedHeadlineGeneralCurrentUser = {user} tilordnet deg en oppgave
+# Label for a task in progress
+be.contentSidebar.activityFeed.taskNew.tasksFeedInProgressLabel = Pågår
+# Label for button to expand flyout to see all task assignees
+be.contentSidebar.activityFeed.taskNew.tasksFeedMoreAssigneesLabel = Se alle ansvarlige
+# Reject option for an approval task
+be.contentSidebar.activityFeed.taskNew.tasksFeedRejectAction = Avvis
+# Label for a rejected task
+be.contentSidebar.activityFeed.taskNew.tasksFeedRejectedLabel = Avvist
+# Approved task status, where dateTime is a readable time like "Today at 2pm"
+be.contentSidebar.activityFeed.taskNew.tasksFeedStatusApproved = Godkjent {dateTime}
+# Completed task status, where dateTime is a readable time like "Today at 2pm"
+be.contentSidebar.activityFeed.taskNew.tasksFeedStatusCompleted = Fullført {dateTime}
+# Label for the task status
+be.contentSidebar.activityFeed.taskNew.tasksFeedStatusLabel = Status: {taskStatus}
+# Rejected task status, where dateTime is a readable time like "Today at 2pm"
+be.contentSidebar.activityFeed.taskNew.tasksFeedStatusRejected = Avvist {dateTime}
+# label for button that opens task popup
+be.contentSidebar.addTask = Legg til oppgave
+# label for menu item that opens approval task popup
+be.contentSidebar.addTask.approval = Godkjenningsoppgave
+# description for menu item that opens approval task popup
+be.contentSidebar.addTask.approval.description = Be om en godkjenning for å flytte arbeidet fremover
+# title for approval task popup
+be.contentSidebar.addTask.approval.title = Opprett en godkjenningsoppgave
+# label for menu item that opens general task popup
+be.contentSidebar.addTask.general = Generell oppgave
+# description for menu item that opens general task popup
+be.contentSidebar.addTask.general.description = Hold oversikt over oppgaver som må utføres
+# title for general task popup
+be.contentSidebar.addTask.general.title = Opprett en generell oppgave
+# title for when editing an existing approval task
+be.contentSidebar.editTask.approval.title = Endre godkjenningsoppgave
+# modal title for when editing an existing general task
+be.contentSidebar.editTask.general.title = Endre generell oppgave
 # Label for copy action.
 be.copy = Kopier
 # Label for create action.
@@ -214,6 +320,8 @@ be.pointAnnotation = Modus for å peke på merknad
 be.preview = Forhåndsvis
 # Error message when Preview fails due to the files call.
 be.previewError = Kan ikke laste inn forhåndsvisningen. Last inn siden på nytt.
+# Error message when Preview fails due to the files call which is blocked by an access policy.
+be.previewErrorBlockedByPolicy = Your access is restricted due to the classification applied to this content.
 # Message when new preview is available.
 be.previewUpdate = En ny versjon av denne filen er tilgjengelig.
 # Previous file button title
@@ -228,8 +336,6 @@ be.priorCollaborator = En tidligere bidragsyter
 be.recentsBreadcrumb = Nylige
 # Message shown when there are no recent items.
 be.recentsState = Det finnes ingen nylige elementer ennå.
-# Title for x icon indicating someone rejected a task
-be.rejectedAssignment = Avvist
 # Label for reload button.
 be.reload = Last inn på nytt
 # Label for remove action.
@@ -372,114 +478,6 @@ be.skillUnknownError = Kan ikke kjøre denne ferdigheten eller hente dataene for
 be.sort = Sorter
 # Label for status skill card in the preview sidebar
 be.statusSkill = Status
-# Title shown when an error occurs performing an action on a task
-be.taskActionErrorTitle = Feil
-# Approve option for a task
-be.taskApprove = Fullfør
-# Error message when approving a task fails
-be.taskApproveErrorMessage = Det oppsto en feil ved godkjenningen av denne oppgaven. Last inn siden på nytt, og prøv igjen.
-# Error message when we failed to load the collaborators when user tries to edit a task
-be.taskCollaboratorLoadErrorMessage = Det oppsto en feil under lasting av samarbeidspartnere for denne oppgaven. Prøv igjen.
-# Error message when completing a task fails
-be.taskCompleteErrorMessage = Det oppsto en feil ved gjennomføringen av denne oppgaven. Last inn siden på nytt, og prøv igjen.
-# Error message when a task creation fails
-be.taskCreateErrorMessage = Det oppsto en feil da du opprettet denne oppgaven. Prøv igjen.
-# Title shown above error message when a task creation fails
-be.taskCreateErrorTitle = Feil
-# Error message when a task deletion fails
-be.taskDeleteErrorMessage = Kan ikke slette denne oppgaven. Last inn siden på nytt, og prøv igjen.
-# Text to show on menu item to delete task
-be.taskDeleteMenuItem = Slett oppgave
-# Confirmation prompt text to delete task
-be.taskDeletePrompt = Er du sikker på at du vil slette denne oppgaven for godt?
-# Due date for a task
-be.taskDueDate = Forfaller
-# Error message when a task edit fails
-be.taskEditErrorMessage = Det oppsto en feil da du endret denne oppgaven. Prøv igjen.
-# Text to show on menu item to edit task
-be.taskEditMenuItem = Endre oppgave
-# Reject option for a task
-be.taskReject = Avslå
-# Error message when rejecting a task fails
-be.taskRejectErrorMessage = Det oppsto en feil ved avvisningen av denne oppgaven. Last inn siden på nytt, og prøv igjen.
-# Button name to hide task assignee list
-be.taskShowLessAssignees = Vis mindre
-# Button name to expand task assignee list, additionalAssigneeCount is the number of additional task assignees that can be shown.
-be.taskShowMoreAssignees = Vis {additionalAssigneeCount} mer
-# Button name to expand task assignee list, when there is an unknown number of assignees beyond additionalAssigneeCount.
-be.taskShowMoreAssigneesOverflow = {additionalAssigneeCount, plural, one {Show #+ More} other {Show #+ More}}
-# label for button that opens task popup
-be.tasks.addTask = Legg til oppgave
-# label for menu item that opens approval task popup
-be.tasks.addTask.approval = Godkjenningsoppgave
-# description for menu item that opens approval task popup
-be.tasks.addTask.approval.description = Be om en godkjenning for å flytte arbeidet fremover
-# label for menu item that opens general task popup
-be.tasks.addTask.general = Generell oppgave
-# description for menu item that opens general task popup
-be.tasks.addTask.general.description = Hold oversikt over oppgaver som må utføres
-# label for cancel button in create task popup
-be.tasks.addTaskForm.cancel = Avbryt
-# label for task create form due date input
-be.tasks.addTaskForm.dueDateLabel = Forfallsdato
-# label for task create form message input
-be.tasks.addTaskForm.messageLabel = Melding
-# label for task create form assignee input
-be.tasks.addTaskForm.selectAssigneesLabel = Velg ansvarlige
-# label for create button in create task modal in create mode
-be.tasks.addTaskForm.submit = Opprett
-# title for approval task popup
-be.tasks.createTask.approval.title = Opprett en godkjenningsoppgave
-# title for general task popup
-be.tasks.createTask.general.title = Opprett en generell oppgave
-# title for when editing an existing approval task
-be.tasks.editTask.approval.title = Endre godkjenningsoppgave
-# modal title for when editing an existing general task
-be.tasks.editTask.general.title = Endre generell oppgave
-# label for edit button in create task modal in edit mode
-be.tasks.editTaskForm.submit = Oppdater
-# Approve option for an approval task
-be.tasks.feed.approveAction = Godkjenn
-# Label for an approved task
-be.tasks.feed.approvedLabel = Godkjent
-# Title for list of all task assignees
-be.tasks.feed.assigneeList.title = Ansvarlige
-# Completion option for a general task
-be.tasks.feed.completeAction = Merk som fullført
-# Label for a completed task
-be.tasks.feed.completedLabel = Fullført
-# Comment headline for an approval task
-be.tasks.feed.headline.approval = {user} tilordnet en godkjenningsoppgave
-# Comment headline for an approval task assigned to the current user
-be.tasks.feed.headline.approval.currentUser = {user} tilordnet deg en godkjenningsoppgave
-# Comment headline for a general task
-be.tasks.feed.headline.general = {user} tilordnet en oppgave
-# Comment headline for a general task assigned to the current user
-be.tasks.feed.headline.general.currentUser = {user} tilordnet deg en oppgave
-# Label for a task in progress
-be.tasks.feed.inProgressLabel = Pågår
-# Label for button to expand flyout to see all task assignees
-be.tasks.feed.moreAssigneesLabel = Se alle ansvarlige
-# Reject option for an approval task
-be.tasks.feed.rejectAction = Avvis
-# Label for a rejected task
-be.tasks.feed.rejectedLabel = Avvist
-# Label for the task status
-be.tasks.feed.statusLabel = Status: {taskStatus}
-# Approved task status, where dateTime is a readable time like "Today at 2pm"
-be.tasks.status.approved = Godkjent {dateTime}
-# Completed task status, where dateTime is a readable time like "Today at 2pm"
-be.tasks.status.completed = Fullført {dateTime}
-# Task status when in progress
-be.tasks.status.inProgress = Venter
-# Task status when not started
-be.tasks.status.notStarted = Venter
-# Rejected task status, where dateTime is a readable time like "Today at 2pm"
-be.tasks.status.rejected = Avvist {dateTime}
-# Label and date for task due date
-be.tasks.taskDueDate = Forfaller: {date}
-# Tasks for approval
-be.tasksForApproval = Oppgaver
 # Shown instead of todays date.
 be.today = i dag
 # Label for keywords/topics skill section in the preview sidebar
