--- a/i18n/pt-BR.properties
+++ b/i18n/pt-BR.properties
@@ -4,6 +4,24 @@ be.accessStatsPermissionsError = Você não tem permissão para ver as estatíst
 be.activityFeedItemApiError = Ocorreu um problema ao carregar o feed de atividade. Atualize a página ou tente novamente mais tarde.
 # Label for add action
 be.add = Adicionar
+# Error message when a comment creation fails due to a conflict
+be.api.commentCreateConflictMessage = Este comentário já existe.
+# Error message when a comment creation fails
+be.api.commentCreateErrorMessage = Ocorreu um erro ao criar esse comentário.
+# Error message when a comment deletion fails
+be.api.commentDeleteErrorMessage = Ocorreu um erro ao excluir esse comentário.
+# Title shown when an error occurs performing an action on a task
+be.api.taskActionErrorTitle = Erro
+# Error message when approving a task fails
+be.api.taskApproveErrorMessage = Ocorreu um erro ao aprovar esta tarefa. Atualize a página e tente novamente.
+# Error message when completing a task fails
+be.api.taskCompleteErrorMessage = Ocorreu um erro ao completar esta tarefa. Atualize a página e tente novamente.
+# Error message when a task creation fails
+be.api.taskCreateErrorMessage = Ocorreu um erro ao criar esta tarefa. Tente novamente.
+# Error message when a task deletion fails
+be.api.taskDeleteErrorMessage = Ocorreu um erro ao excluir esta tarefa. Atualize a página e tente novamente.
+# Error message when rejecting a task fails
+be.api.taskRejectErrorMessage = Ocorreu um erro ao rejeitar esta tarefa. Atualize a página e tente novamente.
 # Alt message if app activity icon is missing or cannot load
 be.appActivityAltIcon = Ícone {appActivityName}
 # App Activity created at full date time for title
@@ -12,20 +30,6 @@ be.appActivityCreatedAtFullDateTime = {time, date, full} às {time, time, short}
 be.appActivityDeleteErrorMessage = Ocorreu um erro ao excluir esse item.
 # Confirmation prompt text to delete app activity
 be.appActivityDeletePrompt = Excluir atividade do aplicativo?
-# Placeholder for approvers input
-be.approvalAddAssignee = Adicionar um responsável
-# Label for checkbox to add approvers to a comment
-be.approvalAddTask = Adicionar tarefa
-# Tooltip text for checkbox to add approvers to a comment
-be.approvalAddTaskTooltip = Ao atribuir uma tarefa a alguém, essa pessoa receberá uma notificação com a mensagem na caixa de comentário e permissão para aprovar ou recusar.
-# Title for assignees input
-be.approvalAssignees = Responsáveis
-# Title for approvers due date input
-be.approvalDueDate = Data de vencimento
-# Placeholder for due date input
-be.approvalSelectDate = Selecione uma data
-# Mentioning call to action displayed below the comment input
-be.atMentionTip = @mencione usuários para notificá-los.
 # Label for back button
 be.back = Voltar
 # Message when Box Tools cannot open a particular file type
@@ -40,28 +44,130 @@ be.choose = Escolher
 be.close = Fechar
 # Message to the user to collapse the Transcript entries
 be.collapse = Recolher
+# Placeholder for approvers input
+be.contentSidebar.activityFeed.approvalCommentForm.approvalAddAssignee = Adicionar um responsável
+# Label for checkbox to add approvers to a comment
+be.contentSidebar.activityFeed.approvalCommentForm.approvalAddTask = Adicionar tarefa
+# Tooltip text for checkbox to add approvers to a comment
+be.contentSidebar.activityFeed.approvalCommentForm.approvalAddTaskTooltip = Ao atribuir uma tarefa a alguém, essa pessoa receberá uma notificação com a mensagem na caixa de comentário e permissão para aprovar ou recusar.
+# Title for assignees input
+be.contentSidebar.activityFeed.approvalCommentForm.approvalAssignees = Responsáveis
+# Title for approvers due date input
+be.contentSidebar.activityFeed.approvalCommentForm.approvalDueDate = Data de vencimento
+# Placeholder for due date input
+be.contentSidebar.activityFeed.approvalCommentForm.approvalSelectDate = Selecione uma data
+# Mentioning call to action displayed below the comment input
+be.contentSidebar.activityFeed.approvalCommentForm.atMentionTip = @mencione usuários para notificá-los.
 # Text for cancel button
-be.commentCancel = Cancelar
-# Error message when a comment creation fails due to a conflict
-be.commentCreateConflictMessage = Este comentário já existe.
-# Error message when a comment creation fails
-be.commentCreateErrorMessage = Ocorreu um erro ao criar esse comentário.
-# Error message when a comment deletion fails
-be.commentDeleteErrorMessage = Ocorreu um erro ao excluir esse comentário.
-# Confirmation prompt text to delete comment
-be.commentDeletePrompt = Excluir comentário?
+be.contentSidebar.activityFeed.approvalCommentForm.commentCancel = Cancelar
 # Text for post button
-be.commentPost = Publicar
-# Comment posted full date time for title
-be.commentPostedFullDateTime = {time, date, full} às {time, time, short}
-# Show original button for showing original comment
-be.commentShowOriginal = Mostrar original
-# Translate button for translating comment
-be.commentTranslate = Traduzir
+be.contentSidebar.activityFeed.approvalCommentForm.commentPost = Publicar
 # Placeholder for comment input
-be.commentWrite = Escrever um comentário
+be.contentSidebar.activityFeed.approvalCommentForm.commentWrite = Escrever um comentário
+# Confirmation prompt text to delete comment
+be.contentSidebar.activityFeed.comment.commentDeletePrompt = Excluir comentário?
+# Comment posted full date time for title
+be.contentSidebar.activityFeed.comment.commentPostedFullDateTime = {time, date, full} às {time, time, short}
+# Show original button for showing original comment
+be.contentSidebar.activityFeed.comment.commentShowOriginal = Mostrar original
+# Translate button for translating comment
+be.contentSidebar.activityFeed.comment.commentTranslate = Traduzir
+# Text to show on menu item to delete task
+be.contentSidebar.activityFeed.comment.taskDeleteMenuItem = Excluir tarefa
+# Confirmation prompt text to delete task
+be.contentSidebar.activityFeed.comment.taskDeletePrompt = Tem certeza de que deseja excluir permanentemente este tarefa?
+# Text to show on menu item to edit task
+be.contentSidebar.activityFeed.comment.taskEditMenuItem = Modificar tarefa
+# Title for x icon indicating someone rejected a task
+be.contentSidebar.activityFeed.task.rejectedAssignment = Rejeitada
+# Approve option for a task
+be.contentSidebar.activityFeed.task.taskApprove = Concluir
+# Due date for a task
+be.contentSidebar.activityFeed.task.taskDueDate = Prazo
+# Reject option for a task
+be.contentSidebar.activityFeed.task.taskReject = Recusar
+# Tasks for approval
+be.contentSidebar.activityFeed.task.tasksForApproval = Tarefas
+# Title shown above error message when a task creation fails
+be.contentSidebar.activityFeed.taskForm.taskCreateErrorTitle = Erro
+# Error message when a task edit fails
+be.contentSidebar.activityFeed.taskForm.taskUpdateErrorMessage = Ocorreu um erro ao modificar esta tarefa. Tente novamente.
+# label for cancel button in create task popup
+be.contentSidebar.activityFeed.taskForm.tasksAddTaskFormCancelLabel = Cancelar
+# label for task create form due date input
+be.contentSidebar.activityFeed.taskForm.tasksAddTaskFormDueDateLabel = Data de vencimento
+# label for task create form message input
+be.contentSidebar.activityFeed.taskForm.tasksAddTaskFormMessageLabel = Mensagem
+# label for task create form assignee input
+be.contentSidebar.activityFeed.taskForm.tasksAddTaskFormSelectAssigneesLabel = Selecionar responsáveis
+# label for create button in create task modal in create mode
+be.contentSidebar.activityFeed.taskForm.tasksAddTaskFormSubmitLabel = Criar
+# label for edit button in create task modal in edit mode
+be.contentSidebar.activityFeed.taskForm.tasksEditTaskFormSubmitLabel = Atualizar
 # Title for checkmark icon indicating someone completed a task
-be.completedAssignment = Concluído
+be.contentSidebar.activityFeed.taskNew.taskAssignmentCompleted = Concluído
+# Error message when we failed to load the collaborators when user tries to edit a task
+be.contentSidebar.activityFeed.taskNew.taskCollaboratorLoadErrorMessage = Ocorreu um erro ao carregar colaboradores para esta tarefa. Tente novamente.
+# Label and date for task due date
+be.contentSidebar.activityFeed.taskNew.taskDueDateLabel = Vencimento: {date}
+# Button name to hide task assignee list
+be.contentSidebar.activityFeed.taskNew.taskShowLessAssignees = Mostrar menos
+# Button name to expand task assignee list, additionalAssigneeCount is the number of additional task assignees that can be shown.
+be.contentSidebar.activityFeed.taskNew.taskShowMoreAssignees = Show {additionalAssigneeCount} More
+# Button name to expand task assignee list, when there is an unknown number of assignees beyond additionalAssigneeCount.
+be.contentSidebar.activityFeed.taskNew.taskShowMoreAssigneesOverflow = {additionalAssigneeCount, plural, one {Show #+ More} other {Show #+ More}}
+# Approve option for an approval task
+be.contentSidebar.activityFeed.taskNew.tasksFeedApproveAction = Aprovar
+# Label for an approved task
+be.contentSidebar.activityFeed.taskNew.tasksFeedApprovedLabel = Aprovada
+# Title for list of all task assignees
+be.contentSidebar.activityFeed.taskNew.tasksFeedAssigneeListTitle = Responsáveis
+# Completion option for a general task
+be.contentSidebar.activityFeed.taskNew.tasksFeedCompleteAction = Marcar como concluída
+# Label for a completed task
+be.contentSidebar.activityFeed.taskNew.tasksFeedCompletedLabel = Concluído
+# Comment headline for an approval task
+be.contentSidebar.activityFeed.taskNew.tasksFeedHeadlineApproval = {user} atribuiu uma Tarefa de aprovação
+# Comment headline for an approval task assigned to the current user
+be.contentSidebar.activityFeed.taskNew.tasksFeedHeadlineApprovalCurrentUser = {user} atribuiu a você uma Tarefa de aprovação
+# Comment headline for a general task
+be.contentSidebar.activityFeed.taskNew.tasksFeedHeadlineGeneral = {user} atribuiu uma Tarefa
+# Comment headline for a general task assigned to the current user
+be.contentSidebar.activityFeed.taskNew.tasksFeedHeadlineGeneralCurrentUser = {user} atribuiu a você uma Tarefa
+# Label for a task in progress
+be.contentSidebar.activityFeed.taskNew.tasksFeedInProgressLabel = Em progresso
+# Label for button to expand flyout to see all task assignees
+be.contentSidebar.activityFeed.taskNew.tasksFeedMoreAssigneesLabel = Ver todos os responsáveis
+# Reject option for an approval task
+be.contentSidebar.activityFeed.taskNew.tasksFeedRejectAction = Rejeitar
+# Label for a rejected task
+be.contentSidebar.activityFeed.taskNew.tasksFeedRejectedLabel = Rejeitada
+# Approved task status, where dateTime is a readable time like "Today at 2pm"
+be.contentSidebar.activityFeed.taskNew.tasksFeedStatusApproved = Aprovada {dateTime}
+# Completed task status, where dateTime is a readable time like "Today at 2pm"
+be.contentSidebar.activityFeed.taskNew.tasksFeedStatusCompleted = Concluída em {dateTime}
+# Label for the task status
+be.contentSidebar.activityFeed.taskNew.tasksFeedStatusLabel = Status: {taskStatus}
+# Rejected task status, where dateTime is a readable time like "Today at 2pm"
+be.contentSidebar.activityFeed.taskNew.tasksFeedStatusRejected = Rejeitada em {dateTime}
+# label for button that opens task popup
+be.contentSidebar.addTask = Adicionar tarefa
+# label for menu item that opens approval task popup
+be.contentSidebar.addTask.approval = Tarefa de aprovação
+# description for menu item that opens approval task popup
+be.contentSidebar.addTask.approval.description = Solicitar aprovação para avançar com o trabalho
+# title for approval task popup
+be.contentSidebar.addTask.approval.title = Criar uma tarefa de aprovação
+# label for menu item that opens general task popup
+be.contentSidebar.addTask.general = Tarefa geral
+# description for menu item that opens general task popup
+be.contentSidebar.addTask.general.description = Rastrear o trabalho que precisa ser feito
+# title for general task popup
+be.contentSidebar.addTask.general.title = Criar uma tarefa geral
+# title for when editing an existing approval task
+be.contentSidebar.editTask.approval.title = Modificar tarefa de aprovação
+# modal title for when editing an existing general task
+be.contentSidebar.editTask.general.title = Modificar tarefa geral
 # Label for copy action.
 be.copy = Copiar
 # Label for create action.
@@ -214,6 +320,8 @@ be.pointAnnotation = Modo de anotação de ponto
 be.preview = Visualizar
 # Error message when Preview fails due to the files call.
 be.previewError = A visualização não foi carregada. Atualize a página.
+# Error message when Preview fails due to the files call which is blocked by an access policy.
+be.previewErrorBlockedByPolicy = Your access is restricted due to the classification applied to this content.
 # Message when new preview is available.
 be.previewUpdate = Uma nova versão deste arquivo está disponível.
 # Previous file button title
@@ -228,8 +336,6 @@ be.priorCollaborator = Um ex-colaborador
 be.recentsBreadcrumb = Recentes
 # Message shown when there are no recent items.
 be.recentsState = Ainda não há itens recentes.
-# Title for x icon indicating someone rejected a task
-be.rejectedAssignment = Rejeitada
 # Label for reload button.
 be.reload = Recarregar
 # Label for remove action.
@@ -372,114 +478,6 @@ be.skillUnknownError = Ocorreu um erro ao executar esta habilidade ou ao obter e
 be.sort = Classificar
 # Label for status skill card in the preview sidebar
 be.statusSkill = Status
-# Title shown when an error occurs performing an action on a task
-be.taskActionErrorTitle = Erro
-# Approve option for a task
-be.taskApprove = Concluir
-# Error message when approving a task fails
-be.taskApproveErrorMessage = Ocorreu um erro ao aprovar esta tarefa. Atualize a página e tente novamente.
-# Error message when we failed to load the collaborators when user tries to edit a task
-be.taskCollaboratorLoadErrorMessage = Ocorreu um erro ao carregar colaboradores para esta tarefa. Tente novamente.
-# Error message when completing a task fails
-be.taskCompleteErrorMessage = Ocorreu um erro ao completar esta tarefa. Atualize a página e tente novamente.
-# Error message when a task creation fails
-be.taskCreateErrorMessage = Ocorreu um erro ao criar esta tarefa. Tente novamente.
-# Title shown above error message when a task creation fails
-be.taskCreateErrorTitle = Erro
-# Error message when a task deletion fails
-be.taskDeleteErrorMessage = Ocorreu um erro ao excluir esta tarefa. Atualize a página e tente novamente.
-# Text to show on menu item to delete task
-be.taskDeleteMenuItem = Excluir tarefa
-# Confirmation prompt text to delete task
-be.taskDeletePrompt = Tem certeza de que deseja excluir permanentemente este tarefa?
-# Due date for a task
-be.taskDueDate = Prazo
-# Error message when a task edit fails
-be.taskEditErrorMessage = Ocorreu um erro ao modificar esta tarefa. Tente novamente.
-# Text to show on menu item to edit task
-be.taskEditMenuItem = Modificar tarefa
-# Reject option for a task
-be.taskReject = Recusar
-# Error message when rejecting a task fails
-be.taskRejectErrorMessage = Ocorreu um erro ao rejeitar esta tarefa. Atualize a página e tente novamente.
-# Button name to hide task assignee list
-be.taskShowLessAssignees = Mostrar menos
-# Button name to expand task assignee list, additionalAssigneeCount is the number of additional task assignees that can be shown.
-be.taskShowMoreAssignees = Mostrar mais {additionalAssigneeCount}
-# Button name to expand task assignee list, when there is an unknown number of assignees beyond additionalAssigneeCount.
-be.taskShowMoreAssigneesOverflow = {additionalAssigneeCount, plural, one {Show #+ More} other {Show #+ More}}
-# label for button that opens task popup
-be.tasks.addTask = Adicionar tarefa
-# label for menu item that opens approval task popup
-be.tasks.addTask.approval = Tarefa de aprovação
-# description for menu item that opens approval task popup
-be.tasks.addTask.approval.description = Solicitar aprovação para avançar com o trabalho
-# label for menu item that opens general task popup
-be.tasks.addTask.general = Tarefa geral
-# description for menu item that opens general task popup
-be.tasks.addTask.general.description = Rastrear o trabalho que precisa ser feito
-# label for cancel button in create task popup
-be.tasks.addTaskForm.cancel = Cancelar
-# label for task create form due date input
-be.tasks.addTaskForm.dueDateLabel = Data de vencimento
-# label for task create form message input
-be.tasks.addTaskForm.messageLabel = Mensagem
-# label for task create form assignee input
-be.tasks.addTaskForm.selectAssigneesLabel = Selecionar responsáveis
-# label for create button in create task modal in create mode
-be.tasks.addTaskForm.submit = Criar
-# title for approval task popup
-be.tasks.createTask.approval.title = Criar uma tarefa de aprovação
-# title for general task popup
-be.tasks.createTask.general.title = Criar uma tarefa geral
-# title for when editing an existing approval task
-be.tasks.editTask.approval.title = Modificar tarefa de aprovação
-# modal title for when editing an existing general task
-be.tasks.editTask.general.title = Modificar tarefa geral
-# label for edit button in create task modal in edit mode
-be.tasks.editTaskForm.submit = Atualizar
-# Approve option for an approval task
-be.tasks.feed.approveAction = Aprovar
-# Label for an approved task
-be.tasks.feed.approvedLabel = Aprovada
-# Title for list of all task assignees
-be.tasks.feed.assigneeList.title = Responsáveis
-# Completion option for a general task
-be.tasks.feed.completeAction = Marcar como concluída
-# Label for a completed task
-be.tasks.feed.completedLabel = Concluída
-# Comment headline for an approval task
-be.tasks.feed.headline.approval = {user} atribuiu uma Tarefa de aprovação
-# Comment headline for an approval task assigned to the current user
-be.tasks.feed.headline.approval.currentUser = {user} atribuiu a você uma Tarefa de aprovação
-# Comment headline for a general task
-be.tasks.feed.headline.general = {user} atribuiu uma Tarefa
-# Comment headline for a general task assigned to the current user
-be.tasks.feed.headline.general.currentUser = {user} atribuiu a você uma Tarefa
-# Label for a task in progress
-be.tasks.feed.inProgressLabel = Em progresso
-# Label for button to expand flyout to see all task assignees
-be.tasks.feed.moreAssigneesLabel = Ver todos os responsáveis
-# Reject option for an approval task
-be.tasks.feed.rejectAction = Rejeitar
-# Label for a rejected task
-be.tasks.feed.rejectedLabel = Rejeitada
-# Label for the task status
-be.tasks.feed.statusLabel = Status: {taskStatus}
-# Approved task status, where dateTime is a readable time like "Today at 2pm"
-be.tasks.status.approved = Aprovada {dateTime}
-# Completed task status, where dateTime is a readable time like "Today at 2pm"
-be.tasks.status.completed = Concluída em {dateTime}
-# Task status when in progress
-be.tasks.status.inProgress = Aguardando
-# Task status when not started
-be.tasks.status.notStarted = Aguardando
-# Rejected task status, where dateTime is a readable time like "Today at 2pm"
-be.tasks.status.rejected = Rejeitada em {dateTime}
-# Label and date for task due date
-be.tasks.taskDueDate = Vencimento: {date}
-# Tasks for approval
-be.tasksForApproval = Tarefas
 # Shown instead of todays date.
 be.today = hoje
 # Label for keywords/topics skill section in the preview sidebar
